BAMPFA-135 converted charset to UTF8 for all jspf files

--- a/WebContent/include/browsedirAlist.jspf
+++ b/WebContent/include/browsedirAlist.jspf
@@ -9,12 +9,12 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person706'>Abasize, Dodo</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person852'>AllÈgret, Marc</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person852'>All√©gret, Marc</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person30012'>Arato, Genjiro</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person25233'>Abbasov, Shukhrat</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person853'>AllÈgret, Yves</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person853'>All√©gret, Yves</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person1009'>Arau, Alfonso</a></td>
       </tr>
       <tr>
@@ -43,13 +43,13 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person26422'>Archambault, Noel</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person12937'>≈berg, Lasse</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12937'>√Öberg, Lasse</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person35'>Allen, Woody</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person21149'>Arden, Jane</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person14559'>Abou El Nasr, Hicham</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person866'>Allio, RenÈ</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person866'>Allio, Ren√©</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person1018'>Ardolino, Emile</a></td>
       </tr>
       <tr>
@@ -64,7 +64,7 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person26610'>Abraham, Harry</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person873'>AlmodÛvar, Pedro</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person873'>Almod√≥var, Pedro</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person1035'>Arliss, Leslie</a></td>
       </tr>
       <tr>
@@ -89,7 +89,7 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person727'>Abruzzese, Alberto</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person880'>Altorjay, G·bor</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person880'>Altorjay, G√°bor</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person27710'>Arnold, Jennifer</a></td>
       </tr>
       <tr>
@@ -99,7 +99,7 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person729'>Abulaze, Tengiz</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person885'>¡lvarez, Santiago</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person885'>√Ålvarez, Santiago</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person17490'>Arnshtam, Lev Oscarovish</a></td>
       </tr>
       <tr>
@@ -124,12 +124,12 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person746'>Acosta, Ivan</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person888'>AmÈris, Jean-Pierre</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person888'>Am√©ris, Jean-Pierre</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person1071'>Asanova, Dinara</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person34318'>Adair, Nancy</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person902'>Amiguet, Jean-FranÁois</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person902'>Amiguet, Jean-Fran√ßois</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person13461'>Ascher, Steven</a></td>
       </tr>
       <tr>
@@ -153,7 +153,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person1077'>Ashley, Ray</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person24611'>af H‰llstrˆm, Roland</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person24611'>af H√§llstr√∂m, Roland</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person19303'>Amoruso, Marino</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person20304'>Ashton, Marie</a></td>
       </tr>
@@ -223,7 +223,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person17463'>Auer, John H.</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person816'>AlarcÛn, Sebasti·n</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person816'>Alarc√≥n, Sebasti√°n</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person954'>Angelo, Yves</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person1116'>Aust, Stefan</a></td>
       </tr>
@@ -249,7 +249,7 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person24155'>Aldo</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person30200'>AntØun, SinØan</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person30200'>Ant¬Øun, Sin¬Øan</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person1130'>Avati, Pupi</a></td>
       </tr>
       <tr>
@@ -258,7 +258,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person30486'>Avelino, Aric</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person827'>Alea, Tom·s GutiÈrrez</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person827'>Alea, Tom√°s Guti√©rrez</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person29517'>Anton, Edoardo</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person1134'>Averback, Hy</a></td>
       </tr>
