--- a/WebContent/include/browsedirBlist.jspf
+++ b/WebContent/include/browsedirBlist.jspf
@@ -48,9 +48,9 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person14955'>Botes, Costa</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person1199'>Bacsó, Péter</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person1199'>BacsÃ³, PÃ©ter</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person1609'>Bernard, Raymond</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person13452'>Bottía, Luis Fernando</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person13452'>BottÃ­a, Luis Fernando</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person23813'>Bademsoy, Aysun</a></td>
@@ -95,7 +95,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person17003'>Baillie, Bruce</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person19216'>Bertini, Antonio</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person1964'>Boutang, Pierre-André</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person1964'>Boutang, Pierre-AndrÃ©</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person13099'>Bailly, Jean-pierre</a></td>
@@ -144,7 +144,7 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person1256'>Baldi, Gian Vittorio</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person1661'>Bezerra, Octávio</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person1661'>Bezerra, OctÃ¡vio</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person2010'>Bragaglia, Carlo Ludovico</a></td>
       </tr>
       <tr>
@@ -189,7 +189,7 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person1277'>Bando, Tamasaburo</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person7369'>Bigas Luna, José Juan</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person7369'>Bigas Luna, JosÃ© Juan</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person27071'>Bray, Kevin</a></td>
       </tr>
       <tr>
@@ -213,7 +213,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person2054'>Breien, Anja</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person1311'>Baril, Céline</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person1311'>Baril, CÃ©line</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person23642'>Billon, Yves</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person2055'>Breillat, Catherine</a></td>
       </tr>
@@ -235,7 +235,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person1336'>Barreto, Bruno</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person24595'>Birdwell, Russell</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person38'>Bressane, Júlio</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person38'>Bressane, JÃºlio</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person15322'>Barrett, Shirley</a></td>
@@ -270,7 +270,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person1354'>Bartas, Sarunas</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person24845'>Bizzio, Sergio</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person2091'>Brizzi, Gaëtan</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person2091'>Brizzi, GaÃ«tan</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person23023'>Bartlett, Renny</a></td>
@@ -278,14 +278,14 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person2092'>Brizzi, Paul</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person1360'>Bartolomé, Cecilia</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person1728'>Björkman, Stig</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person1360'>BartolomÃ©, Cecilia</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person1728'>BjÃ¶rkman, Stig</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person2102'>Brody, Hugh</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person1361'>Bartolomé, José Juan</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person19518'>Blaché, Herbert</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person29133'>Bromberger, Hervé</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person1361'>BartolomÃ©, JosÃ© Juan</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person19518'>BlachÃ©, Herbert</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person29133'>Bromberger, HervÃ©</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person13149'>Barton, Charles T.</a></td>
@@ -318,13 +318,13 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person2113'>Brookner, Howard</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person1396'>Bauer, Tristán</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person1396'>Bauer, TristÃ¡n</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person1742'>Blaier, Andrei</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person2114'>Brooks, Adam</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person1399'>Bauman, Susanne</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person1743'>Blain, Gérard</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person1743'>Blain, GÃ©rard</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person2115'>Brooks, Albert</a></td>
       </tr>
       <tr>
@@ -460,12 +460,12 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person25650'>Belle, David</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person1810'>Bodrov, Sergei</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person16382'>Buñuel, Juan Luis</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person16382'>BuÃ±uel, Juan Luis</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person1490'>Bellinelli, Matteo</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person1171'>Bódy, Gábor</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person2174'>Buñuel, Luis</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person1171'>BÃ³dy, GÃ¡bor</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person2174'>BuÃ±uel, Luis</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person1494'>Bellocchio, Marco</a></td>
@@ -485,7 +485,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person1501'>Belvaux, Lucas</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person29660'>Boihem, Harold</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person2226'>Burle, José Carlos</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person2226'>Burle, JosÃ© Carlos</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person26742'>Ben Ammar, Abdellatif</a></td>
@@ -494,12 +494,12 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person13037'>Ben Salama, Mohand</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person1848'>Bolaños, José</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person1848'>BolaÃ±os, JosÃ©</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person26784'>Burmawalla, Mastan Alibhai</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person1284'>Ben-Barka, Souheil</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person20048'>Böll, Heinrich</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person20048'>BÃ¶ll, Heinrich</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person2230'>Burnett, Charles</a></td>
       </tr>
       <tr>
@@ -528,7 +528,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person14218'>Burns, Tim</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person13640'>Benhamou, Gérard Myriam</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person13640'>Benhamou, GÃ©rard Myriam</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person1860'>Bompard, Barthelemy</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person2237'>Burroughs, Jackie</a></td>
       </tr>
@@ -553,7 +553,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person26417'>Burton, Nick</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person1543'>Benoit-Lévy, Jean</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person1543'>Benoit-LÃ©vy, Jean</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person22512'>Bonfanti, Giovanni</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person2244'>Burton, Tim</a></td>
       </tr>
@@ -594,7 +594,7 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person1569'>Berger, Lisa</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person1895'>Borau, José Luis</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person1895'>Borau, JosÃ© Luis</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person14176'>Byima, Oleg</a></td>
       </tr>
       <tr>
