--- a/WebContent/include/browsedirClist.jspf
+++ b/WebContent/include/browsedirClist.jspf
@@ -23,7 +23,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person20454'>Collingwood, Tony</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person22144'>CaffÈ, Eliane</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person22144'>Caff√©, Eliane</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person2579'>Chaplin, Charlie</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person2850'>Collins, Boon</a></td>
       </tr>
@@ -58,8 +58,8 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person22218'>Combe, Georges</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person23187'>CakÛ, Ferenc</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person2536'>Ch·varri, Jaime</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person23187'>Cak√≥, Ferenc</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person2536'>Ch√°varri, Jaime</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person2861'>Comencini, Francesca</a></td>
       </tr>
       <tr>
@@ -80,7 +80,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person14824'>Camarca, Claudio</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person2621'>Chen Bai,</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person2869'>CompanÈez, Nina</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person2869'>Compan√©ez, Nina</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person30032'>Cambis, Tahir</a></td>
@@ -113,13 +113,13 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person2894'>Converse, Elizabeth</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person2340'>Campanella, Juan JosÈ</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person2340'>Campanella, Juan Jos√©</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person2627'>Chenzira, Ayoka</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person20155'>Conway, Cece</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person2341'>Campanile, Pasquale Festa</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person2539'>ChÈreau, Patrice</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person2539'>Ch√©reau, Patrice</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person2897'>Conway, Jack</a></td>
       </tr>
       <tr>
@@ -188,7 +188,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person19867'>Corley, David L.</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person2393'>Carax, LÈos</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person2393'>Carax, L√©os</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person2667'>Chomsky, Marvin J.</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person457'>Corman, Roger</a></td>
       </tr>
@@ -238,7 +238,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person2943'>Corrente, Michael</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person2419'>CarnÈ, Marcel</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person2419'>Carn√©, Marcel</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person15961'>Chudnow, Byron</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person2960'>Costa, Pedro</a></td>
       </tr>
@@ -269,22 +269,22 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person2434'>Carradine, David</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person2706'>Chytilov·, Vera</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person2974'>Courant, GÈrard</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person2706'>Chytilov√°, Vera</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person2974'>Courant, G√©rard</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person2428'>CarrÈ, Jean-Michel</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person2428'>Carr√©, Jean-Michel</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person25557'>Ciampi, Yves</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person13716'>Courchesne, Luc</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person2436'>Carreras, Enrique</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person2717'>Cimino, Michael</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person14792'>CourriËre, Yves</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person14792'>Courri√®re, Yves</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person16192'>Carson, L. M. Kit</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person2723'>CissÈ, Souleymane</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person2723'>Ciss√©, Souleymane</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person2976'>Courtois, Miguel</a></td>
       </tr>
       <tr>
@@ -303,13 +303,13 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person28651'>Coutts, Don</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person2465'>Casaus, VÌctor</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person2465'>Casaus, V√≠ctor</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person20452'>Claerhout, Paul</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person2981'>CouturiÈ, Bill</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person2981'>Couturi√©, Bill</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person2472'>Caslor, Brad</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person2737'>Clair, RenÈ</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person2737'>Clair, Ren√©</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person18905'>Covacevich, Alvaro J.</a></td>
       </tr>
       <tr>
@@ -369,7 +369,7 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person2495'>Castri, Marco di</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person2731'>ClÈment, RenÈ</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person2731'>Cl√©ment, Ren√©</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person15309'>Croghan, Emma-Kate</a></td>
       </tr>
       <tr>
@@ -378,7 +378,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person3011'>Croitoru, Alecu G.</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person2499'>Castro, VÌctor Manuel</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person2499'>Castro, V√≠ctor Manuel</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person2774'>Cleven, Harry</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person3014'>Cromwell, John</a></td>
       </tr>
@@ -403,7 +403,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person20436'>Cruikshank, Sally</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person2517'>Cayatte, AndrÈ</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person2517'>Cayatte, Andr√©</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person16152'>Clouzot, Henri-Georges</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person3025'>Cruze, James</a></td>
       </tr>
@@ -415,7 +415,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person18895'>Cazny, Tamas</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person22189'>Coatsworth, Josephine</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person3030'>CuarÛn, Alfonso</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3030'>Cuar√≥n, Alfonso</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person19686'>Cenevski, Kiril</a></td>
@@ -423,9 +423,9 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person27060'>Cuche, Nicolas</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person32422'>Cerd‡, Nacho</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person32422'>Cerd√†, Nacho</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person2791'>Cochran, Stacy</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person3035'>Cuerda, JosÈ Luis</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3035'>Cuerda, Jos√© Luis</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person29178'>Cerio, Ferruccio</a></td>
@@ -449,7 +449,7 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person2545'>Chahine, Youssef</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person26049'>Cohen, BenoÓt</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person26049'>Cohen, Beno√Æt</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person17122'>Curtis-Hall, Vondie</a></td>
       </tr>
       <tr>
@@ -460,7 +460,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person21873'>Champavert, Georges</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person2807'>Cohen, Larry</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person3069'>CussÛ-Ferrer, Manuel</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3069'>Cuss√≥-Ferrer, Manuel</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person20398'>Champion, Claude</a></td>
@@ -484,7 +484,7 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person24700'>Chan, Teddy</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person2817'>Cohl, …mile</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person2817'>Cohl, √âmile</a></td>
         <td></td>
       </tr>
     </table>
