--- a/WebContent/include/browsedirDlist.jspf
+++ b/WebContent/include/browsedirDlist.jspf
@@ -33,7 +33,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person3460'>Donev, Donio</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person30510'>Daëron, Michel</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person30510'>DaÃ«ron, Michel</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person16231'>de Vries, Sonja</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person3462'>Dong, Arthur E.</a></td>
       </tr>
@@ -55,7 +55,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person28820'>Dallamano, Massimo</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person15516'>Deardon, Basil</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person3468'>Donner, Jörn</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3468'>Donner, JÃ¶rn</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person3127'>Dalva, Robert</a></td>
@@ -105,7 +105,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person3153'>Danniel, Danniel</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person29654'>Delepine, Benoit</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person3088'>Dörrie, Doris</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3088'>DÃ¶rrie, Doris</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person14235'>Dante, Dominique</a></td>
@@ -124,12 +124,12 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person20896'>Darling, Todd</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person13682'>Delubac, Yves André</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person13682'>Delubac, Yves AndrÃ©</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person3502'>Douchet, Jean</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person25009'>Darnborough, Antony</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person6'>Delvaux, André</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person6'>Delvaux, AndrÃ©</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person3503'>Doueb, Tam-Sir</a></td>
       </tr>
       <tr>
@@ -210,7 +210,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person28861'>Davis, Billy</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person10856'>DeSimone, Tom</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person3523'>Dréville, Jean</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3523'>DrÃ©ville, Jean</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person29954'>Davis, Celesta</a></td>
@@ -268,7 +268,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person3579'>Duchamp, Marcel</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person26436'>de Armiñán, Jaime</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person26436'>de ArmiÃ±Ã¡n, Jaime</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person3366'>Diamand, Frank</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person3580'>Duchemin, Remy</a></td>
       </tr>
@@ -295,7 +295,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person1885'>de Bont, Jan</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person24031'>Dickinson, Thorold</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person3599'>Duhour, Clément</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3599'>Duhour, ClÃ©ment</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person2096'>de Broca, Philippe</a></td>
@@ -319,7 +319,7 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person20654'>De Cordova, Frederick</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person3391'>Diéz, Ana</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3391'>DiÃ©z, Ana</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person33086'>Dunn, Marlene</a></td>
       </tr>
       <tr>
@@ -335,7 +335,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person31003'>De Filippo, Eduardo</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person3403'>Ding, Loni</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person3623'>Dupont, Ewald André</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3623'>Dupont, Ewald AndrÃ©</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person21915'>de Fuentes, Fernando</a></td>
@@ -349,7 +349,7 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person5271'>de Heer, Rolf</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person7579'>Diop Mambéty, Djibril</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person7579'>Diop MambÃ©ty, Djibril</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person3633'>Duras, Marguerite</a></td>
       </tr>
       <tr>
@@ -363,12 +363,12 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person15408'>Dutton, Charles S.</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person25815'>de La Patellière, Denys</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person25815'>de La PatelliÃ¨re, Denys</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person14863'>Djordjadze, Nana</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person3646'>Duval, Daniel</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person11711'>De La Torre, Raúl</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person11711'>De La Torre, RaÃºl</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person3426'>Djordjevic, Aleksandar</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person3647'>Duvall, Robert</a></td>
       </tr>
