--- a/WebContent/include/browsedirElist.jspf
+++ b/WebContent/include/browsedirElist.jspf
@@ -15,17 +15,17 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person15487'>Eastman, Charles</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person15127'>Ellis, David R.</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person3805'>Erdöss, Pál</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3805'>ErdÃ¶ss, PÃ¡l</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person3676'>Eastwood, Clint</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person29834'>Elon, Danae</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person26407'>Erebara, Gëzim</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person26407'>Erebara, GÃ«zim</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person3685'>Echeverria, Diego</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person29699'>Elorrieta, José María</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person3807'>Erice, Víctor</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person29699'>Elorrieta, JosÃ© MarÃ­a</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3807'>Erice, VÃ­ctor</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person3687'>Edelstein, Simon</a></td>
@@ -85,7 +85,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person3711'>Egoyan, Atom</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person3790'>Enquist, Magnus</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person3853'>Étaix, Pierre</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3853'>Ã‰taix, Pierre</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person20453'>Ehrlich, David</a></td>
