--- a/WebContent/include/browsedirFlist.jspf
+++ b/WebContent/include/browsedirFlist.jspf
@@ -8,7 +8,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person32515'>Frakes, Jonathan</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person3877'>Fábri, Zoltán</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3877'>FÃ¡bri, ZoltÃ¡n</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person4046'>Filippelli, Rafael</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person28584'>France, Lisa</a></td>
       </tr>
@@ -48,9 +48,9 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person30356'>Franco, James</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person20632'>Färberböck, Max</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person20632'>FÃ¤rberbÃ¶ck, Max</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person4070'>Firstenberg, Sam</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person4213'>Franco, Jesús</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person4213'>Franco, JesÃºs</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person19828'>Fardjad, Hamid</a></td>
@@ -58,7 +58,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person4217'>Francovich, Allan</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person3918'>Farges, Joël</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3918'>Farges, JoÃ«l</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person4080'>Fischler, Steven</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person4221'>Frank, Christopher</a></td>
       </tr>
@@ -93,7 +93,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person4230'>Frankenheimer, John</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person3939'>Farwagi, André</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3939'>Farwagi, AndrÃ©</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person25342'>Fleck, Fred</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person4232'>Franklin, Carl</a></td>
       </tr>
@@ -108,7 +108,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person4235'>Franklin, Sidney</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person3947'>Faver, Héctor</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3947'>Faver, HÃ©ctor</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person4111'>Flemyng, Gordon</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person21311'>Frasconi, Pablo</a></td>
       </tr>
@@ -148,7 +148,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person4249'>Freeland, Thornton</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person29099'>Félix, Louis</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person29099'>FÃ©lix, Louis</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person12902'>Fong, Allen</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person33304'>Fremont, Shelly Dunn</a></td>
       </tr>
@@ -178,9 +178,9 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person4271'>Fridman, Victor</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person3880'>Feret, René</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person23006'>Fonteyne, Frédéric</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person4272'>Fridriksson, Fridrik Thór</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3880'>Feret, RenÃ©</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person23006'>Fonteyne, FrÃ©dÃ©ric</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person4272'>Fridriksson, Fridrik ThÃ³r</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person3991'>Ferguson, Norman</a></td>
@@ -188,8 +188,8 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person4276'>Friedel, Frederick R.</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person13139'>Fernández, Emilio</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person4147'>Forcier, André</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person13139'>FernÃ¡ndez, Emilio</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person4147'>Forcier, AndrÃ©</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person13897'>Friedenberg, Richard</a></td>
       </tr>
       <tr>
@@ -204,7 +204,7 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person4001'>Ferrara, Abel</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person4156'>Forgács, Péter</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person4156'>ForgÃ¡cs, PÃ©ter</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person4296'>Frizzell, John</a></td>
       </tr>
       <tr>
@@ -220,7 +220,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person27907'>Ferraro, Gayle</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person4160'>Forman, Milos</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person4300'>Frot-Coutaz, Gérard</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person4300'>Frot-Coutaz, GÃ©rard</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person32936'>Ferraz, Vicente</a></td>
@@ -273,7 +273,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person4316'>Fuller, Samuel</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person13617'>Fieschi, Jean-André</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person13617'>Fieschi, Jean-AndrÃ©</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person23263'>Fox, Wallace</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person29897'>Fuqua, Antoine</a></td>
       </tr>
