--- a/WebContent/include/browsedirGlist.jspf
+++ b/WebContent/include/browsedirGlist.jspf
@@ -10,10 +10,10 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person16447'>Gabel, Shainee</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person13150'>Girdler, William</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person4816'>Graser, Jˆrg</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person4816'>Graser, J√∂rg</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person4329'>G·bor, P·l</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person4329'>G√°bor, P√°l</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person4619'>Girod, Francis</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person4822'>Grau, Jorge</a></td>
       </tr>
@@ -28,7 +28,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person14171'>Gray, Donna</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person27405'>GagnÈ, Jeannine</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person27405'>Gagn√©, Jeannine</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person4622'>Gitai, Amos</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person4830'>Gray, Mike</a></td>
       </tr>
@@ -69,7 +69,7 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person22389'>Gang, Pierre</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person26166'>Gˆbl, Pavel</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person26166'>G√∂bl, Pavel</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person26463'>Greene, Kelly</a></td>
       </tr>
       <tr>
@@ -78,18 +78,18 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person4849'>Greene, Sergio Olhovich</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person4425'>Garci, JosÈ LuÌs</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person4425'>Garci, Jos√© Lu√≠s</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person23904'>Godfrey, Peter</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person4850'>Greene, Sparky</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person3839'>GarcÌa Espinosa, Julio</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3839'>Garc√≠a Espinosa, Julio</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person4664'>Godmilow, Jill</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person28604'>Greenebaum, Elliot</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person316'>Gardin, Vladimir Rostislavovich</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person20996'>GoÎl, VÈronique</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person20996'>Go√´l, V√©ronique</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person4851'>Greenfield, Amy</a></td>
       </tr>
       <tr>
@@ -98,7 +98,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person24847'>Greenfield, Luke</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person25243'>G·rdos, …va</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person25243'>G√°rdos, √âva</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person4674'>Gold, Jack</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person33303'>Greenfield-Sanders, Timothy</a></td>
       </tr>
@@ -115,7 +115,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person4442'>Garrel, Philippe</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person24370'>Goldblatt, Moisei</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person4784'>GrÈmillon, Jean</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person4784'>Gr√©millon, Jean</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person23383'>Garrett, Otis</a></td>
@@ -125,7 +125,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person16021'>Gartner, James</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person14597'>Goldin, Laurence A.</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person4785'>GrÈville, Edmond T.</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person4785'>Gr√©ville, Edmond T.</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person21500'>Gasnier, Louis J.</a></td>
@@ -138,7 +138,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person4882'>Griffin, George</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person14180'>GavaldÛn, Roberto</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person14180'>Gavald√≥n, Roberto</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person16913'>Goldman, Peter</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person58'>Griffith, D. W.</a></td>
       </tr>
@@ -169,7 +169,7 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person4479'>Gazdag, Gyula</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person4344'>GÛmez, Sara</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person4344'>G√≥mez, Sara</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person4898'>Grillo, Gary</a></td>
       </tr>
       <tr>
@@ -189,8 +189,8 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person20431'>Gelev, Sotir</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person29367'>Gonz·lez, Servando</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person18646'>Grisel, JosÈ</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person29367'>Gonz√°lez, Servando</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person18646'>Grisel, Jos√©</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person4494'>Geller, Daniel</a></td>
@@ -205,12 +205,12 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person15805'>Gentilomo, Giacomo</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person29935'>Goodman, Sarah</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person4786'>Grˆning, Philip</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person4786'>Gr√∂ning, Philip</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person28578'>George, George W.</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person24993'>Goossens, Ray</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person4787'>Grˆnros, Anders</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person4787'>Gr√∂nros, Anders</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person25764'>Georgiadis, Vassilis</a></td>
@@ -249,7 +249,7 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person20156'>Gerrard, Alice</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person4346'>Gˆren, Serif</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person4346'>G√∂ren, Serif</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person22476'>Guareschi, Giovanni</a></td>
       </tr>
       <tr>
@@ -270,12 +270,12 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person30250'>Gessner, Peter</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person4756'>Gorris, Marleen</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person4950'>GuÈdiguian, Robert</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person4950'>Gu√©diguian, Robert</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person4537'>Ghatak, Ritwik</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person4758'>Gosha, Hideo</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person4952'>GuerÌn, JosÈ Luis</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person4952'>Guer√≠n, Jos√© Luis</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person4540'>Ghose, Goutam</a></td>
@@ -289,7 +289,7 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person30218'>Ghosh, Shashanka</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person4761'>Goth·r, PÈter</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person4761'>Goth√°r, P√©ter</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person19218'>Guerrero, Ed</a></td>
       </tr>
       <tr>
@@ -313,19 +313,19 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person23843'>Guiol, Fred</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person4565'>Gieling, RamÛn</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person4565'>Gieling, Ram√≥n</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person4771'>Goulding, Edmund</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person4978'>Guitry, Sacha</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person30459'>Gilbert, Josh</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person4775'>Goupil, Romain</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person4350'>G¸ney, Yilmaz</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person4350'>G√ºney, Yilmaz</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person4579'>Gilbert, Lewis</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person16446'>Goursaud, Anne</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person30127'>GunnarsdÛttir, Hrafnhildur</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person30127'>Gunnarsd√≥ttir, Hrafnhildur</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person4585'>Gill, David</a></td>
@@ -335,7 +335,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person4587'>Gilles, Guy</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person4778'>Govenar, Alan</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person4947'>Guodmundsson, ¡g˙st</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person4947'>Guodmundsson, √Åg√∫st</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person4589'>Gilliam, Terry</a></td>
@@ -363,9 +363,9 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person5011'>Gutman, Amos</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person4606'>Giovanni, JosÈ</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person4606'>Giovanni, Jos√©</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person29762'>Gras, Enrico</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person5016'>Guzm·n, Patricio</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5016'>Guzm√°n, Patricio</a></td>
       </tr>
     </table>
   </div>
