--- a/WebContent/include/browsedirHlist.jspf
+++ b/WebContent/include/browsedirHlist.jspf
@@ -40,7 +40,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person29769'>Haesaerts, Paul</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person5272'>Heffner, Avraham</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person12900'>Höllinger, Waltraud</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12900'>HÃ¶llinger, Waltraud</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person29876'>Haghighi, Mani</a></td>
@@ -48,14 +48,14 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person14257'>Holmberg, Kalle</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person29066'>Haguet, André</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person29066'>Haguet, AndrÃ©</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person5276'>Hein, Birgit</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person24190'>Homeier, Skip</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person5071'>Hahn, Gerhard</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person19829'>Heinrich, André</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person14542'>Honda, Ishirô</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person19829'>Heinrich, AndrÃ©</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person14542'>Honda, IshirÃ´</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person16448'>Hahn, Kristin</a></td>
@@ -103,8 +103,8 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person19362'>Horne, James W.</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person5098'>Hallström, Lasse</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person5335'>Hernández, Bernabé</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5098'>HallstrÃ¶m, Lasse</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5335'>HernÃ¡ndez, BernabÃ©</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person5541'>Horton, Peter</a></td>
       </tr>
       <tr>
@@ -114,12 +114,12 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person28426'>Hamilton, Doug</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person17707'>Héroux, Denis</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person17707'>HÃ©roux, Denis</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person5579'>Hou Hsiao-Hsien</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person5118'>Hammid, Alexander</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person5338'>Herré, Henri</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5338'>HerrÃ©, Henri</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person5552'>Hough, John</a></td>
       </tr>
       <tr>
@@ -205,7 +205,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person5162'>Harel, Pierre</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person33306'>Highberger, Craig</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person5037'>Hübner, Christoph</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5037'>HÃ¼bner, Christoph</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person5169'>Harlin, Renny</a></td>
@@ -335,7 +335,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person5225'>Hathaway, Henry</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person5456'>Hoffman, Michael</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person5648'>Huszárik, Zoltán</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5648'>HuszÃ¡rik, ZoltÃ¡n</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person5228'>Hatton, Maurice</a></td>
@@ -348,7 +348,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person14220'>Hylin, Mikael</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person5245'>Hayashi, Kaizô</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5245'>Hayashi, KaizÃ´</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person5463'>Hoffs, Tamar Simon</a></td>
         <td></td>
       </tr>
