--- a/WebContent/include/browsedirIlist.jspf
+++ b/WebContent/include/browsedirIlist.jspf
@@ -54,7 +54,7 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person5689'>Imamura, Shohei</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person27855'>Ishihara, ShintarÙ</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person27855'>Ishihara, Shintar√¥</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person22053'>Iwai, Shunji</a></td>
       </tr>
       <tr>
@@ -63,7 +63,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person5763'>Iyer, G. V.</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person23934'>IÒ·rritu, Alejandro Gonz·les</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person23934'>I√±√°rritu, Alejandro Gonz√°les</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person5728'>Ishii, Takashi</a></td>
         <td></td>
       </tr>
