--- a/WebContent/include/browsedirKlist.jspf
+++ b/WebContent/include/browsedirKlist.jspf
@@ -8,7 +8,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person6519'>Kolker, Andrew</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person6080'>KaborÈ, Gaston</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person6080'>Kabor√©, Gaston</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person23660'>Kenton, Erle C.</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person217'>Komarov, S. V.</a></td>
       </tr>
@@ -23,7 +23,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person6535'>Konchalovsky, Andrei</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person6089'>Kad·r, J·n</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person6089'>Kad√°r, J√°n</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person6321'>Kermadec, Liliane de</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person21990'>Kondo, Yoshifumi</a></td>
       </tr>
@@ -38,9 +38,9 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person6538'>Konermann, Lutz</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person6094'>Kahn, CÈdric</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person6094'>Kahn, C√©dric</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person6326'>Kershner, Irvin</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person6068'>Kˆnigstein, Horst</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person6068'>K√∂nigstein, Horst</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person6095'>Kahn, Jeff</a></td>
@@ -58,13 +58,13 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person26622'>Kopalin, Ilya</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person28337'>Kalm·r, L·szlÛ</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person28337'>Kalm√°r, L√°szl√≥</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person15298'>Keymeulen, Jan</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person30223'>Kopeikin, Nikolai</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person27921'>Kam, Andrew</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person6064'>KÈzdi-Kov·cs, Zsolt</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person6064'>K√©zdi-Kov√°cs, Zsolt</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person6553'>Kopple, Barbara</a></td>
       </tr>
       <tr>
@@ -78,7 +78,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person6558'>Korber, Serge</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person6124'>Kamondi, Zolt·n</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person6124'>Kamondi, Zolt√°n</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person16220'>Khan, Sartaj</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person6559'>Korda, Alexander</a></td>
       </tr>
@@ -134,7 +134,7 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person25527'>Kaplan, Natalie</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person6365'>KiÈslowski, Krzysztof</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person6365'>Ki√©slowski, Krzysztof</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person6586'>Kotler, Oded</a></td>
       </tr>
       <tr>
@@ -150,7 +150,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person13115'>Kapoor, Raj</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person27400'>Kim Gok</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person6592'>Koutsk˝, Pavel</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person6592'>Koutsk√Ω, Pavel</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person20457'>Karaev, Alexei</a></td>
@@ -200,7 +200,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person6198'>Kasdan, Lawrence</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person6386'>King, Henry</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person6646'>KrejcÌk, JirÌ</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person6646'>Krejc√≠k, Jir√≠</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person6202'>Kassila, Matti</a></td>
@@ -268,24 +268,24 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person16042'>Ktari, Naceur</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person6234'>Kaurism‰ki, Aki</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person6432'>Klapisch, CÈdric</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person6234'>Kaurism√§ki, Aki</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person6432'>Klapisch, C√©dric</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person6681'>Kubrick, Stanley</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person6235'>Kaurism‰ki, Mika</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person6235'>Kaurism√§ki, Mika</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person69'>Klein, William</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person33309'>Kudl·cek, Martina</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person33309'>Kudl√°cek, Martina</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person6063'>K‰utner, Helmut</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person6063'>K√§utner, Helmut</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person13712'>Kleine, Cindy</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person6695'>Kuhn, Rodolfo</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person6240'>Kavcic, Jane</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person21984'>Kleinman, Daniel</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person6070'>K¸hn, Siegfried</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person6070'>K√ºhn, Siegfried</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person6244'>Kawalerowicz, Jerzy</a></td>
@@ -338,7 +338,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person6714'>Kurahara, Koreyoshi</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person6266'>KÈbadian, Jacques</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person6266'>K√©badian, Jacques</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person6469'>Knecht, John</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person25959'>Kurikhin, Nikita</a></td>
       </tr>
@@ -373,7 +373,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person6732'>Kutz, Kazimierz</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person24915'>Keleti, M·rton</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person24915'>Keleti, M√°rton</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person30133'>Kochanov, Roman</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person14311'>Kvapil, Jaroslav</a></td>
       </tr>
