--- a/WebContent/include/browsedirLlist.jspf
+++ b/WebContent/include/browsedirLlist.jspf
@@ -13,7 +13,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person7179'>Limosin, Jean-Pierre</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person6778'>Labarthe, André</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person6778'>Labarthe, AndrÃ©</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person21442'>Lee Bun Sun</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person14894'>Lin Cheng-Sheng</a></td>
       </tr>
@@ -40,7 +40,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person29896'>Lacy, Susan</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person15146'>Lee Min-Yong</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person7192'>Lindman, Åke</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person7192'>Lindman, Ã…ke</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person22192'>Lafando, R. A.</a></td>
@@ -50,7 +50,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person6809'>Lagestee, Martin</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person6984'>Lee, Ang</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person22059'>Lindström, Fredrik</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person22059'>LindstrÃ¶m, Fredrik</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person16059'>Lahlou, Nabyl</a></td>
@@ -78,12 +78,12 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person18897'>Lipsett, Arthur</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person26537'>Laliberté, Roger</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person26537'>LalibertÃ©, Roger</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person26296'>Lee, Iara</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person23894'>Lipsey, Arnie</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person6830'>Laloux, René</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person6830'>Laloux, RenÃ©</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person22659'>Lee, Jack</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person7217'>Lipsky, Oldrich</a></td>
       </tr>
@@ -105,11 +105,11 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person28975'>Lamas, Fernando</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person29628'>Lefranc, Guy</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person7229'>Littín, Miguel</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person7229'>LittÃ­n, Miguel</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person16299'>Lambert, Gavin</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person6761'>Léger, Fernand</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person6761'>LÃ©ger, Fernand</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person7230'>Little, Dwight H.</a></td>
       </tr>
       <tr>
@@ -200,7 +200,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person6874'>Lang, Rocky</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person29734'>Lelong, Christian</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person3111'>Lönnbro, Anders</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person3111'>LÃ¶nnbro, Anders</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person6875'>Lang, Walter</a></td>
@@ -210,7 +210,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person29495'>Langley, Noel</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person7045'>Lely, Noshka van der</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person23870'>López-Linares, José Luis</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person23870'>LÃ³pez-Linares, JosÃ© Luis</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person15270'>Laplaine, Jose</a></td>
@@ -255,7 +255,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person6918'>Lasseter, John</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person16826'>Lerner, Irving</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person7324'>Louvin, Gérard</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person7324'>Louvin, GÃ©rard</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person6919'>Lathan, Stan</a></td>
@@ -275,7 +275,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person29701'>Laughlin, Tom</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person16977'>Lerski, Helmar</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person7340'>Lozano, José Luis</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person7340'>Lozano, JosÃ© Luis</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person6930'>Launder, Frank</a></td>
@@ -288,7 +288,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person12599'>Lu Xiaoya</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person23265'>Laurié, Eugène</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person23265'>LauriÃ©, EugÃ¨ne</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person24445'>Lessa, Bia</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person7343'>Lubin, Arthur</a></td>
       </tr>
@@ -335,7 +335,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person27199'>Lazzaretti, Fabrizio</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person7123'>Levinson, Barry</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person30472'>Lund, Kátia</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person30472'>Lund, KÃ¡tia</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person23297'>Le Borg, Reginald</a></td>
@@ -348,7 +348,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person7379'>Lupino, Ida</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person10095'>Le Roux, Hervé</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person10095'>Le Roux, HervÃ©</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person7137'>Lewin, Albert</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person7382'>Luret, Jean</a></td>
       </tr>
@@ -403,7 +403,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person27676'>Lyubshin, Stanislav</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person6981'>Leduc, André</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person6981'>Leduc, AndrÃ©</a></td>
         <td></td>
         <td></td>
       </tr>
