--- a/WebContent/include/browsedirMlist.jspf
+++ b/WebContent/include/browsedirMlist.jspf
@@ -58,17 +58,17 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person8130'>Minnelli, Vincente</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person27102'>Machado, Sérgio</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person27102'>Machado, SÃ©rgio</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person7835'>Mayfield, Les</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person15628'>Minns, Peter</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person24896'>Machalz, Alfons</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person7838'>Mayo, Archie L.</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person8132'>Miñon, Juan</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8132'>MiÃ±on, Juan</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person7465'>Machatý, Gustav</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person7465'>MachatÃ½, Gustav</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person7839'>Mayolo, Carlos</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person21417'>Minsker, Ethan H.</a></td>
       </tr>
@@ -148,7 +148,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person8183'>Mocky, Jean-Pierre</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person7514'>Magyar, Dezsö</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person7514'>Magyar, DezsÃ¶</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person22539'>McClory, Kevin</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person8188'>Moffatt, Tracey</a></td>
       </tr>
@@ -160,7 +160,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person7531'>Mainka, Maximiliane</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person7869'>McCullough, Jim, Sr.</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person8190'>Moguy, Léonide</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8190'>Moguy, LÃ©onide</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person7532'>Mainka-Jellinghaus, Beate</a></td>
@@ -190,7 +190,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person7549'>Makhmalbaf, Mohsen</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person23404'>McGann, William C.</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person8212'>Molnár, György</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8212'>MolnÃ¡r, GyÃ¶rgy</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person17652'>Makhmalbaf, Samira</a></td>
@@ -198,14 +198,14 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person8213'>Molteni, Giorgio</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person7552'>Makk, Károly</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person7552'>Makk, KÃ¡roly</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person7880'>McGlynn, Don</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person22623'>Mon, Lawrence Ah</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person7558'>Malas, Mohamad</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person17340'>McGuigan, Paul</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person17909'>Monette, Jean-François</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person17909'>Monette, Jean-FranÃ§ois</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person22904'>Malden, Karl</a></td>
@@ -243,7 +243,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person8251'>Moore, Michael</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person7578'>Malraux, André</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person7578'>Malraux, AndrÃ©</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person26224'>McKnight, Sharon</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person8259'>Moosmann, Daniel</a></td>
       </tr>
@@ -270,7 +270,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person22647'>Manetti, Marco</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person7908'>McMurray, Mary</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person8272'>Mordillat, Gérard</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8272'>Mordillat, GÃ©rard</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person23819'>Manganelli, Robert</a></td>
@@ -280,7 +280,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person7602'>Mangolte, Babette</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person28634'>McPherson, Conor</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person8275'>Morel, Gaël</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8275'>Morel, GaÃ«l</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person22194'>Manis, Jay</a></td>
@@ -290,7 +290,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person7606'>Mankiewicz, Francis</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person7921'>Medak, Peter</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person29582'>Moreuil, Fançois</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person29582'>Moreuil, FanÃ§ois</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person7607'>Mankiewicz, Joseph L.</a></td>
@@ -378,7 +378,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person13307'>Moss, Robb</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person16994'>Mariën, Marcel</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person16994'>MariÃ«n, Marcel</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person13830'>Menardi, Leo</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person28403'>Motohashi, Seiichi</a></td>
       </tr>
@@ -409,7 +409,7 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person7704'>Marquand, Richard</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person7980'>Menzel, Jirí</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person7980'>Menzel, JirÃ­</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person29972'>Muir, Jon</a></td>
       </tr>
       <tr>
@@ -429,7 +429,7 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person7712'>Marshall, Penny</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person7989'>Merlet, Agnès</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person7989'>Merlet, AgnÃ¨s</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person8361'>Mulvey, Laura</a></td>
       </tr>
       <tr>
@@ -440,12 +440,12 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person7719'>Martin, Catherine</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person7998'>Meskhiyev, Dmitri</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person15002'>Muñiz, Angel</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person15002'>MuÃ±iz, Angel</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person7727'>Martin, Richard</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person7423'>Mészáros, Márta</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person8341'>Muñoz, Susana Blaustein</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person7423'>MÃ©szÃ¡ros, MÃ¡rta</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8341'>MuÃ±oz, Susana Blaustein</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person24716'>Martineau, Jacques</a></td>
@@ -465,7 +465,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person7736'>Martinez, Rico</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person29862'>Meunier, Jean-Henri</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person8379'>Murat, Lúcia</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8379'>Murat, LÃºcia</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person7740'>Martino, Luciano</a></td>
@@ -509,7 +509,7 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person16089'>Masey, Jack</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person8025'>Miéville, Anne-Marie</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8025'>MiÃ©ville, Anne-Marie</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person27381'>Murray, Karen</a></td>
       </tr>
       <tr>
@@ -528,7 +528,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person8414'>Musker, John</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person7775'>Massip, José</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person7775'>Massip, JosÃ©</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person346'>Mikaberidze, Kote</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person8415'>Musser, Charles</a></td>
       </tr>
@@ -543,7 +543,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person8418'>Mutrux, Floyd</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person7785'>Maté, Rudolph</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person7785'>MatÃ©, Rudolph</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person21188'>Milani, Riccardo</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person8419'>Muxel, Paule</a></td>
       </tr>
