--- a/WebContent/include/browsedirNlist.jspf
+++ b/WebContent/include/browsedirNlist.jspf
@@ -5,7 +5,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person30128'>Naccache, Tina</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person23983'>Nettheim, Daniel</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person8628'>Noé, Gaspar</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8628'>NoÃ©, Gaspar</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person8440'>Naderi, Amir</a></td>
@@ -13,7 +13,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person15291'>Noel, Gilles</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person29902'>Nadjari, Raphaël</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person29902'>Nadjari, RaphaÃ«l</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person8546'>Neumann, Kurt</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person8638'>Noever, Hans</a></td>
       </tr>
@@ -54,7 +54,7 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person13190'>Nasfeter, Janusz</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person5032'>Nguyên Hòng Sen</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person5032'>NguyÃªn HÃ²ng Sen</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person24014'>Nosseck, Max</a></td>
       </tr>
       <tr>
@@ -65,7 +65,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person8477'>Nash, Mark</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person8577'>Nichols, Mike</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person8660'>Novák, Ivo</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8660'>NovÃ¡k, Ivo</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person8489'>Naumov, Vladimir</a></td>
@@ -79,13 +79,13 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person8494'>Neame, Ronald</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person8592'>Nie, René van</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person87'>Novoa, José</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8592'>Nie, RenÃ© van</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person87'>Novoa, JosÃ©</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person8498'>Nee-Owoo, Kwate</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person13378'>Nielsen, Asta</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person8434'>Nüchtern, Rüdiger</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8434'>NÃ¼chtern, RÃ¼diger</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person8504'>Negroponte, Michel</a></td>
@@ -100,7 +100,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person26738'>Neikov, Nikolai Ivanov</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person8600'>Nihalani, Govind</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person8674'>Nuñez, Victor</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8674'>NuÃ±ez, Victor</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person24046'>Neill, Roy William</a></td>
