--- a/WebContent/include/browsedirOlist.jspf
+++ b/WebContent/include/browsedirOlist.jspf
@@ -25,7 +25,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person26161'>O'Keefe, Denis</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person8794'>Olofson, Christina</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person26334'>Ôtani, Kentarô</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person26334'>Ã”tani, KentarÃ´</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person8709'>O'Malley, David</a></td>
@@ -45,7 +45,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person8731'>Ochs, Jacki</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person17198'>Ono, Yoko</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person8872'>Ottarsdóttir, Katrin</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8872'>OttarsdÃ³ttir, Katrin</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person8732'>Ockersen, Thijs</a></td>
@@ -59,13 +59,13 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person8737'>Odermatt, Urs</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person8817'>Ophüls, Marcel</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8817'>OphÃ¼ls, Marcel</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person8877'>Ouedraogo, Idrissa</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person8738'>Odorisio, Luciano</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person8818'>Ophüls, Max</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person8880'>Oury, Gérard</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8818'>OphÃ¼ls, Max</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8880'>Oury, GÃ©rard</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person29886'>Odoul, Damien</a></td>
@@ -75,11 +75,11 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person13487'>Oedekerk, Steve</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person26216'>Oppenheimer, Evan</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person20204'>Ové, Horace</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person20204'>OvÃ©, Horace</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person32596'>Oertel, Curt</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person12929'>Ordoñez, Victor</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12929'>OrdoÃ±ez, Victor</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person26458'>Owen, Cliff</a></td>
       </tr>
       <tr>
@@ -100,7 +100,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person8772'>Olhovich, Sergio</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person27692'>Orloff, Cliff</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person8856'>Özkan, Yavuz</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8856'>Ã–zkan, Yavuz</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person8778'>Oliveira, Manoel de</a></td>
@@ -108,7 +108,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person8892'>Ozu, Yasujiro</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person8787'>Olivera, Héctor</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8787'>Olivera, HÃ©ctor</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person8854'>Oshima, Nagisa</a></td>
         <td></td>
       </tr>
