--- a/WebContent/include/browsedirPlist.jspf
+++ b/WebContent/include/browsedirPlist.jspf
@@ -13,12 +13,12 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person19391'>Plante, Pierre</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person8918'>PadrÛn, Juan</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8918'>Padr√≥n, Juan</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person21570'>Percy, Norma</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person9299'>Plympton, Bill</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person18979'>Paes, CÈsar</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person18979'>Paes, C√©sar</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person9121'>Pereira, Geraldo Santos</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person9302'>Pobog-Malinowski, Tomasz</a></td>
       </tr>
@@ -54,22 +54,22 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person8930'>Pal, George</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person9131'>PÈrez, Severo</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person9131'>P√©rez, Severo</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person29907'>Poiraud, Thierry</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person14554'>Paleka, Amol</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person23238'>PÈrez, Thomas Gonz·lez</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person23238'>P√©rez, Thomas Gonz√°lez</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person9320'>Poirier, Manuel</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person8941'>Palma, Brian De</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person21171'>PÈrier, Jean-Marie</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person21171'>P√©rier, Jean-Marie</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person23120'>Poisey, David</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person17590'>Palmer, John</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person9132'>PeriÒ·n, Paco</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person9132'>Peri√±√°n, Paco</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person9323'>Poitier, Sidney</a></td>
       </tr>
       <tr>
@@ -94,7 +94,7 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person8953'>Panfilov, Gleb</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person8904'>PÈterffy, Andr·s</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person8904'>P√©terffy, Andr√°s</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person9341'>Pollack, Jeff</a></td>
       </tr>
       <tr>
@@ -145,7 +145,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person8993'>Parker, Alan</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person9187'>Petrov, Vladimir</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person9361'>Pool, LÈa</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person9361'>Pool, L√©a</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person8994'>Parker, Albert</a></td>
@@ -160,7 +160,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person13129'>Parks, Gordon, Jr.</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person22751'>Pfeffer, Barbara</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person18911'>Porcile, FranÁois</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person18911'>Porcile, Fran√ßois</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person25624'>Parks, Gordon</a></td>
@@ -230,7 +230,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person9024'>Passer, Ivan</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person14322'>Pierce, Christian</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person9426'>PrÈgent, Johanne</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person9426'>Pr√©gent, Johanne</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person9028'>Pastrone, Giovanni</a></td>
@@ -248,7 +248,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person232'>Preobrazhenskaya, Olga</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person9032'>Patenaude, DanyËle</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person9032'>Patenaude, Dany√®le</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person13808'>Pietrangeli, Antonio</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person32427'>Presnell, Robert</a></td>
       </tr>
@@ -258,14 +258,14 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person9448'>Pressburger, Emeric</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person22983'>Patris, GÈrard</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person22983'>Patris, G√©rard</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person20301'>Pilikhina, Margarita</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person9452'>Preston, Travis</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person32619'>Patterson, Richard</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person9247'>Pilz, Michael</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person9427'>PrÈvert, Pierre</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person9427'>Pr√©vert, Pierre</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person22187'>Paulin, Marc</a></td>
@@ -314,7 +314,7 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person22368'>Pellington, Mark</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person14278'>PirËs, GÈrard</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person14278'>Pir√®s, G√©rard</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person12932'>Puhipau</a></td>
       </tr>
       <tr>
@@ -330,7 +330,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person26053'>Penland, Michael</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person9274'>Pita, Dan</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person26818'>Pullicino, GÈrard</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person26818'>Pullicino, G√©rard</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person9104'>Penn, Arthur</a></td>
