--- a/WebContent/include/browsedirRlist.jspf
+++ b/WebContent/include/browsedirRlist.jspf
@@ -5,7 +5,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person9564'>Rabaglia, Denis</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person96'>Reynolds, Kevin</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person10008'>Rood, JurriÎn</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person10008'>Rood, Jurri√´n</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person9569'>Rabenalt, Arthur Maria</a></td>
@@ -83,13 +83,13 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person10035'>Rosenfeld, Keva</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person23220'>Rag·lyi, ElemÈr</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person23220'>Rag√°lyi, Elem√©r</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person9809'>Richert, William</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person10042'>Rosenthal, Rick</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person9598'>Rahardjo, Slamet</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person9810'>Richet, Jean-FranÁois</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person9810'>Richet, Jean-Fran√ßois</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person22963'>Roshal, Grigori</a></td>
       </tr>
       <tr>
@@ -123,7 +123,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person10056'>Ross, Herbert</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person24916'>RanÛdy, L·szlÛ</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person24916'>Ran√≥dy, L√°szl√≥</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person14603'>Rihak, Jaroslav</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person26434'>Ross, Steven John</a></td>
       </tr>
@@ -155,10 +155,10 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person9647'>Rasmussen, Kjehl</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person9860'>Ripley, Arthur</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person10064'>Rossif, FrÈdÈric</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person10064'>Rossif, Fr√©d√©ric</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person25832'>R·thonyi, ¡kos</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person25832'>R√°thonyi, √Åkos</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person9865'>Risan, Leidulv</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person10065'>Rossini, Bianca Conti</a></td>
       </tr>
@@ -270,7 +270,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person9702'>Reed, Joel M.</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person9922'>Robin, Teddy</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person14601'>Roy, RenÈe</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person14601'>Roy, Ren√©e</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person29180'>Reed, Langford</a></td>
@@ -295,10 +295,10 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person9720'>Reichenbach, Carlos</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person9932'>Robison, Arthur</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person9558'>RÛzsa, J·nos</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person9558'>R√≥zsa, J√°nos</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person9721'>Reichenbach, FranÁois</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person9721'>Reichenbach, Fran√ßois</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person9937'>Robson, Mark</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person10112'>Rubbo, Michael</a></td>
       </tr>
@@ -309,7 +309,7 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person22387'>Reid, Alastair</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person9942'>Rochant, …ric</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person9942'>Rochant, √âric</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person10113'>Ruben, Joseph</a></td>
       </tr>
       <tr>
@@ -324,7 +324,7 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person9733'>Reiner, Carl</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person9560'>Rˆdl, Josef</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person9560'>R√∂dl, Josef</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person20689'>Rudavsky, Oren</a></td>
       </tr>
       <tr>
@@ -334,7 +334,7 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person16328'>Reinhardt, Gottfried</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person9956'>RodrÌguez, Ismael</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person9956'>Rodr√≠guez, Ismael</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person10130'>Ruggles, Wesley</a></td>
       </tr>
       <tr>
@@ -343,17 +343,17 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person10133'>Ruiz, Raoul</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person9744'>Reis, AntÛnio</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person9744'>Reis, Ant√≥nio</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person24706'>Rodriguez, Rosemary</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person10136'>Rund, Emanuel</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person15544'>Reis, Irving</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person9966'>Rˆed, Jan</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person9966'>R√∂ed, Jan</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person10140'>Rupe, Katja</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person9745'>Reisch, G¸nter</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person9745'>Reisch, G√ºnter</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person383'>Roeg, Nicolas</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person16137'>Rupp, Walter</a></td>
       </tr>
@@ -389,17 +389,17 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person27408'>Rekhviashvili, Aleqsandre</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person9979'>Rohmer, …ric</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person9979'>Rohmer, √âric</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person10169'>Rydell, Mark</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person9752'>RenÈ, Norman</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person9752'>Ren√©, Norman</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person24447'>Roland, Dany</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person33911'>Ryden, Hope</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person9759'>Renoir, Jean</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person19534'>Roland, J¸rgen</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person19534'>Roland, J√ºrgen</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person16631'>Rymer, Michael</a></td>
       </tr>
       <tr>
@@ -413,7 +413,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person24419'>Rytsarev, Boris</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person9551'>RÈvÈsz, Gyˆrgy</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person9551'>R√©v√©sz, Gy√∂rgy</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person22711'>Rondon, Mariana</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person10177'>Rzeszewski, Janusz</a></td>
       </tr>
