--- a/WebContent/include/browsedirSlist.jspf
+++ b/WebContent/include/browsedirSlist.jspf
@@ -89,11 +89,11 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person16921'>Salmini, Ambrose</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person10636'>SembËne, Ousmane</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person10636'>Semb√®ne, Ousmane</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person10987'>Soderbergh, Steven</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person10256'>SalomÈ, Jean-Paul</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person10256'>Salom√©, Jean-Paul</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person10643'>Sen, Mrinal</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person26740'>Soiffer, Joseph</a></td>
       </tr>
@@ -109,8 +109,8 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person10273'>Samb-Makharam, Ababacar</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person10653'>Sequens, JirÌ</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person11000'>Sol·s, Humberto</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person10653'>Sequens, Jir√≠</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person11000'>Sol√°s, Humberto</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person30129'>Samet, Idit</a></td>
@@ -124,7 +124,7 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person13467'>Sampson, Bill</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person10188'>SÈria, JoÎl</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person10188'>S√©ria, Jo√´l</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person11010'>Soldini, Silvio</a></td>
       </tr>
       <tr>
@@ -148,19 +148,19 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person11015'>Solovyov, Sergei</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person10180'>S·nchez, JosÈ LuÌs GarcÌa</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person10180'>S√°nchez, Jos√© Lu√≠s Garc√≠a</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person13246'>Seth, Carl-Eric</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person11025'>Sommers, Stephen</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person10284'>S·nchez, Manuel</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person10284'>S√°nchez, Manuel</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person26623'>Setkina, Irina</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person11037'>Sonnenfeld, Barry</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person10287'>Sander, Helke</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person10677'>Severson, Anne</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person11041'>Sopsits, ¡rp·d</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person11041'>Sopsits, √Årp√°d</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person30179'>Sanders, Jessica</a></td>
@@ -179,7 +179,7 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person22710'>Sandig, Frauke</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person20'>Sganzerla, RogÈrio</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person20'>Sganzerla, Rog√©rio</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person32136'>Sorkin, Marc</a></td>
       </tr>
       <tr>
@@ -200,7 +200,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person10296'>Sandrich, Mark</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person10688'>Shah, Krishna</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person11058'>Sousa, MaurÌcio de</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person11058'>Sousa, Maur√≠cio de</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person24022'>Sanforth, Clifford</a></td>
@@ -223,7 +223,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person11073'>Spears, Ross</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person10317'>Santos, NÈlson Pereira dos</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person10317'>Santos, N√©lson Pereira dos</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person17379'>Shamshiev, Bolotbek</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person13251'>Spector, Johanna L.</a></td>
       </tr>
@@ -233,9 +233,9 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person11090'>Spielberg, Steven</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person10321'>Sanz, Carlos RodrÌguez</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person10321'>Sanz, Carlos Rodr√≠guez</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person15324'>Shaner, Peter</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person11091'>Spielmann, Gˆtz</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person11091'>Spielmann, G√∂tz</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person10323'>Saparov, Usman</a></td>
@@ -243,7 +243,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person11094'>Spinelli, Anthony</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person10184'>S·ra, S·ndor</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person10184'>S√°ra, S√°ndor</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person30201'>Shapiro, Adam</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person11097'>Spottiswoode, Roger</a></td>
       </tr>
@@ -258,7 +258,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person25594'>Springsteen, R. G.</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person10342'>Sarmiento, ValÈria</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person10342'>Sarmiento, Val√©ria</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person15530'>Sharaliev, Borislav</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person20806'>Sprinkle, Annie</a></td>
       </tr>
@@ -283,7 +283,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person2735'>St. Clair, Malcolm</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person10367'>Sauvage, AndrÈ</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person10367'>Sauvage, Andr√©</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person29406'>Shaughnessy, Alfred</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person11121'>Stagnaro, Juan Bautista</a></td>
       </tr>
@@ -383,7 +383,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person11207'>Stevenson, Robert</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person10444'>Schiffer, P·l</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person10444'>Schiffer, P√°l</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person10767'>Shindo, Kaneto</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person31521'>Stewart, Hugh</a></td>
       </tr>
@@ -413,7 +413,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person11225'>Stoeltje, Gretchen</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person10455'>Schlˆndorff, Volker</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person10455'>Schl√∂ndorff, Volker</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person10778'>Shonteff, Lindsay</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person25584'>Stoloff, Victor</a></td>
       </tr>
@@ -498,7 +498,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person11290'>Sturges, John</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person20724'>Schott-Schˆbinger, Hans</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person20724'>Schott-Sch√∂binger, Hans</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person10810'>Sierck, Detlef</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person11291'>Sturges, Preston</a></td>
       </tr>
@@ -510,7 +510,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person10517'>Schrader, Paul</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person10820'>Silber, Glenn</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person11296'>Su·rez, Gonzalo</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person11296'>Su√°rez, Gonzalo</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person10521'>Schreibman, Myrl A.</a></td>
@@ -540,12 +540,12 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person10540'>Schulmann, Patrick</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person19552'>Simon, Claire</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person11308'>Suissa, DaniËle J.</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person11308'>Suissa, Dani√®le J.</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person10542'>Schultz, Michael</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person17706'>Simon, Frank</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person11310'>SulÌk, Martin</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person11310'>Sul√≠k, Martin</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person10547'>Schumacher, Joel</a></td>
@@ -558,7 +558,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person11320'>Sullivan, Tim</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person10401'>Sch¸pbach, Marcel</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person10401'>Sch√ºpbach, Marcel</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person28269'>Simon, S. Sylvan</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person28970'>Summers, Jeremy</a></td>
       </tr>
@@ -570,7 +570,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person10555'>Schwabenitzky, Reinhard</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person15036'>Sinclair, Ingrid</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person11329'>Sundstrˆm, Cedric</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person11329'>Sundstr√∂m, Cedric</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person10557'>Schwartz, Mark</a></td>
@@ -625,7 +625,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person10574'>Scott, James F.</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person10889'>Sirk, Douglas</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person11358'>Sver·k, Jan</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person11358'>Sver√°k, Jan</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person30473'>Scott, Jordan</a></td>
@@ -649,23 +649,23 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person10583'>Seacat, Sandra</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person10903'>Sjˆberg, Alf</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person10903'>Sj√∂berg, Alf</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person11372'>Switkes, Glenn</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person29357'>Sears, Fred F.</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person25452'>Sjˆberg, Tore</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person11374'>Syberberg, Hans J¸rgen</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person25452'>Sj√∂berg, Tore</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person11374'>Syberberg, Hans J√ºrgen</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person10586'>Seaton, George</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person10904'>Sjˆman, Vilgot</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person10904'>Sj√∂man, Vilgot</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person11377'>Sykes, Peter</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person10589'>Sebastian, Beverly</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person21534'>Skinner, Peter</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person11386'>SzabÛ, Istv·n</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person11386'>Szab√≥, Istv√°n</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person10590'>Sebastian, Ferd</a></td>
