--- a/WebContent/include/browsedirTlist.jspf
+++ b/WebContent/include/browsedirTlist.jspf
@@ -13,9 +13,9 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person27088'>Torre, Roberta</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person11423'>Tabío, Juan Carlos</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person11423'>TabÃ­o, Juan Carlos</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person33369'>Tennyson, Pen</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person11713'>Torres, Daniel Díaz</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person11713'>Torres, Daniel DÃ­az</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person11425'>Tacchella, Jean-Charles</a></td>
@@ -25,7 +25,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person11431'>Taghvai, Naser</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person11547'>Terayama, Shuji</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person11721'>Toth, André de</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person11721'>Toth, AndrÃ© de</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person11432'>Tahimik, Kidlat</a></td>
@@ -65,7 +65,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person11473'>Tanner, Alain</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person27897'>Thior, Amadou</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person11746'>Toyoda, Shirô</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person11746'>Toyoda, ShirÃ´</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person33407'>Tanovic, Danis</a></td>
@@ -85,7 +85,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person11478'>Tarantino, Quentin</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person14874'>Thomas, Jeremy</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person11752'>Trancík, Dusan</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person11752'>TrancÃ­k, Dusan</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person11480'>Tarasov, Sergei</a></td>
@@ -113,7 +113,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person11781'>Trier, Lars von</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person11489'>Tarr, Béla</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person11489'>Tarr, BÃ©la</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person11608'>Thompson, J. Lee</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person8127'>Trinh T. Minh-ha</a></td>
       </tr>
@@ -130,7 +130,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person11493'>Tashlin, Frank</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person26677'>Thomsen, Christian Braad</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person29737'>Trnka, Jirí</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person29737'>Trnka, JirÃ­</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person27074'>Taslimi, Susan</a></td>
@@ -150,7 +150,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person23105'>Tatlock, Katherine Deutch</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person30204'>Thuesen, Jacob</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person11801'>Truffaut, François</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person11801'>Truffaut, FranÃ§ois</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person11502'>Tatos, Alexandru</a></td>
@@ -198,7 +198,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person11834'>Tu, Larry C.H.</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person11522'>Taylor, Renée</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person11522'>Taylor, RenÃ©e</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person25773'>Tokar, Norman</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person11841'>Tucker, George Loane</a></td>
       </tr>
@@ -228,7 +228,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person19827'>Tunis, Ron</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person11413'>Téchiné, André</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person11413'>TÃ©chinÃ©, AndrÃ©</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person11701'>Toporoff, Ralph</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person33357'>Turell, Saul J.</a></td>
       </tr>
@@ -239,7 +239,7 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person386'>Temple, Julien</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person11420'>Törnroth, Titte</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person11420'>TÃ¶rnroth, Titte</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person14853'>Twohy, David</a></td>
       </tr>
       <tr>
