--- a/WebContent/include/browsedirUlist.jspf
+++ b/WebContent/include/browsedirUlist.jspf
@@ -4,7 +4,7 @@
     <table id='browseTable' name='browseTable'>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person22712'>Ugaz, Marite</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person12936'>Ün, Memduh</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12936'>Ãœn, Memduh</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person11928'>Urgelles, Thaelman</a></td>
       </tr>
       <tr>
