--- a/WebContent/include/browsedirVlist.jspf
+++ b/WebContent/include/browsedirVlist.jspf
@@ -4,7 +4,7 @@
     <table id='browseTable' name='browseTable'>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person11951'>Vadim, Roger</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person29266'>Védrès, Nicole</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person29266'>VÃ©drÃ¨s, Nicole</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person24048'>Viertel, Berthold</a></td>
       </tr>
       <tr>
@@ -13,14 +13,14 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person12102'>Vigo, Jean</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person11965'>Valdés, Oscar L.</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person11965'>ValdÃ©s, Oscar L.</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person12023'>Velde, Jean van de</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person18898'>Vilardebo, Carlos</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person12928'>Valletta, Al</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person27200'>Vendemmiati, Alberto</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person12109'>Villaronga, Agustín</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12109'>Villaronga, AgustÃ­n</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person741'>Van Ackeren, Robert</a></td>
@@ -33,9 +33,9 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person26184'>Villeneuve, Denis</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person28600'>van der Hout, André</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person12034'>Vennerød, Petter</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person12113'>Villiers, François</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person28600'>van der Hout, AndrÃ©</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12034'>VennerÃ¸d, Petter</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12113'>Villiers, FranÃ§ois</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person6333'>van der Keuken, Johan</a></td>
@@ -63,7 +63,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person19501'>Viola, Joe</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person28591'>Van Effenterre, Joële</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person28591'>Van Effenterre, JoÃ«le</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person29993'>Verheyde, Sylvie</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person12125'>Virzi, Paolo</a></td>
       </tr>
@@ -90,7 +90,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person11977'>Vancini, Florestano</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person29815'>Verow, Todd</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person12145'>Vlácil, Frantisek</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12145'>VlÃ¡cil, Frantisek</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person17519'>Vanderbeek, Stan</a></td>
@@ -103,7 +103,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person24836'>Voinov, Konstantin</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person112'>Varda, Agnès</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person112'>Varda, AgnÃ¨s</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person20440'>Vester, Paul</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person12157'>Volev, Nikolaj</a></td>
       </tr>
@@ -143,13 +143,13 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person23973'>Vorhaus, Bernard</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person26569'>Vautier, René</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person26569'>Vautier, RenÃ©</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person12092'>Vidor, King</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person12174'>Voulgaris, Pantelis</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person11943'>Vávra, Otakar</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person12096'>Vienne, Gérard</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person11943'>VÃ¡vra, Otakar</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12096'>Vienne, GÃ©rard</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person12185'>Vukotic, Dusan</a></td>
       </tr>
       <tr>
