--- a/WebContent/include/browsedirWlist.jspf
+++ b/WebContent/include/browsedirWlist.jspf
@@ -104,7 +104,7 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person10876'>Wang Singloy,</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person12364'>Wertmüller, Lina</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12364'>WertmÃ¼ller, Lina</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person12511'>Wiseman, Frederick</a></td>
       </tr>
       <tr>
@@ -120,7 +120,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person12238'>Wang, Wayne</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person23929'>Westerhoff, Bill</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person12187'>Wójcik, Wojciech</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12187'>WÃ³jcik, Wojciech</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person12243'>Ward, David S.</a></td>
@@ -128,7 +128,7 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person12533'>Wojtyszko, Maciej</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person12250'>Wargnier, Régis</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12250'>Wargnier, RÃ©gis</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person22620'>Weyer, Hannah</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person16271'>Wolf, David</a></td>
       </tr>
@@ -215,7 +215,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person29695'>Weerasethakul, Apichatpong</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person24439'>Wilbur, Crane</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person12572'>Wortmann, Sönke</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12572'>Wortmann, SÃ¶nke</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person22184'>Wegener, Paul</a></td>
