--- a/WebContent/include/browsedirYlist.jspf
+++ b/WebContent/include/browsedirYlist.jspf
@@ -50,12 +50,12 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person15726'>Yarbrough, Jean</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person394'>Yossifova, Iskra</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person13856'>Yü, Pen-cheng</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person13856'>YÃ¼, Pen-cheng</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person24101'>Yavuz, Yüksel</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person24101'>Yavuz, YÃ¼ksel</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person12678'>Young, Andrew</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person26867'>Yüce, Ihsan</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person26867'>YÃ¼ce, Ihsan</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person12643'>Yazaki, Hitoshi</a></td>
