--- a/WebContent/include/browsedirZlist.jspf
+++ b/WebContent/include/browsedirZlist.jspf
@@ -3,7 +3,7 @@
   <div id='browselist' name='browselist'>
     <table id='browseTable' name='browseTable'>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person26185'>Zábka, Michal</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person26185'>ZÃ¡bka, Michal</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person12794'>Zetterling, Mai</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person26611'>Zobus, Wolfram</a></td>
       </tr>
@@ -15,7 +15,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person12716'>Zaccaro, Maurizio</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person8675'>Zhang Nuanxin</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person12847'>Zorrilla, José A.</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12847'>Zorrilla, JosÃ© A.</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person12726'>Zahariev, Eduard</a></td>
@@ -23,9 +23,9 @@
         <td><a href='/cinefiles/FilmSearch?nameId=person12849'>Zschoche, Herrmann</a></td>
       </tr>
       <tr>
-        <td><a href='/cinefiles/FilmSearch?nameId=person12712'>Záhon, Zoro</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12712'>ZÃ¡hon, Zoro</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person30117'>Zhang, Yibai</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person12855'>Zsurzs, Éva</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12855'>Zsurzs, Ã‰va</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person19871'>Zambrano, Benito</a></td>
@@ -64,7 +64,7 @@
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person14890'>Ze'ev Gilad, D.</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person12830'>Zingg, Gérard</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12830'>Zingg, GÃ©rard</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person12876'>Zwerin, Charlotte</a></td>
       </tr>
       <tr>
@@ -80,7 +80,7 @@
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person15981'>Zeisler, Alfred</a></td>
         <td><a href='/cinefiles/FilmSearch?nameId=person17185'>Zischler, Hanns</a></td>
-        <td><a href='/cinefiles/FilmSearch?nameId=person12882'>Zwoboda, André</a></td>
+        <td><a href='/cinefiles/FilmSearch?nameId=person12882'>Zwoboda, AndrÃ©</a></td>
       </tr>
       <tr>
         <td><a href='/cinefiles/FilmSearch?nameId=person12784'>Zemeckis, Robert</a></td>
