--- a/WebContent/include/browsefeatured.jspf
+++ b/WebContent/include/browsefeatured.jspf
@@ -157,7 +157,7 @@
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=40427">
         <img alt="View " src="/cinefiles/cine_img/www_imgs.81/t/40427.p1.jpeg"></a>
-          Lacorazzata Potëmkin
+          Lacorazzata PotÃ«mkin
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=41856">
         <img alt="View " src="/cinefiles/cine_img/www_imgs.84/t/41856.p1.jpeg"></a>
@@ -197,7 +197,7 @@
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=49625">
         <img alt="View " src="/cinefiles/cine_img/www_imgs.100/t/49625.p1.jpeg"></a>
-          Ousmane Sembène: Pioneer of African cinema
+          Ousmane SembÃ¨ne: Pioneer of African cinema
       <br /><br />
       <a href="/cinefiles/DocDetail?docId=51440">
         <img alt="View " src="/cinefiles/cine_img/www_imgs.103/t/51440.p1.jpeg"></a>
