--- a/WebContent/include/browsesubjAlist.jspf
+++ b/WebContent/include/browsesubjAlist.jspf
@@ -201,8 +201,8 @@
           Adler, Mark
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Adorée,_Renée">
-          Adorée, Renée
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=AdorÃ©e,_RenÃ©e">
+          AdorÃ©e, RenÃ©e
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Adrian,_Iris">
@@ -305,8 +305,8 @@
           Ahlberg, Julie
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Ahlstedt,_Börje">
-          Ahlstedt, Börje
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Ahlstedt,_BÃ¶rje">
+          Ahlstedt, BÃ¶rje
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Ahmad,_Yasmin">
@@ -341,8 +341,8 @@
           Aiello, Danny
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Aimée,_Anouk">
-          Aimée, Anouk
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=AimÃ©e,_Anouk">
+          AimÃ©e, Anouk
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Aird,_Holly">
@@ -389,8 +389,8 @@
           Alcaine, Jose Luis
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Alcalá,_Jose">
-          Alcalá, Jose
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=AlcalÃ¡,_Jose">
+          AlcalÃ¡, Jose
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Alcoriza,_Luis">
@@ -433,8 +433,8 @@
           Aldridge, Kay
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Alea,_Tomás_Gutiérrez">
-          Alea, Tomás Gutiérrez
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Alea,_TomÃ¡s_GutiÃ©rrez">
+          Alea, TomÃ¡s GutiÃ©rrez
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Alekan,_Henri">
@@ -445,8 +445,8 @@
           Aleksic, Dragoljub
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Alerme,_André">
-          Alerme, André
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Alerme,_AndrÃ©">
+          Alerme, AndrÃ©
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Alexander,_Ben">
@@ -589,12 +589,12 @@
           Almereyda, Michael
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Almodóvar,_Agustín">
-          Almodóvar, Agustín
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=AlmodÃ³var,_AgustÃ­n">
+          AlmodÃ³var, AgustÃ­n
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Almodóvar,_Pedro">
-          Almodóvar, Pedro
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=AlmodÃ³var,_Pedro">
+          AlmodÃ³var, Pedro
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Alonso,_Alicia">
@@ -713,8 +713,8 @@
           Anastos, Peter
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Anchía,_Juan_Ruiz">
-          Anchía, Juan Ruiz
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=AnchÃ­a,_Juan_Ruiz">
+          AnchÃ­a, Juan Ruiz
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=and_religion">
@@ -1137,8 +1137,8 @@
           Arnold, Edward
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Arnoul,_Françoise">
-          Arnoul, Françoise
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Arnoul,_FranÃ§oise">
+          Arnoul, FranÃ§oise
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Aronson,_Letty">
@@ -1313,8 +1313,8 @@
           Aubier, Dominique
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Aubry,_Cécile">
-          Aubry, Cécile
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Aubry,_CÃ©cile">
+          Aubry, CÃ©cile
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Aubry,_Kim">
@@ -1329,12 +1329,12 @@
           Auctions
           </a><br_/>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Audiard,_Marie-Josée">
-          Audiard, Marie-Josée
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Audiard,_Marie-JosÃ©e">
+          Audiard, Marie-JosÃ©e
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Audran,_Stéphane">
-          Audran, Stéphane
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Audran,_StÃ©phane">
+          Audran, StÃ©phane
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Auer,_Mischa">
@@ -1441,8 +1441,8 @@
           Ayouch, Nabil
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Azéma,_Sabine">
-          Azéma, Sabine
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=AzÃ©ma,_Sabine">
+          AzÃ©ma, Sabine
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Aznavour,_Charles">
