--- a/WebContent/include/browsesubjBlist.jspf
+++ b/WebContent/include/browsesubjBlist.jspf
@@ -9,8 +9,8 @@
           B., Scott
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Baarová,_Lída">
-          Baarová, Lída
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=BaarovÃ¡,_LÃ­da">
+          BaarovÃ¡, LÃ­da
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Babenco,_Hector">
@@ -21,8 +21,8 @@
           Bacall, Lauren
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Bacalov,_Luis_Enríquez">
-          Bacalov, Luis Enríquez
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Bacalov,_Luis_EnrÃ­quez">
+          Bacalov, Luis EnrÃ­quez
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Baccar,_Jalila">
@@ -352,8 +352,8 @@
           Barhydt, Frank
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Baril,_Céline">
-          Baril, Céline
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Baril,_CÃ©line">
+          Baril, CÃ©line
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Barker,_Bob">
@@ -578,8 +578,8 @@
           Bauer, Fred
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Bauer,_Tristán">
-          Bauer, Tristán
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Bauer,_TristÃ¡n">
+          Bauer, TristÃ¡n
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Baugh,_Gary">
@@ -838,8 +838,8 @@
           Bendix, William
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Bendová,_Jitka">
-          Bendová, Jitka
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=BendovÃ¡,_Jitka">
+          BendovÃ¡, Jitka
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Bendtsen,_Henning">
@@ -1246,8 +1246,8 @@
           Bidenko, Kris
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Biedrzy´nska,_Adrianna">
-          Biedrzy´nska, Adrianna
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=BiedrzyÂ´nska,_Adrianna">
+          BiedrzyÂ´nska, Adrianna
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Biehler,_Marc">
@@ -1258,8 +1258,8 @@
           Biehn, Michael
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Bigas_Luna,_José_Juan">
-          Bigas Luna, José Juan
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Bigas_Luna,_JosÃ©_Juan">
+          Bigas Luna, JosÃ© Juan
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Bigelow,_Kathryn">
@@ -1378,8 +1378,8 @@
           Bizet, Georges, 1838-1875. Carmen -- Film and video adaptations
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Björnstrand,_Gunnar">
-          Björnstrand, Gunnar
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=BjÃ¶rnstrand,_Gunnar">
+          BjÃ¶rnstrand, Gunnar
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Black,_Cathal">
@@ -1422,16 +1422,16 @@
           Blackwell, Paul
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Blades,_Rubén">
-          Blades, Rubén
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Blades,_RubÃ©n">
+          Blades, RubÃ©n
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Blaier,_Andrei">
           Blaier, Andrei
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Blain,_Gérard">
-          Blain, Gérard
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Blain,_GÃ©rard">
+          Blain, GÃ©rard
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Blair,_Janet">
@@ -1650,8 +1650,8 @@
           Boisson, Christine
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Bokanowski,_Michèle">
-          Bokanowski, Michèle
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Bokanowski,_MichÃ¨le">
+          Bokanowski, MichÃ¨le
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Bokanowski,_Patrick">
@@ -1806,8 +1806,8 @@
           Botsvadze, Zeinab
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Bottía,_Luis_Fernando">
-          Bottía, Luis Fernando
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=BottÃ­a,_Luis_Fernando">
+          BottÃ­a, Luis Fernando
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Bottoms,_Sam">
@@ -1822,8 +1822,8 @@
           Bouajila, Sami
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Bouchez,_Élodie">
-          Bouchez, Élodie
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Bouchez,_Ã‰lodie">
+          Bouchez, Ã‰lodie
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Boudrioz,_Robert">
@@ -1957,8 +1957,8 @@
           Brabner, Joyce
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Brach,_Gérard">
-          Brach, Gérard
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Brach,_GÃ©rard">
+          Brach, GÃ©rard
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Bracy,_Charles">
@@ -2065,8 +2065,8 @@
           Breloer, Heinrich
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Brennan,_Bríd">
-          Brennan, Bríd
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Brennan,_BrÃ­d">
+          Brennan, BrÃ­d
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Brennan,_Walter">
@@ -2093,8 +2093,8 @@
           Bresson, Robert
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Breton,_Michèle">
-          Breton, Michèle
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Breton,_MichÃ¨le">
+          Breton, MichÃ¨le
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Brett,_Jason">
@@ -2481,8 +2481,8 @@
           Buchanan, Meg
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Büchel,_Thomas">
-          Büchel, Thomas
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=BÃ¼chel,_Thomas">
+          BÃ¼chel, Thomas
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Buchholz,_Horst">
@@ -2505,8 +2505,8 @@
           Buhai, Jeff
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Bujold,_Geneviéve">
-          Bujold, Geneviéve
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Bujold,_GeneviÃ©ve">
+          Bujold, GeneviÃ©ve
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Bukaee,_Raphi">
@@ -2537,8 +2537,8 @@
           Bunin, Lou
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Buñuel,_Luis">
-          Buñuel, Luis
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=BuÃ±uel,_Luis">
+          BuÃ±uel, Luis
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Bunuel,_Luis,_1900-1983._Mon_dernier_soupir">
@@ -2557,8 +2557,8 @@
           Burden of dreams: screenplay, journals, reviews, photographs
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Burel,_Léonce-Henri">
-          Burel, Léonce-Henri
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Burel,_LÃ©once-Henri">
+          Burel, LÃ©once-Henri
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Burg,_Andy">
@@ -2697,8 +2697,8 @@
           Bussemaker, Reinout
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Bussières,_Pascale">
-          Bussières, Pascale
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=BussiÃ¨res,_Pascale">
+          BussiÃ¨res, Pascale
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Bute,_Mary_Ellen">
