--- a/WebContent/include/browsesubjClist.jspf
+++ b/WebContent/include/browsesubjClist.jspf
@@ -13,8 +13,8 @@
           Cabot, Bruce
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Cacho,_Daniel_GimÈnez">
-          Cacho, Daniel GimÈnez
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Cacho,_Daniel_Gim√©nez">
+          Cacho, Daniel Gim√©nez
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Cacoyannis,_Michael">
@@ -41,8 +41,8 @@
           Cagney, James
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=CaillËre,_Anne">
-          CaillËre, Anne
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Caill√®re,_Anne">
+          Caill√®re, Anne
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Cain,_James_M._(James_Mallahan),_1892-1977">
@@ -125,8 +125,8 @@
           Calvin, Henry
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=C·mara,_Javier">
-          C·mara, Javier
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=C√°mara,_Javier">
+          C√°mara, Javier
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Cambern,_Donn">
@@ -249,8 +249,8 @@
           Caramitru, Ion
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Carax,_LÈos">
-          Carax, LÈos
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Carax,_L√©os">
+          Carax, L√©os
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Carbone,_Antony">
@@ -329,8 +329,8 @@
           Carmichael, Ian
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=CarnÈ,_Marcel">
-          CarnÈ, Marcel
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Carn√©,_Marcel">
+          Carn√©, Marcel
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Carnera,_Paolo">
@@ -405,16 +405,16 @@
           Carradine, Robert
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=CarrÈ,_Isabelle">
-          CarrÈ, Isabelle
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Carr√©,_Isabelle">
+          Carr√©, Isabelle
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=CarriËre,_Jean-Claude">
-          CarriËre, Jean-Claude
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Carri√®re,_Jean-Claude">
+          Carri√®re, Jean-Claude
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=CarriËre,_Mathieu">
-          CarriËre, Mathieu
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Carri√®re,_Mathieu">
+          Carri√®re, Mathieu
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Carrillo,_Leo">
@@ -513,8 +513,8 @@
           Carver, Tina
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Casanovas,_¡lex">
-          Casanovas, ¡lex
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Casanovas,_√Ålex">
+          Casanovas, √Ålex
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Casey,_Bernie">
@@ -617,8 +617,8 @@
           Caviezel, Jim
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Cayatte,_AndrÈ">
-          Cayatte, AndrÈ
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Cayatte,_Andr√©">
+          Cayatte, Andr√©
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Cayrol,_Jean">
@@ -1213,8 +1213,8 @@
           Churikova, Inna
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Chytilov·,_Vera">
-          Chytilov·, Vera
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Chytilov√°,_Vera">
+          Chytilov√°, Vera
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Cianchetti,_Fabio">
@@ -1257,8 +1257,8 @@
           Cirincione, Richard P.
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=CissÈ,_Souleymane">
-          CissÈ, Souleymane
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Ciss√©,_Souleymane">
+          Ciss√©, Souleymane
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Cities_and_towns_in_motion_pictures">
@@ -1277,8 +1277,8 @@
           Civeyrac, Jean-Paul
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Clair,_RenÈ">
-          Clair, RenÈ
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Clair,_Ren√©">
+          Clair, Ren√©
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Clapton,_Eric">
@@ -1357,12 +1357,12 @@
           Clemenson, Christian
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=ClÈment,_Aurore">
-          ClÈment, Aurore
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Cl√©ment,_Aurore">
+          Cl√©ment, Aurore
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=ClÈment,_RenÈ">
-          ClÈment, RenÈ
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Cl√©ment,_Ren√©">
+          Cl√©ment, Ren√©
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Clementi,_Pierre">
@@ -1405,8 +1405,8 @@
           Clunes, Alec
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Cluzet,_FranÁois">
-          Cluzet, FranÁois
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Cluzet,_Fran√ßois">
+          Cluzet, Fran√ßois
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Clyde,_June">
@@ -1989,8 +1989,8 @@
           Costume design -- United States
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=CÙte,_Laurence">
-          CÙte, Laurence
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=C√¥te,_Laurence">
+          C√¥te, Laurence
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Cotlow,_Lewis">
@@ -2021,8 +2021,8 @@
           Courant, Curt
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Courant,_GÈrard">
-          Courant, GÈrard
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Courant,_G√©rard">
+          Courant, G√©rard
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Courcel,_Nicole">
@@ -2061,8 +2061,8 @@
           Couteau, Daniel
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=CouturiÈ,_Bill">
-          CouturiÈ, Bill
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Couturi√©,_Bill">
+          Couturi√©, Bill
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Covington,_Stephanie">
@@ -2281,8 +2281,8 @@
           Cruttwell, Greg
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Cruz,_PenÈlope">
-          Cruz, PenÈlope
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Cruz,_Pen√©lope">
+          Cruz, Pen√©lope
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Cruz,_Wilson">
@@ -2293,8 +2293,8 @@
           Crystal, Billy
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=CuarÛn,_Alfonso">
-          CuarÛn, Alfonso
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Cuar√≥n,_Alfonso">
+          Cuar√≥n, Alfonso
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Cuba_--_History_--_Revolution,_1959">
@@ -2389,8 +2389,8 @@
           Cushing, Peter
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=CussÛ-Ferrer,_Manuel">
-          CussÛ-Ferrer, Manuel
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Cuss√≥-Ferrer,_Manuel">
+          Cuss√≥-Ferrer, Manuel
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Cuthbertson,_Allan">
