--- a/WebContent/include/browsesubjDlist.jspf
+++ b/WebContent/include/browsesubjDlist.jspf
@@ -29,12 +29,12 @@
           Dacus, Don
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Dadiès,_Robert">
-          Dadiès, Robert
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=DadiÃ¨s,_Robert">
+          DadiÃ¨s, Robert
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Daëron,_Michel">
-          Daëron, Michel
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=DaÃ«ron,_Michel">
+          DaÃ«ron, Michel
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Dafoe,_Willem">
@@ -480,12 +480,12 @@
           De Lorenzo, Michael
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=de_Mandiargues,_André_Pieyre">
-          de Mandiargues, André Pieyre
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=de_Mandiargues,_AndrÃ©_Pieyre">
+          de Mandiargues, AndrÃ© Pieyre
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=de_Medeiros,_Inês">
-          de Medeiros, Inês
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=de_Medeiros,_InÃªs">
+          de Medeiros, InÃªs
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=de_Medeiros,_Maria">
@@ -536,8 +536,8 @@
           de Turenne, Henri
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=De_Vega,_José">
-          De Vega, José
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=De_Vega,_JosÃ©">
+          De Vega, JosÃ©
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=De_Weers,_Hans">
@@ -724,16 +724,16 @@
           Delon, Anthony
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Delorme,_Danièle">
-          Delorme, Danièle
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Delorme,_DaniÃ¨le">
+          Delorme, DaniÃ¨le
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=DeLuise,_Dom">
           DeLuise, Dom
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Delvaux,_André">
-          Delvaux, André
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Delvaux,_AndrÃ©">
+          Delvaux, AndrÃ©
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Demarest,_William">
@@ -752,8 +752,8 @@
           Demme, Jonathan
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Demongeot,_Mylène">
-          Demongeot, Mylène
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Demongeot,_MylÃ¨ne">
+          Demongeot, MylÃ¨ne
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Dempster,_Carol">
@@ -820,8 +820,8 @@
           Denyer, Jay
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Depardieu,_Gérard">
-          Depardieu, Gérard
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Depardieu,_GÃ©rard">
+          Depardieu, GÃ©rard
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Depardieu,_Guillaume">
@@ -1048,8 +1048,8 @@
           Dishy, Bob
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Disle,_Françoise">
-          Disle, Françoise
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Disle,_FranÃ§oise">
+          Disle, FranÃ§oise
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Disney,_Walt">
@@ -1128,8 +1128,8 @@
           Domingo, Placido
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Dominguín,_Louis_Miguel">
-          Dominguín, Louis Miguel
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=DominguÃ­n,_Louis_Miguel">
+          DominguÃ­n, Louis Miguel
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Dominique,_Jean_L._(Jean_Leopold)">
@@ -1184,8 +1184,8 @@
           Donnelly, Donal
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Donner,_Jörn">
-          Donner, Jörn
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Donner,_JÃ¶rn">
+          Donner, JÃ¶rn
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=D'Onofrio,_Vincent">
@@ -1232,20 +1232,20 @@
           Dore, Edna
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Dória,_Diogo">
-          Dória, Diogo
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=DÃ³ria,_Diogo">
+          DÃ³ria, Diogo
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Dorléac,_Françoise">
-          Dorléac, Françoise
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=DorlÃ©ac,_FranÃ§oise">
+          DorlÃ©ac, FranÃ§oise
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Dormael,_Jaco_van">
           Dormael, Jaco van
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Dörrie,_Doris">
-          Dörrie, Doris
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=DÃ¶rrie,_Doris">
+          DÃ¶rrie, Doris
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=D'Orsay,_Fifi">
@@ -1536,8 +1536,8 @@
           Dulac, Germaine
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Dumont,_José">
-          Dumont, José
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Dumont,_JosÃ©">
+          Dumont, JosÃ©
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Dun,_Tan">
@@ -1588,8 +1588,8 @@
           Dunne, Philip
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Dupont,_Ewald_André">
-          Dupont, Ewald André
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Dupont,_Ewald_AndrÃ©">
+          Dupont, Ewald AndrÃ©
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Duprez,_June">
@@ -1636,8 +1636,8 @@
           Duryea, Dan
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Dussollier,_André">
-          Dussollier, André
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Dussollier,_AndrÃ©">
+          Dussollier, AndrÃ©
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Dutton,_Anthony">
