--- a/WebContent/include/browsesubjElist.jspf
+++ b/WebContent/include/browsesubjElist.jspf
@@ -133,8 +133,8 @@
           Ekblad, Stina
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Ekman,_Gösta">
-          Ekman, Gösta
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Ekman,_GÃ¶sta">
+          Ekman, GÃ¶sta
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Elbert,_Ed">
@@ -173,8 +173,8 @@
           Elkabetz, Ronit
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Ellingsen,_María">
-          Ellingsen, María
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Ellingsen,_MarÃ­a">
+          Ellingsen, MarÃ­a
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Elliott,_Denholm">
@@ -281,12 +281,12 @@
           Epstein, Robert
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Erdöss,_Pál">
-          Erdöss, Pál
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=ErdÃ¶ss,_PÃ¡l">
+          ErdÃ¶ss, PÃ¡l
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Erice,_Víctor">
-          Erice, Víctor
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Erice,_VÃ­ctor">
+          Erice, VÃ­ctor
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Erickson,_C._O.">
