--- a/WebContent/include/browsesubjFlist.jspf
+++ b/WebContent/include/browsesubjFlist.jspf
@@ -9,8 +9,8 @@
           Fabian
           </a><br_/>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Fabian,_Françoise">
-          Fabian, Françoise
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Fabian,_FranÃ§oise">
+          Fabian, FranÃ§oise
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Fabre,_Marcel">
@@ -77,12 +77,12 @@
           Farber, Manny
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Färberböck,_Max">
-          Färberböck, Max
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=FÃ¤rberbÃ¶ck,_Max">
+          FÃ¤rberbÃ¶ck, Max
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Farges,_Joël">
-          Farges, Joël
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Farges,_JoÃ«l">
+          Farges, JoÃ«l
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Farina,_Dennis">
@@ -197,8 +197,8 @@
           Feld, Eliot
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Félix,_María">
-          Félix, María
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=FÃ©lix,_MarÃ­a">
+          FÃ©lix, MarÃ­a
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Fellini._Edited_by_Lietta_Tornabuoni_--_Reviews">
@@ -265,12 +265,12 @@
           Fernandez, Benjamin
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Fernández,_Esther">
-          Fernández, Esther
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=FernÃ¡ndez,_Esther">
+          FernÃ¡ndez, Esther
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Fernández,_Evelina">
-          Fernández, Evelina
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=FernÃ¡ndez,_Evelina">
+          FernÃ¡ndez, Evelina
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Ferran,_Pascale">
@@ -289,12 +289,12 @@
           Ferren, Bran
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Ferréol,_Andréa">
-          Ferréol, Andréa
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=FerrÃ©ol,_AndrÃ©a">
+          FerrÃ©ol, AndrÃ©a
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Ferrer,_José">
-          Ferrer, José
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Ferrer,_JosÃ©">
+          Ferrer, JosÃ©
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Ferrer,_Mel">
@@ -689,8 +689,8 @@
           Forbes, Ralph
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Forcier,_André">
-          Forcier, André
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Forcier,_AndrÃ©">
+          Forcier, AndrÃ©
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Ford,_Constance">
@@ -717,8 +717,8 @@
           Forest, Mark
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Forgács,_Péter">
-          Forgács, Péter
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=ForgÃ¡cs,_PÃ©ter">
+          ForgÃ¡cs, PÃ©ter
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Forman,_Milos">
@@ -729,8 +729,8 @@
           Forman, Milos.  Turnaround: a memoir
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Forqué,_Verónica">
-          Forqué, Verónica
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=ForquÃ©,_VerÃ³nica">
+          ForquÃ©, VerÃ³nica
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Forquet,_Philippe">
@@ -773,8 +773,8 @@
           Fosse, Bob
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Fosse,_Joël">
-          Fosse, Joël
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Fosse,_JoÃ«l">
+          Fosse, JoÃ«l
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Foster,_Alan_Dean">
@@ -1037,8 +1037,8 @@
           Freeman, Robert
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Freiss,_Stéphane">
-          Freiss, Stéphane
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Freiss,_StÃ©phane">
+          Freiss, StÃ©phane
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Fresnay,_Pierre">
@@ -1069,8 +1069,8 @@
           Fridman, Victor
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Fridriksson,_Fridrik_Thór">
-          Fridriksson, Fridrik Thór
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Fridriksson,_Fridrik_ThÃ³r">
+          Fridriksson, Fridrik ThÃ³r
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Friedberg,_Mark">
@@ -1113,24 +1113,24 @@
           Frizzell, Christian
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Fröbe,_Gert">
-          Fröbe, Gert
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=FrÃ¶be,_Gert">
+          FrÃ¶be, Gert
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Froemke,_Susan">
           Froemke, Susan
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Fróes,_Rogério">
-          Fróes, Rogério
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=FrÃ³es,_RogÃ©rio">
+          FrÃ³es, RogÃ©rio
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Fröhlich,_Gustav">
-          Fröhlich, Gustav
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=FrÃ¶hlich,_Gustav">
+          FrÃ¶hlich, Gustav
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Fröling,_Ewa">
-          Fröling, Ewa
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=FrÃ¶ling,_Ewa">
+          FrÃ¶ling, Ewa
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Frontiere,_Dominic">
@@ -1149,8 +1149,8 @@
           Frost, Sadie
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Früh,_Jessica">
-          Früh, Jessica
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=FrÃ¼h,_Jessica">
+          FrÃ¼h, Jessica
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Frutos,_Mercedes">
