--- a/WebContent/include/browsesubjGlist.jspf
+++ b/WebContent/include/browsesubjGlist.jspf
@@ -21,8 +21,8 @@
           Gabor, Eva
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Gábor,_Pál">
-          Gábor, Pál
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=GÃ¡bor,_PÃ¡l">
+          GÃ¡bor, PÃ¡l
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Gabor,_Zsa_Zsa">
@@ -61,8 +61,8 @@
           Gaisseau, Pierre-Dominique
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Galiana,_María">
-          Galiana, María
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Galiana,_MarÃ­a">
+          Galiana, MarÃ­a
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Galiena,_Anna">
@@ -121,28 +121,28 @@
           Garbo, Greta
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=García,_Esther">
-          García, Esther
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=GarcÃ­a,_Esther">
+          GarcÃ­a, Esther
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Garcia,_Jerry">
           Garcia, Jerry
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=García_Márquez,_Gabriel">
-          García Márquez, Gabriel
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=GarcÃ­a_MÃ¡rquez,_Gabriel">
+          GarcÃ­a MÃ¡rquez, Gabriel
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Garcia,_Nicole">
           Garcia, Nicole
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=García,_Roel_A.">
-          García, Roel A.
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=GarcÃ­a,_Roel_A.">
+          GarcÃ­a, Roel A.
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Garcia,_Stênio">
-          Garcia, Stênio
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Garcia,_StÃªnio">
+          Garcia, StÃªnio
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Gardel,_Louis">
@@ -169,8 +169,8 @@
           Gardner, Tony
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Gárdos,_Éva">
-          Gárdos, Éva
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=GÃ¡rdos,_Ã‰va">
+          GÃ¡rdos, Ã‰va
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Garfield,_Allen">
@@ -277,8 +277,8 @@
           Gauthier, Vincent
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Gavaldón,_Roberto">
-          Gavaldón, Roberto
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=GavaldÃ³n,_Roberto">
+          GavaldÃ³n, Roberto
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Gaviola,_Tatiana">
@@ -313,8 +313,8 @@
           Geer, Will
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Gégauff,_Paul">
-          Gégauff, Paul
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=GÃ©gauff,_Paul">
+          GÃ©gauff, Paul
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Gehr,_Ernie">
@@ -329,8 +329,8 @@
           Geiss, Tony
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Gélin,_Daniel">
-          Gélin, Daniel
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=GÃ©lin,_Daniel">
+          GÃ©lin, Daniel
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Geller,_Daniel">
@@ -345,8 +345,8 @@
           Gelmetti, Vittorio
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Gendron,_François-Eric">
-          Gendron, François-Eric
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Gendron,_FranÃ§ois-Eric">
+          Gendron, FranÃ§ois-Eric
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Genet,_Michael">
@@ -357,8 +357,8 @@
           Genn, Leo
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Gentit,_François">
-          Gentit, François
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Gentit,_FranÃ§ois">
+          Gentit, FranÃ§ois
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Geoffreys,_Stephen">
@@ -581,8 +581,8 @@
           Giorgiobiani, Edisher
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Girard,_François">
-          Girard, François
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Girard,_FranÃ§ois">
+          Girard, FranÃ§ois
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Giraud,_Bernadette">
@@ -661,8 +661,8 @@
           Globus, Yoram
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Glória,_Darlene">
-          Glória, Darlene
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=GlÃ³ria,_Darlene">
+          GlÃ³ria, Darlene
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Glover,_Brian">
@@ -685,8 +685,8 @@
           Glynn, Kathleen
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=gman_by_Stig_Björkman,_Torsten_Manns_[and]_Jonas_Sima">
-          gman by Stig Björkman, Torsten Manns [and] Jonas Sima
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=gman_by_Stig_BjÃ¶rkman,_Torsten_Manns_[and]_Jonas_Sima">
+          gman by Stig BjÃ¶rkman, Torsten Manns [and] Jonas Sima
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Gobbi,_Tito">
@@ -697,12 +697,12 @@
           Goberman, John
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Göbl,_Pavel">
-          Göbl, Pavel
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=GÃ¶bl,_Pavel">
+          GÃ¶bl, Pavel
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Godard,_Agnès">
-          Godard, Agnès
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Godard,_AgnÃ¨s">
+          Godard, AgnÃ¨s
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Godard,_Jean_Luc">
@@ -733,8 +733,8 @@
           Goebbels, Joseph
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Goël,_Véronique">
-          Goël, Véronique
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=GoÃ«l,_VÃ©ronique">
+          GoÃ«l, VÃ©ronique
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Goetz,_Scot">
@@ -837,12 +837,12 @@
           Gomes, Elza
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Gómez,_Fernando_Fernán">
-          Gómez, Fernando Fernán
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=GÃ³mez,_Fernando_FernÃ¡n">
+          GÃ³mez, Fernando FernÃ¡n
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Gómez,_Sara">
-          Gómez, Sara
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=GÃ³mez,_Sara">
+          GÃ³mez, Sara
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Gomis,_Alain">
@@ -1017,8 +1017,8 @@
           Granahan, Gerry
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Grandinetti,_Darío">
-          Grandinetti, Darío
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Grandinetti,_DarÃ­o">
+          Grandinetti, DarÃ­o
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Granger,_Farley">
@@ -1109,8 +1109,8 @@
           Grazioso, Claudia
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Greco,_José">
-          Greco, José
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Greco,_JosÃ©">
+          Greco, JosÃ©
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Green,_Alfred_E.">
@@ -1193,8 +1193,8 @@
           Greggory, Pascal
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Gregory,_André">
-          Gregory, André
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Gregory,_AndrÃ©">
+          Gregory, AndrÃ©
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Gregory,_John">
@@ -1285,8 +1285,8 @@
           Gronenborn, Esther
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Gröning,_Philip">
-          Gröning, Philip
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=GrÃ¶ning,_Philip">
+          GrÃ¶ning, Philip
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Groom,_Sam">
@@ -1361,8 +1361,8 @@
           Gudgeon, Sarah
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Guédiguian,_Robert">
-          Guédiguian, Robert
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=GuÃ©diguian,_Robert">
+          GuÃ©diguian, Robert
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Guerin,_Michel">
@@ -1461,8 +1461,8 @@
           Guy, Jasmine
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Guzmán,_Patricio">
-          Guzmán, Patricio
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=GuzmÃ¡n,_Patricio">
+          GuzmÃ¡n, Patricio
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Gwenn,_Edmund">
