--- a/WebContent/include/browsesubjHlist.jspf
+++ b/WebContent/include/browsesubjHlist.jspf
@@ -281,8 +281,8 @@
           Hanulcik, Carol
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Hanzlík,_Jaromír">
-          Hanzlík, Jaromír
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=HanzlÃ­k,_JaromÃ­r">
+          HanzlÃ­k, JaromÃ­r
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Hara,_Setsuko">
@@ -573,8 +573,8 @@
           Hayakawa, Sessue
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Hayashi,_Kaizô">
-          Hayashi, Kaizô
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Hayashi,_KaizÃ´">
+          Hayashi, KaizÃ´
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Hayden,_Maria">
@@ -877,12 +877,12 @@
           Heroes -- United States
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Hérouet,_Marc">
-          Hérouet, Marc
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=HÃ©rouet,_Marc">
+          HÃ©rouet, Marc
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Héroux,_Denis">
-          Héroux, Denis
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=HÃ©roux,_Denis">
+          HÃ©roux, Denis
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Herr,_Michael">
@@ -1269,8 +1269,8 @@
           Homage a Ingmar Bergman (Film series)
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Homar,_Lluís">
-          Homar, Lluís
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Homar,_LluÃ­s">
+          Homar, LluÃ­s
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Homeier,_Skip">
@@ -1289,8 +1289,8 @@
           Homosexuality in motion pictures
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Honda,_Ishirô">
-          Honda, Ishirô
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Honda,_IshirÃ´">
+          Honda, IshirÃ´
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Hong,_James">
@@ -1501,8 +1501,8 @@
           Hubley, John
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Hübner,_Christoph">
-          Hübner, Christoph
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=HÃ¼bner,_Christoph">
+          HÃ¼bner, Christoph
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Huddles,_John">
@@ -1581,8 +1581,8 @@
           Hui So-ying
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Huillet,_Danièle">
-          Huillet, Danièle
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Huillet,_DaniÃ¨le">
+          Huillet, DaniÃ¨le
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Hulce,_Tom">
