--- a/WebContent/include/browsesubjIlist.jspf
+++ b/WebContent/include/browsesubjIlist.jspf
@@ -5,8 +5,8 @@
           Ibsen, Henrik, 1828-1906.  Peer Gynt
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Ibu,_MasatÙ">
-          Ibu, MasatÙ
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Ibu,_Masat√¥">
+          Ibu, Masat√¥
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Ice_Cube">
@@ -93,8 +93,8 @@
           Immemory [CD-ROMs]
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=IÒ·rritu,_Alejandro_Gonz·les">
-          IÒ·rritu, Alejandro Gonz·les
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=I√±√°rritu,_Alejandro_Gonz√°les">
+          I√±√°rritu, Alejandro Gonz√°les
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Ince,_John">
