--- a/WebContent/include/browsesubjJlist.jspf
+++ b/WebContent/include/browsesubjJlist.jspf
@@ -1,8 +1,8 @@
       <div id='browselist' name='browselist'>
         <table id='browseTable' name='browseTable'>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Jabór,_Arnaldo">
-          Jabór, Arnaldo
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=JabÃ³r,_Arnaldo">
+          JabÃ³r, Arnaldo
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Jackness,_Andrew">
@@ -61,8 +61,8 @@
           Jacopetti, Gualtiero
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Jacquot,_Benoît">
-          Jacquot, Benoît
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Jacquot,_BenoÃ®t">
+          Jacquot, BenoÃ®t
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Jaeger,_Frederick">
@@ -105,8 +105,8 @@
           Jakubisko, Juraj
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Jaløiløi,_Abøu_al-Fazl">
-          Jaløiløi, Abøu al-Fazl
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=JalÃ¸ilÃ¸i,_AbÃ¸u_al-Fazl">
+          JalÃ¸ilÃ¸i, AbÃ¸u al-Fazl
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=James_Bond_in_films">
@@ -133,8 +133,8 @@
           Jameson, Joyce
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Jancsó,_Miklós">
-          Jancsó, Miklós
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=JancsÃ³,_MiklÃ³s">
+          JancsÃ³, MiklÃ³s
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Janczar,_Tadeusz">
@@ -169,8 +169,8 @@
           Janssen, David
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Janzurová,_Iva">
-          Janzurová, Iva
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=JanzurovÃ¡,_Iva">
+          JanzurovÃ¡, Iva
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Japan_--_Economic_conditions_--_1912-1945">
@@ -181,8 +181,8 @@
           Japan in motion pictures
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Järegård,_Ernst-Hugo">
-          Järegård, Ernst-Hugo
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=JÃ¤regÃ¥rd,_Ernst-Hugo">
+          JÃ¤regÃ¥rd, Ernst-Hugo
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Jarman,_Claude,">
@@ -213,8 +213,8 @@
           Jashni, Jon J.
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Jasný,_Vojtech">
-          Jasný, Vojtech
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=JasnÃ½,_Vojtech">
+          JasnÃ½, Vojtech
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Jason,_Peter">
@@ -289,8 +289,8 @@
           Jeffries, Lionel
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Jeles,_András">
-          Jeles, András
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Jeles,_AndrÃ¡s">
+          Jeles, AndrÃ¡s
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Jenet,_Veronika">
@@ -677,8 +677,8 @@
           Jurado, Katy
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Jürgens,_Curd">
-          Jürgens, Curd
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=JÃ¼rgens,_Curd">
+          JÃ¼rgens, Curd
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Jurgenson,_Albert">
