--- a/WebContent/include/browsesubjLlist.jspf
+++ b/WebContent/include/browsesubjLlist.jspf
@@ -109,12 +109,12 @@
           Lakshmi
           </a><br_/>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Laliberté,_Roger">
-          Laliberté, Roger
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=LalibertÃ©,_Roger">
+          LalibertÃ©, Roger
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Laloux,_René">
-          Laloux, René
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Laloux,_RenÃ©">
+          Laloux, RenÃ©
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Lam,_Wood">
@@ -485,8 +485,8 @@
           Lease, Rex
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Léaud,_Jeanne-Pierre">
-          Léaud, Jeanne-Pierre
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=LÃ©aud,_Jeanne-Pierre">
+          LÃ©aud, Jeanne-Pierre
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=LeBlanc,_Matt">
@@ -785,16 +785,16 @@
           Leontovich, Eugenie
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Léotard,_Philippe">
-          Léotard, Philippe
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=LÃ©otard,_Philippe">
+          LÃ©otard, Philippe
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Lepcynski,_Patrick">
           Lepcynski, Patrick
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Lépine,_Jean">
-          Lépine, Jean
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=LÃ©pine,_Jean">
+          LÃ©pine, Jean
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Lepselter,_Alisa">
@@ -1121,8 +1121,8 @@
           Lindsey, Joseph
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Lindström,_Fredrik">
-          Lindström, Fredrik
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=LindstrÃ¶m,_Fredrik">
+          LindstrÃ¶m, Fredrik
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Lineweaver,_Stephen_J.">
@@ -1137,8 +1137,8 @@
           Linson, Art
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Liotard,_Thérèse">
-          Liotard, Thérèse
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Liotard,_ThÃ©rÃ¨se">
+          Liotard, ThÃ©rÃ¨se
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Lipp,_Jeremy">
@@ -1393,16 +1393,16 @@
           Lopez, Sylvia
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=López_Tarso,_Ignacio">
-          López Tarso, Ignacio
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=LÃ³pez_Tarso,_Ignacio">
+          LÃ³pez Tarso, Ignacio
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Lopez,_Willie">
           Lopez, Willie
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=López-Linares,_José_Luis">
-          López-Linares, José Luis
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=LÃ³pez-Linares,_JosÃ©_Luis">
+          LÃ³pez-Linares, JosÃ© Luis
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Loquasto,_Santo">
@@ -1513,8 +1513,8 @@
           Lowery, Robert
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Löwitsch,_Klaus">
-          Löwitsch, Klaus
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=LÃ¶witsch,_Klaus">
+          LÃ¶witsch, Klaus
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Lowry,_Lynn">
@@ -1529,8 +1529,8 @@
           Loya, Marcos
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Lozano,_José_Luis">
-          Lozano, José Luis
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Lozano,_JosÃ©_Luis">
+          Lozano, JosÃ© Luis
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Lu,_Lisa">
