--- a/WebContent/include/browsesubjMlist.jspf
+++ b/WebContent/include/browsesubjMlist.jspf
@@ -213,8 +213,8 @@
           Maino, Maria Paola
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Mairesse,_Valérie">
-          Mairesse, Valérie
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Mairesse,_ValÃ©rie">
+          Mairesse, ValÃ©rie
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Maitland,_Marne">
@@ -253,8 +253,8 @@
           Makhmalbaf, Samira
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Makk,_Károly">
-          Makk, Károly
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Makk,_KÃ¡roly">
+          Makk, KÃ¡roly
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Makuloluwa,_W._B.">
@@ -309,8 +309,8 @@
           Malmros, Nils
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Malmsjö,_Jan">
-          Malmsjö, Jan
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=MalmsjÃ¶,_Jan">
+          MalmsjÃ¶, Jan
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Malone,_Dorothy">
@@ -509,8 +509,8 @@
           Marielle, Jean-Pierre
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Mariën,_Marcel">
-          Mariën, Marcel
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=MariÃ«n,_Marcel">
+          MariÃ«n, Marcel
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Marika,_Wandjuk">
@@ -685,8 +685,8 @@
           Martineau, Monique
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Martínez,_Fele">
-          Martínez, Fele
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=MartÃ­nez,_Fele">
+          MartÃ­nez, Fele
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Martinez,_Narciso">
@@ -757,12 +757,12 @@
           Massey, Raymond
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Massine,_Léonide">
-          Massine, Léonide
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Massine,_LÃ©onide">
+          Massine, LÃ©onide
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Massip,_José">
-          Massip, José
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Massip,_JosÃ©">
+          Massip, JosÃ©
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Masson,_Laetitia">
@@ -1397,8 +1397,8 @@
           Melchior, Ib
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Méliès,_Georges">
-          Méliès, Georges
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=MÃ©liÃ¨s,_Georges">
+          MÃ©liÃ¨s, Georges
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Mell,_Marisa">
@@ -1445,8 +1445,8 @@
           Menyuk, Eric
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Menzel,_Jirí">
-          Menzel, Jirí
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Menzel,_JirÃ­">
+          Menzel, JirÃ­
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Menzies,_William_Cameron">
@@ -1465,8 +1465,8 @@
           Merchant, Ismail
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Mercier,_Michèle">
-          Mercier, Michèle
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Mercier,_MichÃ¨le">
+          Mercier, MichÃ¨le
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Mercouri,_Melina">
@@ -1485,8 +1485,8 @@
           Meredith, Lu Anne
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Méril,_Macha">
-          Méril, Macha
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=MÃ©ril,_Macha">
+          MÃ©ril, Macha
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Merkel,_Una">
@@ -1497,8 +1497,8 @@
           Merkerson, S. Epatha
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Merlet,_Agnès">
-          Merlet, Agnès
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Merlet,_AgnÃ¨s">
+          Merlet, AgnÃ¨s
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Merlin,_Serge">
@@ -1537,8 +1537,8 @@
           Messing, Debra
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Mészáros,_Márta">
-          Mészáros, Márta
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=MÃ©szÃ¡ros,_MÃ¡rta">
+          MÃ©szÃ¡ros, MÃ¡rta
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Metaphor">
@@ -1629,8 +1629,8 @@
           Midler, Bette
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Mifune,_Toshirô">
-          Mifune, Toshirô
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Mifune,_ToshirÃ´">
+          Mifune, ToshirÃ´
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Migenes-Johnson,_Julia">
@@ -1825,8 +1825,8 @@
           Minnelli, Vincente
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Miñon,_Juan">
-          Miñon, Juan
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=MiÃ±on,_Juan">
+          MiÃ±on, Juan
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Minorities_in_motion_pictures">
@@ -1937,8 +1937,8 @@
           Mitsuko
           </a><br_/>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Mitterand,_François">
-          Mitterand, François
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Mitterand,_FranÃ§ois">
+          Mitterand, FranÃ§ois
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Miyagawa,_Kazuo">
@@ -1981,8 +1981,8 @@
           Mograbi, Avi
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Möhner,_Carl">
-          Möhner, Carl
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=MÃ¶hner,_Carl">
+          MÃ¶hner, Carl
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Mohr,_Jay">
@@ -2041,8 +2041,8 @@
           Monaghan, Tish
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Monette,_Jean-François">
-          Monette, Jean-François
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Monette,_Jean-FranÃ§ois">
+          Monette, Jean-FranÃ§ois
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Monfort,_Silvia">
@@ -2233,8 +2233,8 @@
           Morita, Yoshimitsu
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Mørk,_Erik">
-          Mørk, Erik
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=MÃ¸rk,_Erik">
+          MÃ¸rk, Erik
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Morley,_Kay">
@@ -2817,8 +2817,8 @@
           Motorcycles in motion pictures
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Motta,_Zezé">
-          Motta, Zezé
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Motta,_ZezÃ©">
+          Motta, ZezÃ©
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Moullet,_Luc">
@@ -2897,8 +2897,8 @@
           Mullaney, Jack
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Müller,_Robby">
-          Müller, Robby
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=MÃ¼ller,_Robby">
+          MÃ¼ller, Robby
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Muneer,_Mohammad">
@@ -2909,8 +2909,8 @@
           Muni, Paul
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Muñoz,_Susana_Blaustein">
-          Muñoz, Susana Blaustein
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=MuÃ±oz,_Susana_Blaustein">
+          MuÃ±oz, Susana Blaustein
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Munro,_Alan">
@@ -2941,8 +2941,8 @@
           Murase, Sachiko
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Murat,_Lúcia">
-          Murat, Lúcia
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Murat,_LÃºcia">
+          Murat, LÃºcia
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Muratova,_Kira">
