--- a/WebContent/include/browsesubjNlist.jspf
+++ b/WebContent/include/browsesubjNlist.jspf
@@ -5,8 +5,8 @@
           Naderi, Amir
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Nadjari,_Raphaël">
-          Nadjari, Raphaël
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Nadjari,_RaphaÃ«l">
+          Nadjari, RaphaÃ«l
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Naegelen,_Nicolas">
@@ -57,8 +57,8 @@
           Nascimento, Milton
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Nat,_Marie-José">
-          Nat, Marie-José
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Nat,_Marie-JosÃ©">
+          Nat, Marie-JosÃ©
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Nation,_Terry">
@@ -401,8 +401,8 @@
           Nimoy, Leonard
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Nin,_Anaïs">
-          Nin, Anaïs
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Nin,_AnaÃ¯s">
+          Nin, AnaÃ¯s
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Nine_nights_of_Bergman_(Film_series)">
@@ -437,20 +437,20 @@
           Nocella, Giorgio
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Noè,_Francesca">
-          Noè, Francesca
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=NoÃ¨,_Francesca">
+          NoÃ¨, Francesca
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Noé,_Gaspar">
-          Noé, Gaspar
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=NoÃ©,_Gaspar">
+          NoÃ©, Gaspar
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Noel,_Magali">
           Noel, Magali
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Noël-Noël">
-          Noël-Noël
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=NoÃ«l-NoÃ«l">
+          NoÃ«l-NoÃ«l
           </a><br_/>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Nogami,_Teruyo">
@@ -569,8 +569,8 @@
           Nucci, Danny
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Nüchtern,_Rüdiger">
-          Nüchtern, Rüdiger
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=NÃ¼chtern,_RÃ¼diger">
+          NÃ¼chtern, RÃ¼diger
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Nugent,_Ginny">
