--- a/WebContent/include/browsesubjOlist.jspf
+++ b/WebContent/include/browsesubjOlist.jspf
@@ -161,8 +161,8 @@
           Oki, Hiroyuki
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Ólafsson,_Egill">
-          Ólafsson, Egill
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Ã“lafsson,_Egill">
+          Ã“lafsson, Egill
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Olbrychski,_Daniel">
@@ -181,8 +181,8 @@
           O'Leary, Celine
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Oler,_Jérémie">
-          Oler, Jérémie
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Oler,_JÃ©rÃ©mie">
+          Oler, JÃ©rÃ©mie
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Olin,_Lena">
@@ -241,8 +241,8 @@
           Ondaatje, Michael
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Ondrícek,_Miroslav">
-          Ondrícek, Miroslav
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=OndrÃ­cek,_Miroslav">
+          OndrÃ­cek, Miroslav
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=O'Neal,_Patrick">
@@ -309,16 +309,16 @@
           Operation Neptune
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Ophüls,_Marcel">
-          Ophüls, Marcel
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=OphÃ¼ls,_Marcel">
+          OphÃ¼ls, Marcel
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Ophüls,_Marcel._Sorrow_and_the_pity_--_Reviews">
-          Ophüls, Marcel. Sorrow and the pity -- Reviews
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=OphÃ¼ls,_Marcel._Sorrow_and_the_pity_--_Reviews">
+          OphÃ¼ls, Marcel. Sorrow and the pity -- Reviews
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Ophüls,_Max">
-          Ophüls, Max
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=OphÃ¼ls,_Max">
+          OphÃ¼ls, Max
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Opper,_Barry">
@@ -461,12 +461,12 @@
           Oxenberg, Catherine
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Özkan,_Yavuz">
-          Özkan, Yavuz
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Ã–zkan,_Yavuz">
+          Ã–zkan, Yavuz
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Ozon,_François">
-          Ozon, François
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Ozon,_FranÃ§ois">
+          Ozon, FranÃ§ois
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Ozu,_Yasujiro">
