--- a/WebContent/include/browsesubjPlist.jspf
+++ b/WebContent/include/browsesubjPlist.jspf
@@ -21,8 +21,8 @@
           Paez, Fito
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Page,_Geneviève">
-          Page, Geneviève
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Page,_GeneviÃ¨ve">
+          Page, GeneviÃ¨ve
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Page,_Jimmy">
@@ -57,8 +57,8 @@
           Painting -- France -- Grenoble
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Pajares,_Andrés">
-          Pajares, Andrés
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Pajares,_AndrÃ©s">
+          Pajares, AndrÃ©s
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Pakula,_Alan_J.">
@@ -481,8 +481,8 @@
           Peggy Sue
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Peixoto,_Mário">
-          Peixoto, Mário
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Peixoto,_MÃ¡rio">
+          Peixoto, MÃ¡rio
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Pekar,_Harvey">
@@ -505,16 +505,16 @@
           Pellegrin, Jean-Pierre
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Pellonpää,_Matti">
-          Pellonpää, Matti
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=PellonpÃ¤Ã¤,_Matti">
+          PellonpÃ¤Ã¤, Matti
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Peña,_Candela">
-          Peña, Candela
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=PeÃ±a,_Candela">
+          PeÃ±a, Candela
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Peña,_Elizabeth">
-          Peña, Elizabeth
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=PeÃ±a,_Elizabeth">
+          PeÃ±a, Elizabeth
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Penderecki,_Krzysztof">
@@ -605,24 +605,24 @@
           Perelman, S. J.
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Pérez_Galdós,_Benito">
-          Pérez Galdós, Benito
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=PÃ©rez_GaldÃ³s,_Benito">
+          PÃ©rez GaldÃ³s, Benito
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Perez,_Rosie">
           Perez, Rosie
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Pérez,_Severo">
-          Pérez, Severo
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=PÃ©rez,_Severo">
+          PÃ©rez, Severo
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Périer,_François">
-          Périer, François
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=PÃ©rier,_FranÃ§ois">
+          PÃ©rier, FranÃ§ois
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Périer,_Jean-Marie">
-          Périer, Jean-Marie
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=PÃ©rier,_Jean-Marie">
+          PÃ©rier, Jean-Marie
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Perkins,_Anthony">
@@ -697,8 +697,8 @@
           Persoff, Nehemiah
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Persson,_Göran">
-          Persson, Göran
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Persson,_GÃ¶ran">
+          Persson, GÃ¶ran
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Pesce,_Domenico">
@@ -725,8 +725,8 @@
           Peter
           </a><br_/>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Péterffy,_András">
-          Péterffy, András
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=PÃ©terffy,_AndrÃ¡s">
+          PÃ©terffy, AndrÃ¡s
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Peterman,_Don">
@@ -777,8 +777,8 @@
           Petroff, Boris
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Pétron,_Christian">
-          Pétron, Christian
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=PÃ©tron,_Christian">
+          PÃ©tron, Christian
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Petronzio,_Nina">
@@ -809,8 +809,8 @@
           Philibert, Nicolas
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Philipe,_Gérard">
-          Philipe, Gérard
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Philipe,_GÃ©rard">
+          Philipe, GÃ©rard
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Phillippe,_Ryan">
@@ -921,8 +921,8 @@
           Pinter, Harold
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Pinto,_José">
-          Pinto, José
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Pinto,_JosÃ©">
+          Pinto, JosÃ©
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Pirosmanashvili,_Niko">
@@ -1013,8 +1013,8 @@
           Plunket, Robert
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Podalydès,_Denis">
-          Podalydès, Denis
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=PodalydÃ¨s,_Denis">
+          PodalydÃ¨s, Denis
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Poe,_Curt">
@@ -1089,8 +1089,8 @@
           Politics in motion pictures
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Politoff,_Haydée">
-          Politoff, Haydée
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Politoff,_HaydÃ©e">
+          Politoff, HaydÃ©e
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Pollack,_Bernie">
@@ -1149,8 +1149,8 @@
           Pommer, Erich
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Pons,_María_Antonieta">
-          Pons, María Antonieta
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Pons,_MarÃ­a_Antonieta">
+          Pons, MarÃ­a Antonieta
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Pons,_Ventura">
@@ -1165,8 +1165,8 @@
           Ponti, Carlo
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Pool,_Léa">
-          Pool, Léa
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Pool,_LÃ©a">
+          Pool, LÃ©a
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Pope,_Bill">
@@ -1233,8 +1233,8 @@
           Porto, Paulo
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Pöschl,_Hanno">
-          Pöschl, Hanno
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=PÃ¶schl,_Hanno">
+          PÃ¶schl, Hanno
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Posner,_Bruce">
@@ -1249,8 +1249,8 @@
           Potocki, Jan
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Potocki,_Jan,_hrabia,_1761-1815._Manuscrit_trouvé_à_Saragosse">
-          Potocki, Jan, hrabia, 1761-1815. Manuscrit trouvé à Saragosse
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Potocki,_Jan,_hrabia,_1761-1815._Manuscrit_trouvÃ©_Ã _Saragosse">
+          Potocki, Jan, hrabia, 1761-1815. Manuscrit trouvÃ© Ã  Saragosse
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Potter,_Dennis">
@@ -1329,8 +1329,8 @@
           Preminger, Otto
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Prenant,_Françoise">
-          Prenant, Françoise
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Prenant,_FranÃ§oise">
+          Prenant, FranÃ§oise
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Preobrazhenskaya,_Olga">
@@ -1429,8 +1429,8 @@
           Procacci, Domenico
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Procházka,_Jan">
-          Procházka, Jan
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=ProchÃ¡zka,_Jan">
+          ProchÃ¡zka, Jan
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Professor_Longhair,">
