--- a/WebContent/include/browsesubjRlist.jspf
+++ b/WebContent/include/browsesubjRlist.jspf
@@ -373,8 +373,8 @@
           Recco, Donna-Marie
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Redbone,_Léon">
-          Redbone, Léon
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Redbone,_LÃ©on">
+          Redbone, LÃ©on
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Redford,_Ian">
@@ -413,8 +413,8 @@
           Reed, Oliver
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Reenberg,_Jørgen">
-          Reenberg, Jørgen
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Reenberg,_JÃ¸rgen">
+          Reenberg, JÃ¸rgen
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Reeves,_George">
@@ -437,24 +437,24 @@
           Reeves, Steve
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Régent,_Benoît">
-          Régent, Benoît
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=RÃ©gent,_BenoÃ®t">
+          RÃ©gent, BenoÃ®t
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Regina,_Paul">
           Regina, Paul
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Régnier,_Natacha">
-          Régnier, Natacha
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=RÃ©gnier,_Natacha">
+          RÃ©gnier, Natacha
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Reichel,_Stephane">
           Reichel, Stephane
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Reichenbach,_François">
-          Reichenbach, François
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Reichenbach,_FranÃ§ois">
+          Reichenbach, FranÃ§ois
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Reid,_Kate">
@@ -489,16 +489,16 @@
           Reinking, Ann
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Reis,_António">
-          Reis, António
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Reis,_AntÃ³nio">
+          Reis, AntÃ³nio
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Reis,_Irving">
           Reis, Irving
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Reisch,_Günter">
-          Reisch, Günter
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Reisch,_GÃ¼nter">
+          Reisch, GÃ¼nter
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Reitman,_Ivan">
@@ -757,8 +757,8 @@
           Riddiford, Richard
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Rideau,_Stéphane">
-          Rideau, Stéphane
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Rideau,_StÃ©phane">
+          Rideau, StÃ©phane
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Riebl,_Michael">
@@ -845,24 +845,24 @@
           Riva, Emmanuelle
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Rivera,_Tomás">
-          Rivera, Tomás
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Rivera,_TomÃ¡s">
+          Rivera, TomÃ¡s
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Rivette,_Jacques">
           Rivette, Jacques
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Rivière,_Georges">
-          Rivière, Georges
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=RiviÃ¨re,_Georges">
+          RiviÃ¨re, Georges
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Rivière,_Marie">
-          Rivière, Marie
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=RiviÃ¨re,_Marie">
+          RiviÃ¨re, Marie
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Rizal,_José">
-          Rizal, José
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Rizal,_JosÃ©">
+          Rizal, JosÃ©
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Rizzo,_Giacomo">
@@ -1021,8 +1021,8 @@
           Rodgers, Michael E.
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Rödl,_Josef">
-          Rödl, Josef
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=RÃ¶dl,_Josef">
+          RÃ¶dl, Josef
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Rodnjanskij,_Aleksandr">
@@ -1033,8 +1033,8 @@
           Rodrigues, Nelson
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Rodríguez,_Marco">
-          Rodríguez, Marco
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=RodrÃ­guez,_Marco">
+          RodrÃ­guez, Marco
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Rodriguez,_Michelle">
@@ -1049,8 +1049,8 @@
           Roehler, Oskar
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Roëves,_Maurice">
-          Roëves, Maurice
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=RoÃ«ves,_Maurice">
+          RoÃ«ves, Maurice
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Rogers,_Alva">
@@ -1073,12 +1073,12 @@
           Rohdie, Sam.  Antonioni - Reviews
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Rohmer,_Éric">
-          Rohmer, Éric
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Rohmer,_Ã‰ric">
+          Rohmer, Ã‰ric
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Rohrbach,_Günter">
-          Rohrbach, Günter
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Rohrbach,_GÃ¼nter">
+          Rohrbach, GÃ¼nter
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Roizman,_Owen">
@@ -1117,8 +1117,8 @@
           Roman, Ruth
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Romand,_Béatrice">
-          Romand, Béatrice
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Romand,_BÃ©atrice">
+          Romand, BÃ©atrice
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Romania_--_Princes_and_princesses">
@@ -1189,8 +1189,8 @@
           Rory, Rosanna
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Rosa,_João_Guimarães">
-          Rosa, João Guimarães
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Rosa,_JoÃ£o_GuimarÃ£es">
+          Rosa, JoÃ£o GuimarÃ£es
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Rose,_Bernard">
