--- a/WebContent/include/browsesubjSlist.jspf
+++ b/WebContent/include/browsesubjSlist.jspf
@@ -97,8 +97,8 @@
           Sakamoto, Sumiko
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Salcedo,_JosÈ">
-          Salcedo, JosÈ
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Salcedo,_Jos√©">
+          Salcedo, Jos√©
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Salieri,_Antonio">
@@ -137,8 +137,8 @@
           Salo, Elina
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=SalomÈ,_Jean-Paul">
-          SalomÈ, Jean-Paul
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Salom√©,_Jean-Paul">
+          Salom√©, Jean-Paul
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Salomon,_Mikael">
@@ -301,12 +301,12 @@
           Santos, John
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Santos,_NÈlson_Pereira_dos">
-          Santos, NÈlson Pereira dos
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Santos,_N√©lson_Pereira_dos">
+          Santos, N√©lson Pereira dos
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Sanz,_Carlos_RodrÌguez">
-          Sanz, Carlos RodrÌguez
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Sanz,_Carlos_Rodr√≠guez">
+          Sanz, Carlos Rodr√≠guez
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Saparov,_Usman">
@@ -325,16 +325,16 @@
           Sarcey, Martine
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Sard‡,_Rosa_MarÌa">
-          Sard‡, Rosa MarÌa
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Sard√†,_Rosa_Mar√≠a">
+          Sard√†, Rosa Mar√≠a
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Sargent,_Alvin">
           Sargent, Alvin
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Sarmiento,_ValÈria">
-          Sarmiento, ValÈria
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Sarmiento,_Val√©ria">
+          Sarmiento, Val√©ria
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Sarsgaard,_Peter">
@@ -489,8 +489,8 @@
           Schidor, Dieter
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Schiffer,_P·l">
-          Schiffer, P·l
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Schiffer,_P√°l">
+          Schiffer, P√°l
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Schiffman,_Suzanne">
@@ -525,8 +525,8 @@
           Schlesinger, John
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Schlˆndorff,_Volker">
-          Schlˆndorff, Volker
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Schl√∂ndorff,_Volker">
+          Schl√∂ndorff, Volker
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Schmeer,_Karen">
@@ -617,8 +617,8 @@
           Schroeter, Werner
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Sch¸hly,_Thomas">
-          Sch¸hly, Thomas
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Sch√ºhly,_Thomas">
+          Sch√ºhly, Thomas
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Schulberg,_Budd">
@@ -641,8 +641,8 @@
           Schumann, Tamar
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Sch¸pbach,_Marcel">
-          Sch¸pbach, Marcel
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Sch√ºpbach,_Marcel">
+          Sch√ºpbach, Marcel
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Schuster,_Harold_D.">
@@ -821,8 +821,8 @@
           Seidl, Ulrich
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Seigner,_FranÁoise">
-          Seigner, FranÁoise
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Seigner,_Fran√ßoise">
+          Seigner, Fran√ßoise
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Seigner,_Mathilde">
@@ -865,12 +865,12 @@
           Sembene, Carrie D.
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=SembËne,_Ousmane">
-          SembËne, Ousmane
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Semb√®ne,_Ousmane">
+          Semb√®ne, Ousmane
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=SembËne,_Ousmane,_1923-2007._Xala_--_Reviews">
-          SembËne, Ousmane, 1923-2007. Xala -- Reviews
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Semb√®ne,_Ousmane,_1923-2007._Xala_--_Reviews">
+          Semb√®ne, Ousmane, 1923-2007. Xala -- Reviews
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Semel,_Stephen">
@@ -945,12 +945,12 @@
           Setterfield, Valda
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Sevigny,_ChloÎ">
-          Sevigny, ChloÎ
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Sevigny,_Chlo√´">
+          Sevigny, Chlo√´
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Sevilla,_NinÛn">
-          Sevilla, NinÛn
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Sevilla,_Nin√≥n">
+          Sevilla, Nin√≥n
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Seward,_Chris">
@@ -1373,8 +1373,8 @@
           Silent films -- Netherlands -- History
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Sillanp‰‰,_Frans_Eemil">
-          Sillanp‰‰, Frans Eemil
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Sillanp√§√§,_Frans_Eemil">
+          Sillanp√§√§, Frans Eemil
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Silva,_Henry">
@@ -1461,8 +1461,8 @@
           Simon, Claire
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Simon,_GwenaÎlle">
-          Simon, GwenaÎlle
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Simon,_Gwena√´lle">
+          Simon, Gwena√´lle
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Simon,_Neil">
@@ -1541,8 +1541,8 @@
           Sirotek, Jiri
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Sistiaga,_JosÈ_Antonio">
-          Sistiaga, JosÈ Antonio
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Sistiaga,_Jos√©_Antonio">
+          Sistiaga, Jos√© Antonio
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Sithole,_Mabutho_Kid">
@@ -1557,24 +1557,24 @@
           Sizemore, Tom
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Sjˆberg,_Alf">
-          Sjˆberg, Alf
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Sj√∂berg,_Alf">
+          Sj√∂berg, Alf
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Sjˆberg,_Tore">
-          Sjˆberg, Tore
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Sj√∂berg,_Tore">
+          Sj√∂berg, Tore
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Sjˆstrˆm,_Victor">
-          Sjˆstrˆm, Victor
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Sj√∂str√∂m,_Victor">
+          Sj√∂str√∂m, Victor
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Skager,_Mona">
           Skager, Mona
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=SkarsgÂrd,_Stellan">
-          SkarsgÂrd, Stellan
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Skarsg√•rd,_Stellan">
+          Skarsg√•rd, Stellan
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Skeeter">
@@ -1769,8 +1769,8 @@
           Solanis, Valerie
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Sol·s,_Humberto">
-          Sol·s, Humberto
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Sol√°s,_Humberto">
+          Sol√°s, Humberto
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Soldati,_Giovanni">
@@ -1845,8 +1845,8 @@
           Sonnenfeld, Barry
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Sopsits,_¡rp·d">
-          Sopsits, ¡rp·d
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Sopsits,_√Årp√°d">
+          Sopsits, √Årp√°d
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Sordi,_Alberto">
@@ -2193,8 +2193,8 @@
           Stepanova, Angelina
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=StÈphane,_Nicole">
-          StÈphane, Nicole
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=St√©phane,_Nicole">
+          St√©phane, Nicole
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Stephane,_Roger">
@@ -2221,8 +2221,8 @@
           Sternberg, Tom
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=StÈvenin,_Jean-FranÁois">
-          StÈvenin, Jean-FranÁois
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=St√©venin,_Jean-Fran√ßois">
+          St√©venin, Jean-Fran√ßois
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Stevens,_Andrew">
@@ -2429,8 +2429,8 @@
           Strouth, Jeffrey
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=StrouvÈ,_Georges">
-          StrouvÈ, Georges
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Strouv√©,_Georges">
+          Strouv√©, Georges
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Strummer,_Joe">
@@ -2517,8 +2517,8 @@
           Stypulkowska, Krystyna
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Su·rez,_JosÈ">
-          Su·rez, JosÈ
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Su√°rez,_Jos√©">
+          Su√°rez, Jos√©
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Suarez,_Ramon">
@@ -2717,8 +2717,8 @@
           Sy, Brigitte
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Syberberg,_Hans_J¸rgen">
-          Syberberg, Hans J¸rgen
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Syberberg,_Hans_J√ºrgen">
+          Syberberg, Hans J√ºrgen
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Sydney,_Basil">
@@ -2737,8 +2737,8 @@
           Symbolism
           </a><br_/>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=SzabÛ,_Istv·n">
-          SzabÛ, Istv·n
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Szab√≥,_Istv√°n">
+          Szab√≥, Istv√°n
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Szubanski,_Magda">
