--- a/WebContent/include/browsesubjTlist.jspf
+++ b/WebContent/include/browsesubjTlist.jspf
@@ -5,8 +5,8 @@
           Tabakov, Oleg
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Tabío,_Juan_Carlos">
-          Tabío, Juan Carlos
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=TabÃ­o,_Juan_Carlos">
+          TabÃ­o, Juan Carlos
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Tabori,_Kristoffer">
@@ -149,8 +149,8 @@
           Tanner, Alain
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Tanner,_Cécile">
-          Tanner, Cécile
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Tanner,_CÃ©cile">
+          Tanner, CÃ©cile
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Tantai,_Hassan">
@@ -173,8 +173,8 @@
           Tarkovskii, Andrei Arsenevich
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Tarr,_Béla">
-          Tarr, Béla
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Tarr,_BÃ©la">
+          Tarr, BÃ©la
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Tartaglia,_Jerry">
@@ -269,8 +269,8 @@
           Taylor, William Desmond
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Tchalgadjieff,_Stéphane">
-          Tchalgadjieff, Stéphane
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Tchalgadjieff,_StÃ©phane">
+          Tchalgadjieff, StÃ©phane
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Tcherina,_Ludmilla">
@@ -541,16 +541,16 @@
           Thomson, Alex
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Thórdarson,_Gunnar">
-          Thórdarson, Gunnar
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=ThÃ³rdarson,_Gunnar">
+          ThÃ³rdarson, Gunnar
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Thorin,_Donald_E.">
           Thorin, Donald E.
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Thórisson,_Snorri">
-          Thórisson, Snorri
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=ThÃ³risson,_Snorri">
+          ThÃ³risson, Snorri
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Thornton,_Billy_Bob">
@@ -589,8 +589,8 @@
           Tiernan, Andrew
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Tikanmäki,_Anssi">
-          Tikanmäki, Anssi
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=TikanmÃ¤ki,_Anssi">
+          TikanmÃ¤ki, Anssi
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Tikaram,_Ramon">
@@ -757,8 +757,8 @@
           Torn, Rip
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Törnroth,_Titte">
-          Törnroth, Titte
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=TÃ¶rnroth,_Titte">
+          TÃ¶rnroth, Titte
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Torokvei,_Peter">
@@ -781,8 +781,8 @@
           Toth, Melissa
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Totò">
-          Totò
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=TotÃ²">
+          TotÃ²
           </a><br_/>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Totter,_Audrey">
@@ -833,8 +833,8 @@
           Toy, Patty
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Toyoda,_Shirô">
-          Toyoda, Shirô
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Toyoda,_ShirÃ´">
+          Toyoda, ShirÃ´
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Tracy,_Lee">
@@ -945,8 +945,8 @@
           Trissenaar, Elisabeth
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Tristan,_Frédérick">
-          Tristan, Frédérick
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Tristan,_FrÃ©dÃ©rick">
+          Tristan, FrÃ©dÃ©rick
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Triumph_motorcycle_in_motion_pictures">
@@ -957,8 +957,8 @@
           Trividic, Anne-Louise
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Trnka,_Jirí">
-          Trnka, Jirí
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Trnka,_JirÃ­">
+          Trnka, JirÃ­
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Troell,_Jan">
@@ -981,8 +981,8 @@
           Trudeau, Garry
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Truffaut,_François">
-          Truffaut, François
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Truffaut,_FranÃ§ois">
+          Truffaut, FranÃ§ois
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Trumbo,_Dalton">
@@ -1033,8 +1033,8 @@
           Tu Du-che
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Tual,_Christèle">
-          Tual, Christèle
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Tual,_ChristÃ¨le">
+          Tual, ChristÃ¨le
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Tucci,_Stanley">
