--- a/WebContent/include/browsesubjVlist.jspf
+++ b/WebContent/include/browsesubjVlist.jspf
@@ -1,8 +1,8 @@
       <div id='browselist' name='browselist'>
         <table id='browseTable' name='browseTable'>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Väänänen,_Kari">
-          Väänänen, Kari
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=VÃ¤Ã¤nÃ¤nen,_Kari">
+          VÃ¤Ã¤nÃ¤nen, Kari
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Vacek,_Karel">
@@ -93,8 +93,8 @@
           Van Dyke, Willard
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Van_Effenterre,_Joële">
-          Van Effenterre, Joële
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Van_Effenterre,_JoÃ«le">
+          Van Effenterre, JoÃ«le
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Van_Hool,_Roger">
@@ -157,8 +157,8 @@
           Vangelis
           </a><br_/>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Varda,_Agnès">
-          Varda, Agnès
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Varda,_AgnÃ¨s">
+          Varda, AgnÃ¨s
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Vardaros,_Leonidas">
@@ -209,8 +209,8 @@
           Vaugon, Danielle
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Vautier,_René">
-          Vautier, René
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Vautier,_RenÃ©">
+          Vautier, RenÃ©
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Vazquez,_Yolanda">
@@ -313,8 +313,8 @@
           Vertov, Dziga
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Véry,_Charlotte">
-          Véry, Charlotte
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=VÃ©ry,_Charlotte">
+          VÃ©ry, Charlotte
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Vester,_Paul">
@@ -361,8 +361,8 @@
           Vigo, Jean
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Villaça,_Paulo">
-          Villaça, Paulo
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=VillaÃ§a,_Paulo">
+          VillaÃ§a, Paulo
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Village_People">
@@ -545,8 +545,8 @@
           Vonn, Veola
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Vørsel,_Niels">
-          Vørsel, Niels
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=VÃ¸rsel,_Niels">
+          VÃ¸rsel, Niels
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Vosper,_Frank">
