--- a/WebContent/include/browsesubjWlist.jspf
+++ b/WebContent/include/browsesubjWlist.jspf
@@ -265,8 +265,8 @@
           Warden, Jack
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Wargnier,_Régis">
-          Wargnier, Régis
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Wargnier,_RÃ©gis">
+          Wargnier, RÃ©gis
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Warhol,_Andy">
@@ -581,16 +581,16 @@
           Went, Johanna
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Wertheimer,_François">
-          Wertheimer, François
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Wertheimer,_FranÃ§ois">
+          Wertheimer, FranÃ§ois
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Wertheimer,_Robert">
           Wertheimer, Robert
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Wertmüller,_Lina">
-          Wertmüller, Lina
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=WertmÃ¼ller,_Lina">
+          WertmÃ¼ller, Lina
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Wesson,_Dick">
@@ -649,8 +649,8 @@
           Weyer, Hannah
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Weyergans,_François">
-          Weyergans, François
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Weyergans,_FranÃ§ois">
+          Weyergans, FranÃ§ois
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Whale,_James">
@@ -945,8 +945,8 @@
           Wills, Bob
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Wilms,_André">
-          Wilms, André
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Wilms,_AndrÃ©">
+          Wilms, AndrÃ©
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Wilson,_Brad">
