--- a/WebContent/include/browsesubjYlist.jspf
+++ b/WebContent/include/browsesubjYlist.jspf
@@ -89,8 +89,8 @@
           Yauwiga
           </a><br_/>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Yavuz,_Yüksel">
-          Yavuz, Yüksel
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Yavuz,_YÃ¼ksel">
+          Yavuz, YÃ¼ksel
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Yazaki,_Hitoshi">
