--- a/WebContent/include/browsetitleBlist.jspf
+++ b/WebContent/include/browsetitleBlist.jspf
@@ -263,7 +263,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm25956'>
-                 Bin ich schön?
+                 Bin ich schÃ¶n?
               </a>
             </td>
             <td>
@@ -377,7 +377,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm1834'>
-                 Babel opera, ou la répétition de Don Juan
+                 Babel opera, ou la rÃ©pÃ©tition de Don Juan
               </a>
             </td>
             <td>
@@ -411,7 +411,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm1837'>
-                 Babettes gästebud
+                 Babettes gÃ¤stebud
               </a>
             </td>
             <td>
@@ -421,14 +421,14 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26525'>
-                 Der bucklige und die tänzerin
+                 Der bucklige und die tÃ¤nzerin
               </a>
             </td>
           </tr>
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29317'>
-                 Babí léto
+                 BabÃ­ lÃ©to
               </a>
             </td>
             <td>
@@ -513,7 +513,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm1840'>
-                 Bábolna
+                 BÃ¡bolna
               </a>
             </td>
             <td>
@@ -523,7 +523,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm2573'>
-                 Die bitteren tränen der Petra von Kant
+                 Die bitteren trÃ¤nen der Petra von Kant
               </a>
             </td>
           </tr>
@@ -557,7 +557,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm1820'>
-                 Die büchse der Pandora
+                 Die bÃ¼chse der Pandora
               </a>
             </td>
           </tr>
@@ -829,7 +829,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27271'>
-                 La belle meunière
+                 La belle meuniÃ¨re
               </a>
             </td>
           </tr>
@@ -863,7 +863,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29862'>
-                 La bergère et le ramoneur
+                 La bergÃ¨re et le ramoneur
               </a>
             </td>
           </tr>
@@ -880,7 +880,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm1811'>
-                 La bête humaine
+                 La bÃªte humaine
               </a>
             </td>
           </tr>
@@ -948,7 +948,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26475'>
-                 La boulangère de Monceau
+                 La boulangÃ¨re de Monceau
               </a>
             </td>
           </tr>
@@ -982,7 +982,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30023'>
-                 Le barbier de Séville
+                 Le barbier de SÃ©ville
               </a>
             </td>
           </tr>
@@ -1142,7 +1142,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm1931'>
-                 Baisers volés
+                 Baisers volÃ©s
               </a>
             </td>
             <td>
@@ -1254,7 +1254,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29241'>
-                 The Babilée mystery
+                 The BabilÃ©e mystery
               </a>
             </td>
           </tr>
@@ -1305,7 +1305,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm1853'>
-                 The baby of Mâcon
+                 The baby of MÃ¢con
               </a>
             </td>
           </tr>
@@ -1414,7 +1414,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm1985'>
-                 Ballet mécanique
+                 Ballet mÃ©canique
               </a>
             </td>
             <td>
@@ -1567,7 +1567,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm2011'>
-                 Bande à part
+                 Bande Ã  part
               </a>
             </td>
             <td>
@@ -1844,7 +1844,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29870'>
-                 Bonitinha mas ordinária
+                 Bonitinha mas ordinÃ¡ria
               </a>
             </td>
             <td>
@@ -1878,7 +1878,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29927'>
-                 Bonnes à tuer
+                 Bonnes Ã  tuer
               </a>
             </td>
             <td>
@@ -1890,7 +1890,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27904'>
-                 Bástyasétány hetvennégy
+                 BÃ¡styasÃ©tÃ¡ny hetvennÃ©gy
               </a>
             </td>
             <td>
@@ -2009,7 +2009,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm28558'>
-                 Bäume, vögel und menschen
+                 BÃ¤ume, vÃ¶gel und menschen
               </a>
             </td>
             <td>
@@ -2167,7 +2167,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm3001'>
-                 Boudu sauvé des eaux
+                 Boudu sauvÃ© des eaux
               </a>
             </td>
             <td>
@@ -2179,7 +2179,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm2167'>
-                 Beau-père
+                 Beau-pÃ¨re
               </a>
             </td>
             <td>
@@ -2677,7 +2677,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm3052'>
-                 Brazos cruçados, maquinas paradas
+                 Brazos cruÃ§ados, maquinas paradas
               </a>
             </td>
             <td>
@@ -2961,7 +2961,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm2298'>
-                 Benilde ou a virgem mãe
+                 Benilde ou a virgem mÃ£e
               </a>
             </td>
             <td>
@@ -3029,7 +3029,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm1807'>
-                 Bérénice
+                 BÃ©rÃ©nice
               </a>
             </td>
             <td>
@@ -3148,7 +3148,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26743'>
-                 Beröringen
+                 BerÃ¶ringen
               </a>
             </td>
             <td>
@@ -3267,7 +3267,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26747'>
-                 Besitzbürgerin, jahrgang 1908
+                 BesitzbÃ¼rgerin, jahrgang 1908
               </a>
             </td>
             <td>
@@ -3374,7 +3374,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26736'>
-                 Brutalität in stein
+                 BrutalitÃ¤t in stein
               </a>
             </td>
             <td>
@@ -3782,7 +3782,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm1822'>
-                 Bütün kapilar kapaliydi
+                 BÃ¼tÃ¼n kapilar kapaliydi
               </a>
             </td>
             <td>
