--- a/WebContent/include/browsetitleClist.jspf
+++ b/WebContent/include/browsetitleClist.jspf
@@ -110,7 +110,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29817'>
-                 CinÈma de notre temps: une journÈe d'Andrei Arsenevitch
+                 Cin√©ma de notre temps: une journ√©e d'Andrei Arsenevitch
               </a>
             </td>
             <td>
@@ -144,7 +144,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm4075'>
-                 CinÈtracts
+                 Cin√©tracts
               </a>
             </td>
             <td>
@@ -161,7 +161,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30690'>
-                 CinÈvardaphoto
+                 Cin√©vardaphoto
               </a>
             </td>
             <td>
@@ -292,7 +292,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm3442'>
-                 CamÈra d'afrique: 20 years of african cinema
+                 Cam√©ra d'afrique: 20 years of african cinema
               </a>
             </td>
             <td>
@@ -421,7 +421,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm3534'>
-                 La captive du dÈsert
+                 La captive du d√©sert
               </a>
             </td>
           </tr>
@@ -472,7 +472,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26477'>
-                 La carriËre de Suzanne
+                 La carri√®re de Suzanne
               </a>
             </td>
           </tr>
@@ -484,7 +484,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm28521'>
-                 Civil a p·ly·n
+                 Civil a p√°ly√°n
               </a>
             </td>
             <td>
@@ -496,7 +496,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm3506'>
-                 Cantate pour deux gÈnÈraux
+                 Cantate pour deux g√©n√©raux
               </a>
             </td>
             <td>
@@ -523,14 +523,14 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26908'>
-                 La cÈrÈmonie
+                 La c√©r√©monie
               </a>
             </td>
           </tr>
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29399'>
-                 Capit„es de Abril
+                 Capit√£es de Abril
               </a>
             </td>
             <td>
@@ -574,7 +574,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30712'>
-                 La chasse au lion ‡ l'arc
+                 La chasse au lion √† l'arc
               </a>
             </td>
           </tr>
@@ -659,7 +659,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26996'>
-                 La cicatrice intÈrieure
+                 La cicatrice int√©rieure
               </a>
             </td>
           </tr>
@@ -671,7 +671,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm4147'>
-                 ClÈo de 5 ‡ 7
+                 Cl√©o de 5 √† 7
               </a>
             </td>
             <td>
@@ -693,7 +693,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm4112'>
-                 La CitÈ des enfants perdus
+                 La Cit√© des enfants perdus
               </a>
             </td>
           </tr>
@@ -710,7 +710,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm4121'>
-                 La citt‡ delle donne
+                 La citt√† delle donne
               </a>
             </td>
           </tr>
@@ -795,7 +795,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm31042'>
-                 La ComÈdie-FranÁaise ou l'amour jouÈ
+                 La Com√©die-Fran√ßaise ou l'amour jou√©
               </a>
             </td>
           </tr>
@@ -880,7 +880,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm4582'>
-                 La course du liËvre ‡ travers les champs
+                 La course du li√®vre √† travers les champs
               </a>
             </td>
           </tr>
@@ -897,14 +897,14 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm4695'>
-                 La croisiËre jaune
+                 La croisi√®re jaune
               </a>
             </td>
           </tr>
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29842'>
-                 Carne trÈmula
+                 Carne tr√©mula
               </a>
             </td>
             <td>
@@ -914,7 +914,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm25986'>
-                 La cuisine AmÈricaine
+                 La cuisine Am√©ricaine
               </a>
             </td>
           </tr>
@@ -948,7 +948,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30538'>
-                 Le Caire...racontÈ par Chahine
+                 Le Caire...racont√© par Chahine
               </a>
             </td>
           </tr>
@@ -982,7 +982,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm3521'>
-                 Le caporal ÈpinglÈ
+                 Le caporal √©pingl√©
               </a>
             </td>
           </tr>
@@ -1028,12 +1028,12 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29553'>
-                 Collections privÈes
+                 Collections priv√©es
               </a>
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm3785'>
-                 Le chagrin et la pitiÈ
+                 Le chagrin et la piti√©
               </a>
             </td>
           </tr>
@@ -1079,7 +1079,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26240'>
-                 ColorÌn, colorado
+                 Color√≠n, colorado
               </a>
             </td>
             <td>
@@ -1135,7 +1135,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26994'>
-                 Le coeur fantÙme
+                 Le coeur fant√¥me
               </a>
             </td>
           </tr>
@@ -1152,7 +1152,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27356'>
-                 Le comÈdien
+                 Le com√©dien
               </a>
             </td>
           </tr>
@@ -1244,7 +1244,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm18691'>
-                 Castle vogelˆd
+                 Castle vogel√∂d
               </a>
             </td>
             <td>
@@ -1334,12 +1334,12 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm4349'>
-                 Comme si c'Ètait hier
+                 Comme si c'√©tait hier
               </a>
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm3737'>
-                 Les cent et une nuits de Simon CinÈma
+                 Les cent et une nuits de Simon Cin√©ma
               </a>
             </td>
           </tr>
@@ -1351,12 +1351,12 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30295'>
-                 Comme si de rien n'Ètait
+                 Comme si de rien n'√©tait
               </a>
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26228'>
-                 Les chutes des MystËres du Ch‚tueau du DÈ
+                 Les chutes des Myst√®res du Ch√¢tueau du D√©
               </a>
             </td>
           </tr>
@@ -1385,12 +1385,12 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm4352'>
-                 Comment Áa va
+                 Comment √ßa va
               </a>
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30688'>
-                 Les crÈatures
+                 Les cr√©atures
               </a>
             </td>
           </tr>
@@ -1419,7 +1419,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm4356'>
-                 Comment Yukong dÈplaÁa les montagnes
+                 Comment Yukong d√©pla√ßa les montagnes
               </a>
             </td>
             <td>
@@ -1470,7 +1470,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29427'>
-                 Como era gostoso o meu francÍs
+                 Como era gostoso o meu franc√™s
               </a>
             </td>
             <td>
@@ -1567,7 +1567,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm3328'>
-                 CÈline et Julie vont en bateau
+                 C√©line et Julie vont en bateau
               </a>
             </td>
             <td>
@@ -1720,7 +1720,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm3763'>
-                 CÈsar
+                 C√©sar
               </a>
             </td>
             <td>
@@ -1737,7 +1737,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm3762'>
-                 CesarÈe
+                 Cesar√©e
               </a>
             </td>
             <td>
@@ -1754,7 +1754,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm28540'>
-                 Cesk· rapsodie
+                 Cesk√° rapsodie
               </a>
             </td>
             <td>
@@ -1771,7 +1771,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm3767'>
-                 Cet obscur objet du dÈsir
+                 Cet obscur objet du d√©sir
               </a>
             </td>
             <td>
@@ -1924,7 +1924,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29929'>
-                 Chaleurs d'ÈtÈ
+                 Chaleurs d'√©t√©
               </a>
             </td>
             <td>
@@ -2009,7 +2009,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27354'>
-                 Champs-ElysÈes
+                 Champs-Elys√©es
               </a>
             </td>
             <td>
@@ -2252,7 +2252,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30857'>
-                 Cord„o de ouro
+                 Cord√£o de ouro
               </a>
             </td>
             <td>
@@ -2269,7 +2269,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30828'>
-                 Corps plongÈs
+                 Corps plong√©s
               </a>
             </td>
             <td>
@@ -2400,7 +2400,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm31002'>
-                 Chats perchÈs
+                 Chats perch√©s
               </a>
             </td>
             <td>
@@ -2808,12 +2808,12 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29568'>
-                 Chikumagawa zesshÙ
+                 Chikumagawa zessh√¥
               </a>
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm4599'>
-                 CrÈsus
+                 Cr√©sus
               </a>
             </td>
             <td>
@@ -3068,7 +3068,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm4686'>
-                 Cristo si Ë fermato a Eboli
+                 Cristo si √® fermato a Eboli
               </a>
             </td>
             <td>
@@ -3085,7 +3085,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30903'>
-                 CristÛv„o Colombo - o enigma
+                 Crist√≥v√£o Colombo - o enigma
               </a>
             </td>
             <td>
@@ -3522,7 +3522,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm28376'>
-                 Chronique d'un ÈtÈ
+                 Chronique d'un √©t√©
               </a>
             </td>
             <td>
@@ -3595,7 +3595,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29406'>
-                 A caÁa
+                 A ca√ßa
               </a>
             </td>
             <td>
@@ -3685,7 +3685,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm4402'>
-                Un condamnÈ ‡ mort s'est ÈchappÈ
+                Un condamn√© √† mort s'est √©chapp√©
               </a>
             </td>
           </tr>
@@ -3702,7 +3702,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26476'>
-                 Un conte d'ÈtÈ
+                 Un conte d'√©t√©
               </a>
             </td>
           </tr>
@@ -3719,7 +3719,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29544'>
-                Un couple Èpatant
+                Un couple √©patant
               </a>
             </td>
           </tr>
