--- a/WebContent/include/browsetitleDlist.jspf
+++ b/WebContent/include/browsetitleDlist.jspf
@@ -13,7 +13,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm5977'>
-                 DrÙle de drame
+                 Dr√¥le de drame
               </a>
             </td>
           </tr>
@@ -30,7 +30,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm28430'>
-                 DrÙle de FÈlix
+                 Dr√¥le de F√©lix
               </a>
             </td>
           </tr>
@@ -76,7 +76,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm5511'>
-                 Deux fois cinquante ans de cinÈma franÁais
+                 Deux fois cinquante ans de cin√©ma fran√ßais
               </a>
             </td>
             <td>
@@ -173,7 +173,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm4919'>
-                 DaguerrÈotypes
+                 Daguerr√©otypes
               </a>
             </td>
             <td>
@@ -200,7 +200,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29062'>
-                 Du bout des lËvres
+                 Du bout des l√®vres
               </a>
             </td>
           </tr>
@@ -217,7 +217,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30691'>
-                 Du cÙtÈ de la cÙte
+                 Du c√¥t√© de la c√¥te
               </a>
             </td>
           </tr>
@@ -285,7 +285,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm25465'>
-                 Du sang de la voluptÈ et de la mort
+                 Du sang de la volupt√© et de la mort
               </a>
             </td>
           </tr>
@@ -302,7 +302,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm6096'>
-                 Du skal Êre din hustru
+                 Du skal √¶re din hustru
               </a>
             </td>
           </tr>
@@ -569,7 +569,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27265'>
-                 Dillinger Ë morto
+                 Dillinger √® morto
               </a>
             </td>
             <td>
@@ -608,7 +608,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm6153'>
-                 Dupont barbËs
+                 Dupont barb√®s
               </a>
             </td>
           </tr>
@@ -620,12 +620,12 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm25312'>
-                 Dimanche a PÈkin
+                 Dimanche a P√©kin
               </a>
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27442'>
-                 Durch die w‰lder, durch die auen
+                 Durch die w√§lder, durch die auen
               </a>
             </td>
           </tr>
@@ -700,7 +700,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29378'>
-                 Danry˚
+                 Danry√ª
               </a>
             </td>
             <td>
@@ -773,7 +773,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm5648'>
-                 Dios los crÌa
+                 Dios los cr√≠a
               </a>
             </td>
             <td>
@@ -904,7 +904,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27579'>
-                 Date d'ÈchÈance
+                 Date d'√©ch√©ance
               </a>
             </td>
             <td>
@@ -931,7 +931,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29422'>
-                 A divina comÈdia
+                 A divina com√©dia
               </a>
             </td>
           </tr>
@@ -977,7 +977,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm28524'>
-                 DÌszmagyar
+                 D√≠szmagyar
               </a>
             </td>
             <td>
@@ -1181,12 +1181,12 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26680'>
-                 Dj‰vulens ˆga
+                 Dj√§vulens √∂ga
               </a>
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26901'>
-                 La dÈcade prodigieuse
+                 La d√©cade prodigieuse
               </a>
             </td>
           </tr>
@@ -1220,7 +1220,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm5376'>
-                 La dentelliËre
+                 La dentelli√®re
               </a>
             </td>
           </tr>
@@ -1237,7 +1237,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30332'>
-                 La dÈrive de l'Atlantic
+                 La d√©rive de l'Atlantic
               </a>
             </td>
           </tr>
@@ -1254,7 +1254,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm5393'>
-                 La derniËre femme
+                 La derni√®re femme
               </a>
             </td>
           </tr>
@@ -1271,7 +1271,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm31047'>
-                 La derniËre lettre
+                 La derni√®re lettre
               </a>
             </td>
           </tr>
@@ -1288,7 +1288,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm24620'>
-                 La Discesa di acl‡ a floristella
+                 La Discesa di acl√† a floristella
               </a>
             </td>
           </tr>
@@ -1373,14 +1373,14 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm4845'>
-                 Le dÈjeuner sur l'herbe
+                 Le d√©jeuner sur l'herbe
               </a>
             </td>
           </tr>
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm5141'>
-                 De grands ÈvÈnements et des gens ordinaires
+                 De grands √©v√©nements et des gens ordinaires
               </a>
             </td>
             <td>
@@ -1407,14 +1407,14 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm5407'>
-                 Le dernier mÈtro
+                 Le dernier m√©tro
               </a>
             </td>
           </tr>
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30803'>
-                 De l'autre cÙtÈ
+                 De l'autre c√¥t√©
               </a>
             </td>
             <td>
@@ -1448,7 +1448,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm5147'>
-                 De Mayerling ‡ Sarajevo
+                 De Mayerling √† Sarajevo
               </a>
             </td>
             <td>
@@ -1458,14 +1458,14 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30158'>
-                 Le dÈsordre et la nuit
+                 Le d√©sordre et la nuit
               </a>
             </td>
           </tr>
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm5150'>
-                 De nÂede fÊrgen
+                 De n√•ede f√¶rgen
               </a>
             </td>
             <td>
@@ -1475,14 +1475,14 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27355'>
-                 Le destin fabuleux de DÈsirÈe Clary
+                 Le destin fabuleux de D√©sir√©e Clary
               </a>
             </td>
           </tr>
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30839'>
-                 De Ouaga ‡ Douala en passant par Paris
+                 De Ouaga √† Douala en passant par Paris
               </a>
             </td>
             <td>
@@ -1492,7 +1492,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm25806'>
-                 Le deuxiËme souffle
+                 Le deuxi√®me souffle
               </a>
             </td>
           </tr>
@@ -1640,7 +1640,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30002'>
-                 Domani Ë troppo tardi
+                 Domani √® troppo tardi
               </a>
             </td>
             <td>
@@ -1696,7 +1696,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30683'>
-                 Les destinÈes sentimentales
+                 Les destin√©es sentimentales
               </a>
             </td>
           </tr>
@@ -1742,7 +1742,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29371'>
-                 DÙmyaku rettÙ
+                 D√¥myaku rett√¥
               </a>
             </td>
             <td>
@@ -1992,12 +1992,12 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26676'>
-                 DÈbats
+                 D√©bats
               </a>
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27477'>
-                 DoÒa Barbara
+                 Do√±a Barbara
               </a>
             </td>
             <td>
@@ -2179,7 +2179,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm4849'>
-                 DÈlits flagrants
+                 D√©lits flagrants
               </a>
             </td>
             <td>
@@ -2264,7 +2264,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30806'>
-                 Demain on dÈmÈnage
+                 Demain on d√©m√©nage
               </a>
             </td>
             <td>
@@ -2434,7 +2434,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26631'>
-                 DerriËre le mur
+                 Derri√®re le mur
               </a>
             </td>
             <td>
@@ -2626,7 +2626,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm103'>
-                 Dr·cula
+                 Dr√°cula
               </a>
             </td>
             <td>
@@ -2638,7 +2638,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27352'>
-                 DÈsirÈ
+                 D√©sir√©
               </a>
             </td>
             <td>
@@ -2706,7 +2706,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm4858'>
-                 DÈsordre
+                 D√©sordre
               </a>
             </td>
             <td>
@@ -2808,7 +2808,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm5459'>
-                 DespuÈs de...
+                 Despu√©s de...
               </a>
             </td>
             <td>
@@ -2825,7 +2825,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm5461'>
-                 Despues del sueÒo
+                 Despues del sue√±o
               </a>
             </td>
             <td>
@@ -2893,7 +2893,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30069'>
-                 DestinÈes
+                 Destin√©es
               </a>
             </td>
             <td>
@@ -2915,7 +2915,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26220'>
-                 Drei sch¸sse auf Rudi
+                 Drei sch√ºsse auf Rudi
               </a>
             </td>
             <td>
@@ -2961,7 +2961,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26685'>
-                 Det regnar pÂ vÂr k‰rlek
+                 Det regnar p√• v√•r k√§rlek
               </a>
             </td>
             <td>
@@ -2978,7 +2978,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm4859'>
-                 DÈtective
+                 D√©tective
               </a>
             </td>
             <td>
