--- a/WebContent/include/browsetitleElist.jspf
+++ b/WebContent/include/browsetitleElist.jspf
@@ -3,7 +3,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27374'>
-                 È arrivato il cavaliere
+                 Ãˆ arrivato il cavaliere
               </a>
             </td>
             <td>
@@ -37,7 +37,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm6196'>
-                 E nachtlang Füürland
+                 E nachtlang FÃ¼Ã¼rland
               </a>
             </td>
             <td>
@@ -71,7 +71,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30122'>
-                 È primavera--
+                 Ãˆ primavera--
               </a>
             </td>
             <td>
@@ -88,7 +88,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm415'>
-                 E tu vivrai nel terrore! L'aldilà
+                 E tu vivrai nel terrore! L'aldilÃ 
               </a>
             </td>
             <td>
@@ -127,7 +127,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30155'>
-                 En attendant le déluge
+                 En attendant le dÃ©luge
               </a>
             </td>
             <td>
@@ -149,7 +149,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm28124'>
-                 Extranjeros de sí mismos
+                 Extranjeros de sÃ­ mismos
               </a>
             </td>
           </tr>
@@ -161,7 +161,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm28513'>
-                 Én és a nagyapám
+                 Ã‰n Ã©s a nagyapÃ¡m
               </a>
             </td>
             <td>
@@ -416,12 +416,12 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm6532'>
-                 Engesztelö 1956-1989
+                 EngesztelÃ¶ 1956-1989
               </a>
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm6671'>
-                 El espíritu de la colmena
+                 El espÃ­ritu de la colmena
               </a>
             </td>
           </tr>
@@ -438,7 +438,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30834'>
-                 L' eau de misère
+                 L' eau de misÃ¨re
               </a>
             </td>
           </tr>
@@ -450,7 +450,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm6537'>
-                 Engraçadinha
+                 EngraÃ§adinha
               </a>
             </td>
             <td>
@@ -506,7 +506,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm6256'>
-                 L' Eden et après
+                 L' Eden et aprÃ¨s
               </a>
             </td>
           </tr>
@@ -530,7 +530,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm6228'>
-                 Ébredés
+                 Ã‰bredÃ©s
               </a>
             </td>
             <td>
@@ -540,7 +540,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm6289'>
-                 L' effrontée
+                 L' effrontÃ©e
               </a>
             </td>
           </tr>
@@ -574,14 +574,14 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm25503'>
-                 L' enfant aimé ou je joue à être une femme mariée
+                 L' enfant aimÃ© ou je joue Ã  Ãªtre une femme mariÃ©e
               </a>
             </td>
           </tr>
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm6237'>
-                 Echos aus einem düsteren reich
+                 Echos aus einem dÃ¼steren reich
               </a>
             </td>
             <td>
@@ -693,7 +693,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29931'>
-                 L' Épave
+                 L' Ã‰pave
               </a>
             </td>
           </tr>
@@ -744,7 +744,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm179'>
-                 L' Étoile de mer
+                 L' Ã‰toile de mer
               </a>
             </td>
           </tr>
@@ -778,7 +778,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm188'>
-                 L' éveillé du pont de l'alma
+                 L' Ã©veillÃ© du pont de l'alma
               </a>
             </td>
           </tr>
@@ -812,7 +812,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm6250'>
-                 Las Edades de Lulú
+                 Las Edades de LulÃº
               </a>
             </td>
           </tr>
@@ -841,7 +841,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26205'>
-                 Erzählen
+                 ErzÃ¤hlen
               </a>
             </td>
             <td>
@@ -863,14 +863,14 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm6526'>
-                 Les enfants jouent à la russie
+                 Les enfants jouent Ã  la russie
               </a>
             </td>
           </tr>
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm6299'>
-                 Egymásra nézve
+                 EgymÃ¡sra nÃ©zve
               </a>
             </td>
             <td>
@@ -960,7 +960,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30902'>
-                 Espelho mágico
+                 Espelho mÃ¡gico
               </a>
             </td>
             <td>
@@ -994,7 +994,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26235'>
-                 Essai cinématographique:  Ady
+                 Essai cinÃ©matographique:  Ady
               </a>
             </td>
             <td>
@@ -1011,7 +1011,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26230'>
-                 Essai cinématographique:  autoportrait ou ce qui nous manque à tous
+                 Essai cinÃ©matographique:  autoportrait ou ce qui nous manque Ã  tous
               </a>
             </td>
             <td>
@@ -1028,7 +1028,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26229'>
-                 Essai cinématographique:  corrida
+                 Essai cinÃ©matographique:  corrida
               </a>
             </td>
             <td>
@@ -1045,7 +1045,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26233'>
-                 Essai cinématographique:  courses landaises
+                 Essai cinÃ©matographique:  courses landaises
               </a>
             </td>
             <td>
@@ -1062,7 +1062,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26236'>
-                 Essai cinématographique:  dance
+                 Essai cinÃ©matographique:  dance
               </a>
             </td>
             <td>
@@ -1079,7 +1079,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26237'>
-                 Essai cinématographique:  Juliet
+                 Essai cinÃ©matographique:  Juliet
               </a>
             </td>
             <td>
@@ -1096,7 +1096,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26232'>
-                 Essai cinématographique:  L'atelier du Val-de-Grâce
+                 Essai cinÃ©matographique:  L'atelier du Val-de-GrÃ¢ce
               </a>
             </td>
             <td>
@@ -1113,7 +1113,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26234'>
-                 Essai cinématographique:  la garoupe
+                 Essai cinÃ©matographique:  la garoupe
               </a>
             </td>
             <td>
@@ -1130,7 +1130,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26231'>
-                 Essai cinématographique:  Poison
+                 Essai cinÃ©matographique:  Poison
               </a>
             </td>
             <td>
@@ -1147,7 +1147,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26227'>
-                 Essai cinématographique:  Rue Campagne-Prèmiere
+                 Essai cinÃ©matographique:  Rue Campagne-PrÃ¨miere
               </a>
             </td>
             <td>
@@ -1159,12 +1159,12 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29564'>
-                 Ekimae ryôkan
+                 Ekimae ryÃ´kan
               </a>
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26238'>
-                 Essai cinématographique:  two women
+                 Essai cinÃ©matographique:  two women
               </a>
             </td>
             <td>
@@ -1215,7 +1215,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm6700'>
-                 Eszterlánc
+                 EszterlÃ¡nc
               </a>
             </td>
             <td>
@@ -1232,7 +1232,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm6702'>
-                 Et Dieu...créa la femme
+                 Et Dieu...crÃ©a la femme
               </a>
             </td>
             <td>
@@ -1249,7 +1249,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27744'>
-                 ...et la création fut
+                 ...et la crÃ©ation fut
               </a>
             </td>
             <td>
@@ -1266,7 +1266,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm6704'>
-                 Et la lumière fut
+                 Et la lumiÃ¨re fut
               </a>
             </td>
             <td>
@@ -1397,7 +1397,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm144'>
-                 Éléna et les hommes
+                 Ã‰lÃ©na et les hommes
               </a>
             </td>
             <td>
@@ -1567,7 +1567,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29608'>
-                 Éloge de l'amour
+                 Ã‰loge de l'amour
               </a>
             </td>
             <td>
@@ -1601,7 +1601,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27899'>
-                 Elveszett illuziók
+                 Elveszett illuziÃ³k
               </a>
             </td>
             <td>
