--- a/WebContent/include/browsetitleFlist.jspf
+++ b/WebContent/include/browsetitleFlist.jspf
@@ -20,7 +20,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30961'>
-                 Faat Kiné
+                 Faat KinÃ©
               </a>
             </td>
             <td>
@@ -139,7 +139,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm24592'>
-                 Fádní odpoledne
+                 FÃ¡dnÃ­ odpoledne
               </a>
             </td>
             <td>
@@ -292,7 +292,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27349'>
-                 Faisons un rêve
+                 Faisons un rÃªve
               </a>
             </td>
             <td>
@@ -377,7 +377,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26261'>
-                 Falkenau, vision de l'impossible (Samuel Fuller témoigne)
+                 Falkenau, vision de l'impossible (Samuel Fuller tÃ©moigne)
               </a>
             </td>
             <td>
@@ -387,7 +387,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm28820'>
-                 Der Fluch der grünen Augen
+                 Der Fluch der grÃ¼nen Augen
               </a>
             </td>
           </tr>
@@ -404,14 +404,14 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm7412'>
-                 Die Fliegenden ärzte von ostafrika
+                 Die Fliegenden Ã¤rzte von ostafrika
               </a>
             </td>
           </tr>
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29423'>
-                 Famalicão
+                 FamalicÃ£o
               </a>
             </td>
             <td>
@@ -489,7 +489,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29361'>
-                 Ein fideles gefängnis
+                 Ein fideles gefÃ¤ngnis
               </a>
             </td>
           </tr>
@@ -506,7 +506,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm28812'>
-                 En fremmed banker på
+                 En fremmed banker pÃ¥
               </a>
             </td>
           </tr>
@@ -540,7 +540,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm7830'>
-                 Il futuro è donna
+                 Il futuro Ã¨ donna
               </a>
             </td>
           </tr>
@@ -574,7 +574,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm7142'>
-                 La femme d'à côté
+                 La femme d'Ã  cÃ´tÃ©
               </a>
             </td>
           </tr>
@@ -598,7 +598,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm6865'>
-                 Fängelse
+                 FÃ¤ngelse
               </a>
             </td>
             <td>
@@ -625,7 +625,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27370'>
-                 La femme défendue
+                 La femme dÃ©fendue
               </a>
             </td>
           </tr>
@@ -637,7 +637,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm25090'>
-                 För att inte tala om alla dessa kvinnor
+                 FÃ¶r att inte tala om alla dessa kvinnor
               </a>
             </td>
             <td>
@@ -693,7 +693,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26898'>
-                 La femme infidèle
+                 La femme infidÃ¨le
               </a>
             </td>
           </tr>
@@ -710,7 +710,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm25212'>
-                 La fièvre monte a El Pao
+                 La fiÃ¨vre monte a El Pao
               </a>
             </td>
           </tr>
@@ -812,7 +812,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm6983'>
-                 Le fantôme de la liberté
+                 Le fantÃ´me de la libertÃ©
               </a>
             </td>
           </tr>
@@ -955,7 +955,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26682'>
-                 Fårödokument 1969
+                 FÃ¥rÃ¶dokument 1969
               </a>
             </td>
             <td>
@@ -972,7 +972,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm6873'>
-                 Fårödokument 1979
+                 FÃ¥rÃ¶dokument 1979
               </a>
             </td>
             <td>
@@ -1504,7 +1504,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm7624'>
-                 France tour détour deux enfants
+                 France tour dÃ©tour deux enfants
               </a>
             </td>
             <td>
@@ -1589,7 +1589,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29893'>
-                 François Premier
+                 FranÃ§ois Premier
               </a>
             </td>
             <td>
@@ -1606,7 +1606,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30893'>
-                 François Truffaut: portraits volés
+                 FranÃ§ois Truffaut: portraits volÃ©s
               </a>
             </td>
             <td>
@@ -1623,7 +1623,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30893'>
-                 François Truffaut: stolen portraits
+                 FranÃ§ois Truffaut: stolen portraits
               </a>
             </td>
             <td>
@@ -1703,7 +1703,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26741'>
-                 Feuerlöscher E.A. Winterstein
+                 FeuerlÃ¶scher E.A. Winterstein
               </a>
             </td>
             <td>
@@ -1861,7 +1861,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm25581'>
-                 Fräulein Piccolo
+                 FrÃ¤ulein Piccolo
               </a>
             </td>
             <td>
@@ -2043,7 +2043,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26192'>
-                 Filmbücher
+                 FilmbÃ¼cher
               </a>
             </td>
             <td>
@@ -2128,12 +2128,12 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30898'>
-                 Fin août, début septembre
+                 Fin aoÃ»t, dÃ©but septembre
               </a>
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm7604'>
-                 Fröken Julie
+                 FrÃ¶ken Julie
               </a>
             </td>
             <td>
@@ -2388,7 +2388,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29354'>
-                 Fûfu
+                 FÃ»fu
               </a>
             </td>
             <td>
@@ -2614,7 +2614,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm7163'>
-                 Une femme mariée
+                 Une femme mariÃ©e
               </a>
             </td>
           </tr>
