--- a/WebContent/include/browsetitleGlist.jspf
+++ b/WebContent/include/browsetitleGlist.jspf
@@ -47,7 +47,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27219'>
-                 La guerra degli Antò
+                 La guerra degli AntÃ²
               </a>
             </td>
           </tr>
@@ -93,7 +93,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30205'>
-                 Godard à la télé - 1960-2000
+                 Godard Ã  la tÃ©lÃ© - 1960-2000
               </a>
             </td>
             <td>
@@ -132,7 +132,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29978'>
-                 Le garçon sauvage
+                 Le garÃ§on sauvage
               </a>
             </td>
           </tr>
@@ -200,7 +200,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30693'>
-                 Les glaneurs et la glaneuse... deux ans aprés
+                 Les glaneurs et la glaneuse... deux ans aprÃ©s
               </a>
             </td>
           </tr>
@@ -705,7 +705,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29726'>
-                 Góry o zmierzchu
+                 GÃ³ry o zmierzchu
               </a>
             </td>
             <td>
@@ -751,12 +751,12 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26632'>
-                 Généalogies d'un crime
+                 GÃ©nÃ©alogies d'un crime
               </a>
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm8329'>
-                 Gösta Berlings saga
+                 GÃ¶sta Berlings saga
               </a>
             </td>
             <td>
@@ -773,7 +773,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm7840'>
-                 Götter der pest
+                 GÃ¶tter der pest
               </a>
             </td>
             <td>
@@ -858,7 +858,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27424'>
-                 Gräfin Donelli
+                 GrÃ¤fin Donelli
               </a>
             </td>
             <td>
@@ -926,7 +926,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm8396'>
-                 Grandeur et décadence d'un petit commerce de cinéma
+                 Grandeur et dÃ©cadence d'un petit commerce de cinÃ©ma
               </a>
             </td>
             <td>
@@ -1232,7 +1232,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm8511'>
-                 Gubijinsô
+                 GubijinsÃ´
               </a>
             </td>
             <td>
@@ -1244,7 +1244,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29276'>
-                 Ghessé hayé Kish
+                 GhessÃ© hayÃ© Kish
               </a>
             </td>
             <td>
@@ -1640,7 +1640,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30198'>
-                 Das Große Liebesspiel
+                 Das GroÃŸe Liebesspiel
               </a>
             </td>
             <td>
@@ -1720,12 +1720,12 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm31090'>
-                 Glaube und währung - Dr. Gene Scott, fernsehprediger
+                 Glaube und wÃ¤hrung - Dr. Gene Scott, fernsehprediger
               </a>
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29942'>
-                 Der Gläserne Turm
+                 Der GlÃ¤serne Turm
               </a>
             </td>
             <td>
@@ -1754,7 +1754,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm31081'>
-                 Glocken aus der tiefe - glaube und aberglaube in Rußland
+                 Glocken aus der tiefe - glaube und aberglaube in RuÃŸland
               </a>
             </td>
             <td>
@@ -1793,7 +1793,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm8483'>
-                 Die große ekstase des bildschnitzers Steiner
+                 Die groÃŸe ekstase des bildschnitzers Steiner
               </a>
             </td>
             <td>
