--- a/WebContent/include/browsetitleHlist.jspf
+++ b/WebContent/include/browsetitleHlist.jspf
@@ -547,12 +547,12 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm28477'>
-                 Hallo, SzpicbrÛdka
+                 Hallo, Szpicbr√≥dka
               </a>
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm28572'>
-                 Hibotan bakuto: Ory˚ sanjÙ
+                 Hibotan bakuto: Ory√ª sanj√¥
               </a>
             </td>
             <td>
@@ -982,7 +982,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27909'>
-                 A h·tarozat
+                 A h√°tarozat
               </a>
             </td>
           </tr>
@@ -1045,7 +1045,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm28518'>
-                 HintÛnj·rÛ szerelem
+                 Hint√≥nj√°r√≥ szerelem
               </a>
             </td>
             <td>
@@ -1169,7 +1169,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm8704'>
-                 Der h‰ndler der vier jahreszeiten
+                 Der h√§ndler der vier jahreszeiten
               </a>
             </td>
           </tr>
@@ -1254,7 +1254,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm25310'>
-                 L' hÈritage de la chouette
+                 L' h√©ritage de la chouette
               </a>
             </td>
           </tr>
@@ -1271,7 +1271,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm9131'>
-                 L' Histoire d'AdËle H.
+                 L' Histoire d'Ad√®le H.
               </a>
             </td>
           </tr>
@@ -1288,7 +1288,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm28785'>
-                 L' homme ‡ l'impÈrmeable
+                 L' homme √† l'imp√©rmeable
               </a>
             </td>
           </tr>
@@ -1305,7 +1305,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm9290'>
-                 L' Homme ‡ la valise
+                 L' Homme √† la valise
               </a>
             </td>
           </tr>
@@ -1373,7 +1373,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26590'>
-                 L' homme en colËre
+                 L' homme en col√®re
               </a>
             </td>
           </tr>
@@ -1419,7 +1419,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26310'>
-                 Histoire(s) du cinÈma
+                 Histoire(s) du cin√©ma
               </a>
             </td>
             <td>
@@ -1436,12 +1436,12 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm9150'>
-                 Histoires d'AmÈrique
+                 Histoires d'Am√©rique
               </a>
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm9583'>
-                 L' hypothËse du tableau volÈ
+                 L' hypoth√®se du tableau vol√©
               </a>
             </td>
           </tr>
@@ -1492,7 +1492,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm25207'>
-                 La hija del engaÒo
+                 La hija del enga√±o
               </a>
             </td>
           </tr>
@@ -1577,7 +1577,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm28738'>
-                 Les hÈros sont fatiguÈs
+                 Les h√©ros sont fatigu√©s
               </a>
             </td>
           </tr>
@@ -1635,7 +1635,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26198'>
-                 H‰user
+                 H√§user
               </a>
             </td>
             <td>
@@ -1703,7 +1703,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm8839'>
-                 H‰xan
+                 H√§xan
               </a>
             </td>
             <td>
@@ -2145,7 +2145,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm8923'>
-                 HÈcate
+                 H√©cate
               </a>
             </td>
             <td>
@@ -2247,7 +2247,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm8593'>
-                 HÈlas pour moi
+                 H√©las pour moi
               </a>
             </td>
             <td>
@@ -2490,7 +2490,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27894'>
-                 Hosszu fut·sodra mindig sz·mithatunk
+                 Hosszu fut√°sodra mindig sz√°mithatunk
               </a>
             </td>
             <td>
@@ -2507,7 +2507,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27898'>
-                 Hossz˙ fut·sodra mindig sz·mÌthatunk
+                 Hossz√∫ fut√°sodra mindig sz√°m√≠thatunk
               </a>
             </td>
             <td>
@@ -2524,7 +2524,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm28983'>
-                 Hˆst i paradiset - Gl‰djek‰llan 2
+                 H√∂st i paradiset - Gl√§djek√§llan 2
               </a>
             </td>
             <td>
@@ -2536,12 +2536,12 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26548'>
-                 Hem frÂn babylon
+                 Hem fr√•n babylon
               </a>
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm9001'>
-                 Hˆstsonaten
+                 H√∂stsonaten
               </a>
             </td>
             <td>
@@ -2643,7 +2643,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm8602'>
-                 HÙtel du Nord
+                 H√¥tel du Nord
               </a>
             </td>
             <td>
@@ -2677,7 +2677,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm9420'>
-                 HÙtel Terminus
+                 H√¥tel Terminus
               </a>
             </td>
             <td>
@@ -2716,7 +2716,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27505'>
-                 Une histoire trËs simple
+                 Une histoire tr√®s simple
               </a>
             </td>
           </tr>
