--- a/WebContent/include/browsetitleIlist.jspf
+++ b/WebContent/include/browsetitleIlist.jspf
@@ -382,7 +382,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26729'>
-                 In gefahr und grösster not bringt der mittelweg den tod
+                 In gefahr und grÃ¶sster not bringt der mittelweg den tod
               </a>
             </td>
             <td>
@@ -841,7 +841,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm9894'>
-                 Iná láska
+                 InÃ¡ lÃ¡ska
               </a>
             </td>
             <td>
@@ -931,7 +931,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm237'>
-                 L' Île au trésor
+                 L' Ãle au trÃ©sor
               </a>
             </td>
           </tr>
@@ -994,7 +994,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26494'>
-                 Indomptable Angélique
+                 Indomptable AngÃ©lique
               </a>
             </td>
             <td>
@@ -1091,7 +1091,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm25493'>
-                 Ich möchte kein mann sein
+                 Ich mÃ¶chte kein mann sein
               </a>
             </td>
             <td>
@@ -1232,7 +1232,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27235'>
-                 Inquiétude
+                 InquiÃ©tude
               </a>
             </td>
             <td>
@@ -1499,7 +1499,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm9764'>
-                 Ils étaient neuf célibataires
+                 Ils Ã©taient neuf cÃ©libataires
               </a>
             </td>
             <td>
@@ -1516,7 +1516,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30200'>
-                 Ils se marièrent et eurent beaucoup d'enfants
+                 Ils se mariÃ¨rent et eurent beaucoup d'enfants
               </a>
             </td>
             <td>
@@ -1618,7 +1618,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26629'>
-                 Images du débat
+                 Images du dÃ©bat
               </a>
             </td>
             <td>
