--- a/WebContent/include/browsetitleJlist.jspf
+++ b/WebContent/include/browsetitleJlist.jspf
@@ -3,7 +3,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm10273'>
-                 J'ai été au bal
+                 J'ai Ã©tÃ© au bal
               </a>
             </td>
             <td>
@@ -132,7 +132,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm10694'>
-                 Jungfrukällan
+                 JungfrukÃ¤llan
               </a>
             </td>
           </tr>
@@ -178,7 +178,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm10520'>
-                 Jlg/jlg - autoportrait de décembre
+                 Jlg/jlg - autoportrait de dÃ©cembre
               </a>
             </td>
             <td>
@@ -319,7 +319,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26289'>
-                 Jusqu' à la victoire
+                 Jusqu' Ã  la victoire
               </a>
             </td>
           </tr>
@@ -479,7 +479,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm10365'>
-                 Jane B. par Agnès V.
+                 Jane B. par AgnÃ¨s V.
               </a>
             </td>
             <td>
@@ -501,7 +501,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm28831'>
-                 Jôi-uchi
+                 JÃ´i-uchi
               </a>
             </td>
             <td>
@@ -557,7 +557,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm10463'>
-                 La jetée
+                 La jetÃ©e
               </a>
             </td>
           </tr>
@@ -569,7 +569,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30116'>
-                 José Rizal
+                 JosÃ© Rizal
               </a>
             </td>
             <td>
@@ -603,7 +603,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29631'>
-                 Josei no shôri
+                 Josei no shÃ´ri
               </a>
             </td>
             <td>
@@ -625,7 +625,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm10607'>
-                 Le jour se lève
+                 Le jour se lÃ¨ve
               </a>
             </td>
           </tr>
@@ -642,19 +642,19 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm10610'>
-                 Le journal d'un curé de campagne
+                 Le journal d'un curÃ© de campagne
               </a>
             </td>
           </tr>
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27362'>
-                 Je l'ai été trois fois
+                 Je l'ai Ã©tÃ© trois fois
               </a>
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm10603'>
-                 Jour de fête
+                 Jour de fÃªte
               </a>
             </td>
             <td>
@@ -666,7 +666,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29413'>
-                 Je rentre à la maison
+                 Je rentre Ã  la maison
               </a>
             </td>
             <td>
@@ -790,7 +790,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm17277'>
-                 Jours tranquilles à Clichy
+                 Jours tranquilles Ã  Clichy
               </a>
             </td>
             <td>
@@ -858,7 +858,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29590'>
-                 Joyû Sumako no koi
+                 JoyÃ» Sumako no koi
               </a>
             </td>
             <td>
@@ -892,7 +892,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm10642'>
-                 Jubiabá
+                 JubiabÃ¡
               </a>
             </td>
             <td>
@@ -904,7 +904,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm10434'>
-                 Jeder für sich und Gott gegen alle
+                 Jeder fÃ¼r sich und Gott gegen alle
               </a>
             </td>
             <td>
@@ -1040,7 +1040,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm10475'>
-                 Jeunes filles en détresse
+                 Jeunes filles en dÃ©tresse
               </a>
             </td>
             <td>
@@ -1050,7 +1050,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm10606'>
-                 Un Jour pina a demandé
+                 Un Jour pina a demandÃ©
               </a>
             </td>
           </tr>
