--- a/WebContent/include/browsetitleKlist.jspf
+++ b/WebContent/include/browsetitleKlist.jspf
@@ -3,7 +3,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29851'>
-                 Kaç para kaç
+                 KaÃ§ para kaÃ§
               </a>
             </td>
             <td>
@@ -217,7 +217,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm11357'>
-                 Kráva
+                 KrÃ¡va
               </a>
             </td>
           </tr>
@@ -241,7 +241,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm10831'>
-                 Kalle stropp och grodan boll pä svindlande äventyr
+                 Kalle stropp och grodan boll pÃ¤ svindlande Ã¤ventyr
               </a>
             </td>
             <td>
@@ -268,7 +268,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm28698'>
-                 Krigsförbrytare
+                 KrigsfÃ¶rbrytare
               </a>
             </td>
           </tr>
@@ -370,7 +370,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm11380'>
-                 Kronika wypadków milosnych
+                 Kronika wypadkÃ³w milosnych
               </a>
             </td>
           </tr>
@@ -428,7 +428,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm28937'>
-                 Känd från TV
+                 KÃ¤nd frÃ¥n TV
               </a>
             </td>
             <td>
@@ -625,7 +625,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29363'>
-                 Kuro no chôtokkyû
+                 Kuro no chÃ´tokkyÃ»
               </a>
             </td>
           </tr>
@@ -649,7 +649,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30628'>
-                 Kapò
+                 KapÃ²
               </a>
             </td>
             <td>
@@ -717,7 +717,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26552'>
-                 Karin Månsdotter
+                 Karin MÃ¥nsdotter
               </a>
             </td>
             <td>
@@ -778,7 +778,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26681'>
-                 Kvinnodröm
+                 KvinnodrÃ¶m
               </a>
             </td>
           </tr>
@@ -795,7 +795,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26705'>
-                 Kvinnors väntan
+                 Kvinnors vÃ¤ntan
               </a>
             </td>
           </tr>
@@ -914,7 +914,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27905'>
-                 A kétfenekü dob
+                 A kÃ©tfenekÃ¼ dob
               </a>
             </td>
           </tr>
@@ -943,7 +943,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29261'>
-                 Kocár do vídas
+                 KocÃ¡r do vÃ­das
               </a>
             </td>
             <td>
@@ -1050,7 +1050,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26179'>
-                 Die küchenhilfen
+                 Die kÃ¼chenhilfen
               </a>
             </td>
           </tr>
@@ -1079,7 +1079,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm25500'>
-                 Kohlhiesels töchter
+                 Kohlhiesels tÃ¶chter
               </a>
             </td>
             <td>
@@ -1101,14 +1101,14 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm10984'>
-                 La Kermesse héroïque
+                 La Kermesse hÃ©roÃ¯que
               </a>
             </td>
           </tr>
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27516'>
-                 Kaze no tani no Nausicaä
+                 Kaze no tani no NausicaÃ¤
               </a>
             </td>
             <td>
@@ -1249,7 +1249,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm11244'>
-                 Komödianten
+                 KomÃ¶dianten
               </a>
             </td>
             <td>
@@ -1414,7 +1414,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm28520'>
-                 Kétszer kettö néha öt
+                 KÃ©tszer kettÃ¶ nÃ©ha Ã¶t
               </a>
             </td>
             <td>
