--- a/WebContent/include/browsetitleLlist.jspf
+++ b/WebContent/include/browsetitleLlist.jspf
@@ -81,14 +81,14 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm28750'>
-                 Die letzte brücke
+                 Die letzte brÃ¼cke
               </a>
             </td>
           </tr>
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30174'>
-                 Lad de små børn
+                 Lad de smÃ¥ bÃ¸rn
               </a>
             </td>
             <td>
@@ -115,7 +115,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26225'>
-                 Die lüge und der tod
+                 Die lÃ¼ge und der tod
               </a>
             </td>
           </tr>
@@ -149,7 +149,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26687'>
-                 En lektion i kärlek
+                 En lektion i kÃ¤rlek
               </a>
             </td>
           </tr>
@@ -268,7 +268,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26894'>
-                 La ligne de démarcation
+                 La ligne de dÃ©marcation
               </a>
             </td>
           </tr>
@@ -581,7 +581,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26684'>
-                 Larmar och gör sig till
+                 Larmar och gÃ¶r sig till
               </a>
             </td>
             <td>
@@ -603,7 +603,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm12158'>
-                 Lola Montès
+                 Lola MontÃ¨s
               </a>
             </td>
             <td>
@@ -632,7 +632,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29256'>
-                 Lásky mezi kapkami deste
+                 LÃ¡sky mezi kapkami deste
               </a>
             </td>
             <td>
@@ -1516,7 +1516,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm25801'>
-                 Léon Morin, prêtre
+                 LÃ©on Morin, prÃªtre
               </a>
             </td>
             <td>
@@ -1839,7 +1839,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm11846'>
-                 Lettre à freddy buache
+                 Lettre Ã  freddy buache
               </a>
             </td>
             <td>
@@ -1856,7 +1856,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm25313'>
-                 Lettre de Sibérie
+                 Lettre de SibÃ©rie
               </a>
             </td>
             <td>
@@ -1929,7 +1929,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27168'>
-                 Luci del varietà
+                 Luci del varietÃ 
               </a>
             </td>
             <td>
@@ -2026,12 +2026,12 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm11896'>
-                 Liberté la nuit
+                 LibertÃ© la nuit
               </a>
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29894'>
-                 Lucrèce Borgia
+                 LucrÃ¨ce Borgia
               </a>
             </td>
             <td>
@@ -2060,7 +2060,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30870'>
-                 Lição de amor
+                 LiÃ§Ã£o de amor
               </a>
             </td>
             <td>
@@ -2128,7 +2128,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm11914'>
-                 Liebe ist kälter als der tod
+                 Liebe ist kÃ¤lter als der tod
               </a>
             </td>
             <td>
@@ -2184,7 +2184,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm12397'>
-                 Lumumba: la mort du prophète
+                 Lumumba: la mort du prophÃ¨te
               </a>
             </td>
             <td>
@@ -2388,7 +2388,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm12429'>
-                 Lust och fägring stor
+                 Lust och fÃ¤gring stor
               </a>
             </td>
             <td>
@@ -2563,7 +2563,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30219'>
-                 The Lumière years
+                 The LumiÃ¨re years
               </a>
             </td>
           </tr>
@@ -2592,7 +2592,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm12186'>
-                 Das lange Gespräch mit dem Vogel
+                 Das lange GesprÃ¤ch mit dem Vogel
               </a>
             </td>
             <td>
