--- a/WebContent/include/browsetitleMlist.jspf
+++ b/WebContent/include/browsetitleMlist.jspf
@@ -115,7 +115,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm14191'>
-                 Mystère Alexina
+                 MystÃ¨re Alexina
               </a>
             </td>
           </tr>
@@ -190,7 +190,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm12531'>
-                 Macao oder die rückseite des meeres
+                 Macao oder die rÃ¼ckseite des meeres
               </a>
             </td>
             <td>
@@ -280,7 +280,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm13445'>
-                 Mikaël
+                 MikaÃ«l
               </a>
             </td>
             <td>
@@ -450,7 +450,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm13541'>
-                 Mimì, metallurgico ferito nell'onore
+                 MimÃ¬, metallurgico ferito nell'onore
               </a>
             </td>
             <td>
@@ -552,7 +552,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm13559'>
-                 Ming-yüeh chi-shih yüan
+                 Ming-yÃ¼eh chi-shih yÃ¼an
               </a>
             </td>
             <td>
@@ -574,7 +574,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26041'>
-                 Das mädchen vom moorhof
+                 Das mÃ¤dchen vom moorhof
               </a>
             </td>
           </tr>
@@ -608,7 +608,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm24708'>
-                 De mésavonture van een fransch heertje zonder pantalon op het strand te zandvoort
+                 De mÃ©savonture van een fransch heertje zonder pantalon op het strand te zandvoort
               </a>
             </td>
           </tr>
@@ -632,7 +632,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm28084'>
-                 Mademoiselle ma mère
+                 Mademoiselle ma mÃ¨re
               </a>
             </td>
             <td>
@@ -642,7 +642,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm12499'>
-                 Der müde tod
+                 Der mÃ¼de tod
               </a>
             </td>
           </tr>
@@ -654,12 +654,12 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30022'>
-                 Miquette et sa mère
+                 Miquette et sa mÃ¨re
               </a>
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm12547'>
-                 Die macht der gefühle
+                 Die macht der gefÃ¼hle
               </a>
             </td>
           </tr>
@@ -688,12 +688,12 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29915'>
-                 Miracle of Saint Thérèse
+                 Miracle of Saint ThÃ©rÃ¨se
               </a>
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26189'>
-                 Die menschen stehen vorwörts in den straßen
+                 Die menschen stehen vorwÃ¶rts in den straÃŸen
               </a>
             </td>
           </tr>
@@ -751,12 +751,12 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm28522'>
-                 Mágnas Miska
+                 MÃ¡gnas Miska
               </a>
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm13600'>
-                 Misère au borinage
+                 MisÃ¨re au borinage
               </a>
             </td>
             <td>
@@ -897,7 +897,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29930'>
-                 Il momento più bello
+                 Il momento piÃ¹ bello
               </a>
             </td>
           </tr>
@@ -965,7 +965,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30817'>
-                 La mala educación
+                 La mala educaciÃ³n
               </a>
             </td>
           </tr>
@@ -1016,7 +1016,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm12921'>
-                 La mansión de Araucaima
+                 La mansiÃ³n de Araucaima
               </a>
             </td>
           </tr>
@@ -1050,7 +1050,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm12970'>
-                 La mariée était en noir
+                 La mariÃ©e Ã©tait en noir
               </a>
             </td>
           </tr>
@@ -1074,7 +1074,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29257'>
-                 Malá morská víla
+                 MalÃ¡ morskÃ¡ vÃ­la
               </a>
             </td>
             <td>
@@ -1152,7 +1152,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm13894'>
-                 La mort du soleil ou Le fléau
+                 La mort du soleil ou Le flÃ©au
               </a>
             </td>
           </tr>
@@ -1237,7 +1237,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm14005'>
-                 La muerte de un burócrata
+                 La muerte de un burÃ³crata
               </a>
             </td>
           </tr>
@@ -1266,7 +1266,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm28960'>
-                 Mobilier fidèle
+                 Mobilier fidÃ¨le
               </a>
             </td>
             <td>
@@ -1356,7 +1356,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26913'>
-                 Le mâle du siècle
+                 Le mÃ¢le du siÃ¨cle
               </a>
             </td>
           </tr>
@@ -1390,7 +1390,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27212'>
-                 Le mani sulla città
+                 Le mani sulla cittÃ 
               </a>
             </td>
           </tr>
@@ -1419,7 +1419,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm12503'>
-                 Mødrehjaelpen
+                 MÃ¸drehjaelpen
               </a>
             </td>
             <td>
@@ -1458,7 +1458,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm12477'>
-                 Le mépris
+                 Le mÃ©pris
               </a>
             </td>
           </tr>
@@ -1470,7 +1470,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30708'>
-                 Moi fatigué debout, moi couché
+                 Moi fatiguÃ© debout, moi couchÃ©
               </a>
             </td>
             <td>
@@ -1521,7 +1521,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29364'>
-                 Môju
+                 MÃ´ju
               </a>
             </td>
             <td>
@@ -1550,7 +1550,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm28373'>
-                 Manèges
+                 ManÃ¨ges
               </a>
             </td>
             <td>
@@ -1594,7 +1594,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29241'>
-                 Le mystère Babilée
+                 Le mystÃ¨re BabilÃ©e
               </a>
             </td>
           </tr>
@@ -1611,7 +1611,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm25317'>
-                 Le mystère Koumiko
+                 Le mystÃ¨re Koumiko
               </a>
             </td>
           </tr>
@@ -1645,7 +1645,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26993'>
-                 Les ministères de l'art
+                 Les ministÃ¨res de l'art
               </a>
             </td>
           </tr>
@@ -1662,7 +1662,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm13598'>
-                 Les Misérables
+                 Les MisÃ©rables
               </a>
             </td>
           </tr>
@@ -1674,7 +1674,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm13767'>
-                 Mon oncle d'Amérique
+                 Mon oncle d'AmÃ©rique
               </a>
             </td>
             <td>
@@ -1691,7 +1691,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27348'>
-                 Mon père avait raison
+                 Mon pÃ¨re avait raison
               </a>
             </td>
             <td>
@@ -1713,7 +1713,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm14193'>
-                 Les mystères du Chateau du Dé
+                 Les mystÃ¨res du Chateau du DÃ©
               </a>
             </td>
           </tr>
@@ -1997,7 +1997,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30963'>
-                 Moolaadé
+                 MoolaadÃ©
               </a>
             </td>
             <td>
@@ -2366,7 +2366,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm13078'>
-                 Masculin-féminin
+                 Masculin-fÃ©minin
               </a>
             </td>
             <td>
@@ -2434,7 +2434,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30154'>
-                 Másnap
+                 MÃ¡snap
               </a>
             </td>
             <td>
@@ -2524,7 +2524,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm14104'>
-                 Mother Küsters goes to heaven
+                 Mother KÃ¼sters goes to heaven
               </a>
             </td>
             <td>
@@ -2689,7 +2689,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm13134'>
-                 Matka Joanna od aniolów
+                 Matka Joanna od aniolÃ³w
               </a>
             </td>
             <td>
@@ -2825,7 +2825,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27368'>
-                 MCDXXIX-MCMXLII (de Jeanne d'Arc à Philippe Pétain)
+                 MCDXXIX-MCMXLII (de Jeanne d'Arc Ã  Philippe PÃ©tain)
               </a>
             </td>
             <td>
@@ -3182,7 +3182,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm12465'>
-                 Mélo
+                 MÃ©lo
               </a>
             </td>
             <td>
@@ -3199,7 +3199,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27239'>
-                 Mélodie en sous-sol
+                 MÃ©lodie en sous-sol
               </a>
             </td>
             <td>
@@ -3233,7 +3233,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm12469'>
-                 Mémoire des apparences
+                 MÃ©moire des apparences
               </a>
             </td>
             <td>
@@ -3267,7 +3267,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm13293'>
-                 Memórias do cárcere
+                 MemÃ³rias do cÃ¡rcere
               </a>
             </td>
             <td>
@@ -3306,7 +3306,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26688'>
-                 Musik i mörker
+                 Musik i mÃ¶rker
               </a>
             </td>
             <td>
@@ -3323,7 +3323,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm14104'>
-                 Mutter Küsters fahrt zum himmel
+                 Mutter KÃ¼sters fahrt zum himmel
               </a>
             </td>
             <td>
