--- a/WebContent/include/browsetitleNlist.jspf
+++ b/WebContent/include/browsetitleNlist.jspf
@@ -25,7 +25,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26157'>
-                 Nicht löschbares feuer
+                 Nicht lÃ¶schbares feuer
               </a>
             </td>
             <td>
@@ -275,7 +275,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm14291'>
-                 Nadzór
+                 NadzÃ³r
               </a>
             </td>
             <td>
@@ -557,7 +557,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm15051'>
-                 Numéro deux
+                 NumÃ©ro deux
               </a>
             </td>
           </tr>
@@ -574,14 +574,14 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm15052'>
-                 Numéros zéro
+                 NumÃ©ros zÃ©ro
               </a>
             </td>
           </tr>
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm14342'>
-                 Naniwa erejî
+                 Naniwa erejÃ®
               </a>
             </td>
             <td>
@@ -620,7 +620,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29780'>
-                 Nincsenek véletlenek
+                 Nincsenek vÃ©letlenek
               </a>
             </td>
             <td>
@@ -666,7 +666,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27365'>
-                 Napoléon
+                 NapolÃ©on
               </a>
             </td>
             <td>
@@ -683,7 +683,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26679'>
-                 Nära livet
+                 NÃ¤ra livet
               </a>
             </td>
             <td>
@@ -807,7 +807,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29253'>
-                 Niño nadie
+                 NiÃ±o nadie
               </a>
             </td>
             <td>
@@ -955,7 +955,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm14400'>
-                 Nattvardsgästerna
+                 NattvardsgÃ¤sterna
               </a>
             </td>
             <td>
@@ -982,14 +982,14 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm15024'>
-                 La nuit américaine
+                 La nuit amÃ©ricaine
               </a>
             </td>
           </tr>
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27516'>
-                 Nausicaä of the valley of the wind
+                 NausicaÃ¤ of the valley of the wind
               </a>
             </td>
             <td>
@@ -1040,7 +1040,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29039'>
-                 Në fillim të verës
+                 NÃ« fillim tÃ« verÃ«s
               </a>
             </td>
             <td>
@@ -1142,7 +1142,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26247'>
-                 Necronomicon - geträumte sünden
+                 Necronomicon - getrÃ¤umte sÃ¼nden
               </a>
             </td>
             <td>
@@ -1402,7 +1402,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29879'>
-                 Noita palaa elämään
+                 Noita palaa elÃ¤mÃ¤Ã¤n
               </a>
             </td>
             <td>
@@ -1419,7 +1419,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm14216'>
-                 Non, ou a vã glória de mandar
+                 Non, ou a vÃ£ glÃ³ria de mandar
               </a>
             </td>
             <td>
@@ -1669,7 +1669,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm14609'>
-                 Nice à propos de Jean Vigo
+                 Nice Ã  propos de Jean Vigo
               </a>
             </td>
             <td>
