--- a/WebContent/include/browsetitleOlist.jspf
+++ b/WebContent/include/browsetitleOlist.jspf
@@ -574,7 +574,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm15667'>
-                 Oyû-sama
+                 OyÃ»-sama
               </a>
             </td>
           </tr>
@@ -761,7 +761,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm15420'>
-                 L' opéra Mouffe
+                 L' opÃ©ra Mouffe
               </a>
             </td>
           </tr>
@@ -778,7 +778,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29613'>
-                 L' origine du XXIème siècle
+                 L' origine du XXIÃ¨me siÃ¨cle
               </a>
             </td>
           </tr>
@@ -802,7 +802,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26219'>
-                 Ohne titel oder:  wanderking für ingenieur-studenten
+                 Ohne titel oder:  wanderking fÃ¼r ingenieur-studenten
               </a>
             </td>
             <td>
@@ -819,7 +819,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29194'>
-                 Ojôsan kanpai
+                 OjÃ´san kanpai
               </a>
             </td>
             <td>
@@ -858,7 +858,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm15422'>
-                 Opération beton
+                 OpÃ©ration beton
               </a>
             </td>
             <td>
@@ -909,7 +909,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26889'>
-                 Ophélia
+                 OphÃ©lia
               </a>
             </td>
             <td>
@@ -943,7 +943,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29414'>
-                 Oporto da minha infância
+                 Oporto da minha infÃ¢ncia
               </a>
             </td>
             <td>
@@ -1091,7 +1091,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm24559'>
-                 Om kärlek
+                 Om kÃ¤rlek
               </a>
             </td>
             <td>
@@ -1164,7 +1164,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm24678'>
-                 Örökbefogadás
+                 Ã–rÃ¶kbefogadÃ¡s
               </a>
             </td>
             <td>
@@ -1198,7 +1198,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm15502'>
-                 Orphée
+                 OrphÃ©e
               </a>
             </td>
             <td>
@@ -1210,7 +1210,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27139'>
-                 On a volé un homme
+                 On a volÃ© un homme
               </a>
             </td>
             <td>
@@ -1232,7 +1232,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm15509'>
-                 Orson Welles à la Cinémathèque
+                 Orson Welles Ã  la CinÃ©mathÃ¨que
               </a>
             </td>
             <td>
@@ -1346,7 +1346,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm15318'>
-                 On purge bébé
+                 On purge bÃ©bÃ©
               </a>
             </td>
             <td>
@@ -1363,7 +1363,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29612'>
-                 On s'est tous défilé
+                 On s'est tous dÃ©filÃ©
               </a>
             </td>
             <td>
@@ -1385,7 +1385,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm24553'>
-                 Ostre sledované vlaky
+                 Ostre sledovanÃ© vlaky
               </a>
             </td>
             <td>
@@ -1402,7 +1402,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm396'>
-                 Öszi almanach
+                 Ã–szi almanach
               </a>
             </td>
             <td>
