--- a/WebContent/include/browsetitlePlist.jspf
+++ b/WebContent/include/browsetitlePlist.jspf
@@ -3,7 +3,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm28788'>
-                 PÂ rymmen med Pippi LÂngstrump
+                 P√• rymmen med Pippi L√•ngstrump
               </a>
             </td>
             <td>
@@ -20,7 +20,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm15722'>
-                 Paciorki jednego rÛzanca
+                 Paciorki jednego r√≥zanca
               </a>
             </td>
             <td>
@@ -30,7 +30,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26881'>
-                 P¸nktchen und Anton
+                 P√ºnktchen und Anton
               </a>
             </td>
           </tr>
@@ -139,7 +139,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm15712'>
-                 PaÔs‡
+                 Pa√Øs√†
               </a>
             </td>
             <td>
@@ -377,7 +377,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29840'>
-                 Panj È asr
+                 Panj √© asr
               </a>
             </td>
             <td>
@@ -404,7 +404,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29409'>
-                 As pinturas do meu irm„o J˙lio
+                 As pinturas do meu irm√£o J√∫lio
               </a>
             </td>
           </tr>
@@ -496,7 +496,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm15838'>
-                 Paperit‰hti
+                 Paperit√§hti
               </a>
             </td>
             <td>
@@ -523,7 +523,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30146'>
-                 El principio de ArquÌmedes
+                 El principio de Arqu√≠medes
               </a>
             </td>
           </tr>
@@ -586,7 +586,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm28398'>
-                 Poika eli kes‰‰ns‰
+                 Poika eli kes√§√§ns√§
               </a>
             </td>
             <td>
@@ -659,7 +659,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm15974'>
-                 La pasiÛn turca
+                 La pasi√≥n turca
               </a>
             </td>
           </tr>
@@ -744,7 +744,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm28444'>
-                 La planËte sauvage
+                 La plan√®te sauvage
               </a>
             </td>
           </tr>
@@ -761,7 +761,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29807'>
-                 La pluma del arc·ngel
+                 La pluma del arc√°ngel
               </a>
             </td>
           </tr>
@@ -773,7 +773,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm16643'>
-                 PomocnÌk
+                 Pomocn√≠k
               </a>
             </td>
             <td>
@@ -819,7 +819,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm15911'>
-                 Paris s'Èveille
+                 Paris s'√©veille
               </a>
             </td>
             <td>
@@ -829,7 +829,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm16806'>
-                 La prÈsence rÈelle
+                 La pr√©sence r√©elle
               </a>
             </td>
           </tr>
@@ -875,7 +875,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm16660'>
-                 PopiÛl i diament
+                 Popi√≥l i diament
               </a>
             </td>
             <td>
@@ -982,7 +982,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm16249'>
-                 Le petit thÈ‚tre de Jean Renoir
+                 Le petit th√©√¢tre de Jean Renoir
               </a>
             </td>
           </tr>
@@ -1045,12 +1045,12 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm25517'>
-                 Portrait d'une jeune fille de la fin des anneÈs 60, ‡ Bruxelles
+                 Portrait d'une jeune fille de la fin des anne√©s 60, √† Bruxelles
               </a>
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29896'>
-                 Le piËge
+                 Le pi√®ge
               </a>
             </td>
           </tr>
@@ -1084,7 +1084,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm16525'>
-                 Le plus vieux mÈtier du monde
+                 Le plus vieux m√©tier du monde
               </a>
             </td>
           </tr>
@@ -1118,7 +1118,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30070'>
-                 Le port du dÈsir
+                 Le port du d√©sir
               </a>
             </td>
           </tr>
@@ -1130,12 +1130,12 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26739'>
-                 Portr‰t einer bew‰hrung
+                 Portr√§t einer bew√§hrung
               </a>
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm17005'>
-                 Le procËs de Jeanne d'Arc
+                 Le proc√®s de Jeanne d'Arc
               </a>
             </td>
           </tr>
@@ -1198,7 +1198,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29255'>
-                 PoslednÌ motyl
+                 Posledn√≠ motyl
               </a>
             </td>
             <td>
@@ -1254,7 +1254,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm16735'>
-                 Les possÈdÈs
+                 Les poss√©d√©s
               </a>
             </td>
           </tr>
@@ -1288,7 +1288,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29405'>
-                 O p„o
+                 O p√£o
               </a>
             </td>
           </tr>
@@ -1339,7 +1339,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29412'>
-                 O princÌpio da incerteza
+                 O princ√≠pio da incerteza
               </a>
             </td>
           </tr>
@@ -1402,7 +1402,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm16781'>
-                 PoussiËre d'ange
+                 Poussi√®re d'ange
               </a>
             </td>
             <td>
@@ -1465,7 +1465,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30941'>
-                 Paul Robeson und Earl Robinson singen f¸r die DDR
+                 Paul Robeson und Earl Robinson singen f√ºr die DDR
               </a>
             </td>
             <td>
@@ -1521,7 +1521,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29329'>
-                 PrÊsidenten
+                 Pr√¶sidenten
               </a>
             </td>
             <td>
@@ -1538,7 +1538,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29330'>
-                 Pr‰st‰nkan
+                 Pr√§st√§nkan
               </a>
             </td>
             <td>
@@ -1567,7 +1567,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm16053'>
-                 Pauline ‡ la plage
+                 Pauline √† la plage
               </a>
             </td>
             <td>
@@ -1601,7 +1601,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm16055'>
-                 Paura nella citt‡ dei morti viventi
+                 Paura nella citt√† dei morti viventi
               </a>
             </td>
             <td>
@@ -1708,7 +1708,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm16805'>
-                 PrÈnom Carmen
+                 Pr√©nom Carmen
               </a>
             </td>
             <td>
@@ -1856,7 +1856,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm15681'>
-                 PÈpÈ le Moko
+                 P√©p√© le Moko
               </a>
             </td>
             <td>
@@ -1890,7 +1890,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm16140'>
-                 Pepi, Luci, Bom y otras chicas del montÛn
+                 Pepi, Luci, Bom y otras chicas del mont√≥n
               </a>
             </td>
             <td>
@@ -2111,7 +2111,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm16239'>
-                 Petit ‡ petit
+                 Petit √† petit
               </a>
             </td>
             <td>
@@ -2145,7 +2145,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm16260'>
-                 Petites notes ‡ propos du film "je vous salue, marie"
+                 Petites notes √† propos du film "je vous salue, marie"
               </a>
             </td>
             <td>
@@ -2184,7 +2184,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm28926'>
-                 PrÌzrak svobody
+                 Pr√≠zrak svobody
               </a>
             </td>
             <td>
@@ -2218,7 +2218,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29915'>
-                 ProcËs au Vatican
+                 Proc√®s au Vatican
               </a>
             </td>
             <td>
@@ -2235,7 +2235,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm28553'>
-                 ProcesÌ k panence
+                 Proces√≠ k panence
               </a>
             </td>
             <td>
@@ -2349,7 +2349,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm24731'>
-                 Picasso ‰eventyr
+                 Picasso √§eventyr
               </a>
             </td>
             <td>
@@ -2468,7 +2468,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm16362'>
-                 Pid‰ huivista kiinni, Tatjana
+                 Pid√§ huivista kiinni, Tatjana
               </a>
             </td>
             <td>
@@ -2536,7 +2536,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27689'>
-                 Pier Paolo and TotÚ
+                 Pier Paolo and Tot√≤
               </a>
             </td>
             <td>
