--- a/WebContent/include/browsetitleQlist.jspf
+++ b/WebContent/include/browsetitleQlist.jspf
@@ -8,7 +8,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30185'>
-                 Quase dois irmãos
+                 Quase dois irmÃ£os
               </a>
             </td>
             <td>
@@ -110,7 +110,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm17232'>
-                 Quatre nuits d'un rêveur
+                 Quatre nuits d'un rÃªveur
               </a>
             </td>
             <td>
@@ -127,7 +127,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26621'>
-                 ¿Que hacer?
+                 Â¿Que hacer?
               </a>
             </td>
             <td>
@@ -144,7 +144,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm17196'>
-                 Qué he hecho yo para merecer esto?!!
+                 QuÃ© he hecho yo para merecer esto?!!
               </a>
             </td>
             <td>
@@ -161,12 +161,12 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26899'>
-                 Que la bête meure
+                 Que la bÃªte meure
               </a>
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29937'>
-                 Les quatre vérités
+                 Les quatre vÃ©ritÃ©s
               </a>
             </td>
           </tr>
@@ -280,7 +280,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29430'>
-                 Quem é Beta?
+                 Quem Ã© Beta?
               </a>
             </td>
             <td>
@@ -292,7 +292,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm17202'>
-                 Quai des Orfèvres
+                 Quai des OrfÃ¨vres
               </a>
             </td>
             <td>
