--- a/WebContent/include/browsetitleRlist.jspf
+++ b/WebContent/include/browsetitleRlist.jspf
@@ -234,7 +234,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm17638'>
-                 A Rejtozködo
+                 A RejtozkÃ¶do
               </a>
             </td>
           </tr>
@@ -353,7 +353,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm28799'>
-                 De røde enge
+                 De rÃ¸de enge
               </a>
             </td>
           </tr>
@@ -387,7 +387,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm28555'>
-                 Die rückkehr des alten herrn
+                 Die rÃ¼ckkehr des alten herrn
               </a>
             </td>
           </tr>
@@ -411,7 +411,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27292'>
-                 Ramuz, passage d'un poète
+                 Ramuz, passage d'un poÃ¨te
               </a>
             </td>
             <td>
@@ -506,14 +506,14 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30071'>
-                 La récréation
+                 La rÃ©crÃ©ation
               </a>
             </td>
           </tr>
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30924'>
-                 Raphaël ou le débauché
+                 RaphaÃ«l ou le dÃ©bauchÃ©
               </a>
             </td>
             <td>
@@ -540,7 +540,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm17306'>
-                 La règle du jeu
+                 La rÃ¨gle du jeu
               </a>
             </td>
           </tr>
@@ -557,7 +557,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm17619'>
-                 La reina anónima
+                 La reina anÃ³nima
               </a>
             </td>
           </tr>
@@ -693,7 +693,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26226'>
-                 Le retour à la raison
+                 Le retour Ã  la raison
               </a>
             </td>
           </tr>
@@ -727,7 +727,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27003'>
-                 Le révélateur
+                 Le rÃ©vÃ©lateur
               </a>
             </td>
           </tr>
@@ -1113,7 +1113,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30030'>
-                 Roma, città aperta
+                 Roma, cittÃ  aperta
               </a>
             </td>
             <td>
@@ -1159,7 +1159,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm28836'>
-                 Reed, México insurgent
+                 Reed, MÃ©xico insurgent
               </a>
             </td>
             <td>
@@ -1198,7 +1198,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm18063'>
-                 Romance pro krídlovku
+                 Romance pro krÃ­dlovku
               </a>
             </td>
             <td>
@@ -1278,7 +1278,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm17295'>
-                 Régime sans pain
+                 RÃ©gime sans pain
               </a>
             </td>
             <td>
@@ -1419,7 +1419,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm28729'>
-                 Rosa arbeiter auf goldener straße
+                 Rosa arbeiter auf goldener straÃŸe
               </a>
             </td>
             <td>
@@ -1504,7 +1504,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27441'>
-                 Rosen für Bettina
+                 Rosen fÃ¼r Bettina
               </a>
             </td>
             <td>
@@ -1550,7 +1550,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27354'>
-                 Remontons les Champs-Elysées
+                 Remontons les Champs-ElysÃ©es
               </a>
             </td>
             <td>
@@ -1601,7 +1601,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm28832'>
-                 Rendez-vous à Bray
+                 Rendez-vous Ã  Bray
               </a>
             </td>
             <td>
@@ -1618,7 +1618,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27512'>
-                 Rendez-vous avec le Président
+                 Rendez-vous avec le PrÃ©sident
               </a>
             </td>
             <td>
@@ -1788,7 +1788,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30699'>
-                 Réponse de femmes: notre corps, notre sexe
+                 RÃ©ponse de femmes: notre corps, notre sexe
               </a>
             </td>
             <td>
@@ -1878,7 +1878,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27038'>
-                 Rukajärven tie
+                 RukajÃ¤rven tie
               </a>
             </td>
             <td>
@@ -1958,7 +1958,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm17733'>
-                 Retour à la vie
+                 Retour Ã  la vie
               </a>
             </td>
             <td>
@@ -2036,7 +2036,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30178'>
-                 Un rêve algérien
+                 Un rÃªve algÃ©rien
               </a>
             </td>
           </tr>
