--- a/WebContent/include/browsetitleSlist.jspf
+++ b/WebContent/include/browsetitleSlist.jspf
@@ -20,7 +20,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30168'>
-                 Så som i himmelen
+                 SÃ¥ som i himmelen
               </a>
             </td>
             <td>
@@ -37,12 +37,12 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm28715'>
-                 Så vit som en snö
+                 SÃ¥ vit som en snÃ¶
               </a>
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27366'>
-                 Si Paris nous était conté
+                 Si Paris nous Ã©tait contÃ©
               </a>
             </td>
             <td>
@@ -59,7 +59,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27364'>
-                 Si Versailles m'etait conté
+                 Si Versailles m'etait contÃ©
               </a>
             </td>
             <td>
@@ -195,7 +195,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm19246'>
-                 Sida, paroles de l'un à l'autre
+                 Sida, paroles de l'un Ã  l'autre
               </a>
             </td>
             <td>
@@ -331,7 +331,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30718'>
-                 Sigui-synthèse
+                 Sigui-synthÃ¨se
               </a>
             </td>
             <td>
@@ -377,7 +377,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm18416'>
-                 Salò o le 120 giornate di Sodoma
+                 SalÃ² o le 120 giornate di Sodoma
               </a>
             </td>
             <td>
@@ -683,7 +683,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm18457'>
-                 Sam pósród swoich
+                 Sam pÃ³srÃ³d swoich
               </a>
             </td>
             <td>
@@ -914,7 +914,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm20468'>
-                 Svo á jördu sem á himni
+                 Svo Ã¡ jÃ¶rdu sem Ã¡ himni
               </a>
             </td>
           </tr>
@@ -1079,7 +1079,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27187'>
-                 Skilsmissens børn
+                 Skilsmissens bÃ¸rn
               </a>
             </td>
             <td>
@@ -1181,7 +1181,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm19432'>
-                 Skrivánci na nitich
+                 SkrivÃ¡nci na nitich
               </a>
             </td>
             <td>
@@ -1227,7 +1227,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm18523'>
-                 Sanshô dayû
+                 SanshÃ´ dayÃ»
               </a>
             </td>
             <td>
@@ -1278,7 +1278,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26733'>
-                 Sånt händer inte här
+                 SÃ¥nt hÃ¤nder inte hÃ¤r
               </a>
             </td>
             <td>
@@ -1516,7 +1516,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm18338'>
-                 Såsom i en spegel
+                 SÃ¥som i en spegel
               </a>
             </td>
             <td>
@@ -1628,7 +1628,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27906'>
-                 A sípoló macskakö
+                 A sÃ­polÃ³ macskakÃ¶
               </a>
             </td>
           </tr>
@@ -1691,7 +1691,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm19582'>
-                 Smrt krásných srncu
+                 Smrt krÃ¡snÃ½ch srncu
               </a>
             </td>
             <td>
@@ -1725,7 +1725,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm19586'>
-                 Smultronstället
+                 SmultronstÃ¤llet
               </a>
             </td>
             <td>
@@ -2082,7 +2082,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm24567'>
-                 Sobre la canción politica
+                 Sobre la canciÃ³n politica
               </a>
             </td>
             <td>
@@ -2094,7 +2094,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29609'>
-                 Scénario de 'Sauve qui peut la vie'
+                 ScÃ©nario de 'Sauve qui peut la vie'
               </a>
             </td>
             <td>
@@ -2111,7 +2111,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm18612'>
-                 Scénario du film 'passion'
+                 ScÃ©nario du film 'passion'
               </a>
             </td>
             <td>
@@ -2128,7 +2128,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm18643'>
-                 Scener ur ett äktenskap
+                 Scener ur ett Ã¤ktenskap
               </a>
             </td>
             <td>
@@ -2223,7 +2223,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27417'>
-                 El súper
+                 El sÃºper
               </a>
             </td>
           </tr>
@@ -2235,7 +2235,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm25909'>
-                 Sol de otoño
+                 Sol de otoÃ±o
               </a>
             </td>
             <td>
@@ -2257,14 +2257,14 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm1491'>
-                 I sopravvissuti della città morta
+                 I sopravvissuti della cittÃ  morta
               </a>
             </td>
           </tr>
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm18691'>
-                 Schloss vogelöd
+                 Schloss vogelÃ¶d
               </a>
             </td>
             <td>
@@ -2315,7 +2315,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm18658'>
-                 Schöne tage
+                 SchÃ¶ne tage
               </a>
             </td>
             <td>
@@ -2325,7 +2325,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm28404'>
-                 La Seine a rencontré Paris
+                 La Seine a rencontrÃ© Paris
               </a>
             </td>
           </tr>
@@ -2427,7 +2427,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm19385'>
-                 La sirène du Mississippi
+                 La sirÃ¨ne du Mississippi
               </a>
             </td>
           </tr>
@@ -2461,7 +2461,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm19798'>
-                 La Soufrière - warten auf ein unausweichliche katastrophe
+                 La SoufriÃ¨re - warten auf ein unausweichliche katastrophe
               </a>
             </td>
           </tr>
@@ -2529,7 +2529,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm18477'>
-                 Le samouraï
+                 Le samouraÃ¯
               </a>
             </td>
           </tr>
@@ -2546,7 +2546,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm18504'>
-                 Le sang d'un poète
+                 Le sang d'un poÃ¨te
               </a>
             </td>
           </tr>
@@ -2648,7 +2648,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30167'>
-                 Le soleil assassiné
+                 Le soleil assassinÃ©
               </a>
             </td>
           </tr>
@@ -2733,7 +2733,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm18957'>
-                 Les sept péchés capitaux
+                 Les sept pÃ©chÃ©s capitaux
               </a>
             </td>
           </tr>
@@ -2767,7 +2767,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30119'>
-                 Les soleils de l'Ile de Pâques
+                 Les soleils de l'Ile de PÃ¢ques
               </a>
             </td>
           </tr>
@@ -2978,7 +2978,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm18867'>
-                 Sedmikrásky
+                 SedmikrÃ¡sky
               </a>
             </td>
             <td>
@@ -4887,7 +4887,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29342'>
-                 Storstrømsbroen
+                 StorstrÃ¸msbroen
               </a>
             </td>
             <td>
@@ -5635,7 +5635,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26042'>
-                 Stützen der gesellschaft
+                 StÃ¼tzen der gesellschaft
               </a>
             </td>
             <td>
