--- a/WebContent/include/browsetitleTlist.jspf
+++ b/WebContent/include/browsetitleTlist.jspf
@@ -47,7 +47,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27751'>
-                 Tutto l'amore che c'è
+                 Tutto l'amore che c'Ã¨
               </a>
             </td>
           </tr>
@@ -81,7 +81,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29333'>
-                 Två människor
+                 TvÃ¥ mÃ¤nniskor
               </a>
             </td>
           </tr>
@@ -671,7 +671,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27358'>
-                 Toâ
+                 ToÃ¢
               </a>
             </td>
             <td>
@@ -836,7 +836,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27901'>
-                 Társasutazás
+                 TÃ¡rsasutazÃ¡s
               </a>
             </td>
             <td>
@@ -853,7 +853,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm20764'>
-                 Tartüff
+                 TartÃ¼ff
               </a>
             </td>
             <td>
@@ -875,7 +875,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27395'>
-                 Toh, è morta la nonna!
+                 Toh, Ã¨ morta la nonna!
               </a>
             </td>
             <td>
@@ -1074,7 +1074,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm20811'>
-                 Te még élsz?
+                 Te mÃ©g Ã©lsz?
               </a>
             </td>
             <td>
@@ -1458,7 +1458,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26763'>
-                 De två saliga
+                 De tvÃ¥ saliga
               </a>
             </td>
           </tr>
@@ -1679,7 +1679,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30836'>
-                 La tête dans les nuages
+                 La tÃªte dans les nuages
               </a>
             </td>
           </tr>
@@ -1713,7 +1713,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm21569'>
-                 La traversée de Paris
+                 La traversÃ©e de Paris
               </a>
             </td>
           </tr>
@@ -1747,7 +1747,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm30330'>
-                 Le temps retrouvé
+                 Le temps retrouvÃ©
               </a>
             </td>
           </tr>
@@ -1815,7 +1815,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26893'>
-                 Le tigre se parfume à la dynamite
+                 Le tigre se parfume Ã  la dynamite
               </a>
             </td>
           </tr>
@@ -1917,7 +1917,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27359'>
-                 Le trésor de Cantenac
+                 Le trÃ©sor de Cantenac
               </a>
             </td>
           </tr>
@@ -1929,7 +1929,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26734'>
-                 Törst
+                 TÃ¶rst
               </a>
             </td>
             <td>
@@ -1975,7 +1975,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm21011'>
-                 Thérèse Raquin
+                 ThÃ©rÃ¨se Raquin
               </a>
             </td>
             <td>
@@ -2099,7 +2099,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27373'>
-                 Totò cerca casa
+                 TotÃ² cerca casa
               </a>
             </td>
             <td>
@@ -2116,7 +2116,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27379'>
-                 Totò e Carolina
+                 TotÃ² e Carolina
               </a>
             </td>
             <td>
@@ -2133,7 +2133,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27377'>
-                 Totò e i re di Roma
+                 TotÃ² e i re di Roma
               </a>
             </td>
             <td>
@@ -2150,7 +2150,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27407'>
-                 Totò e le donne
+                 TotÃ² e le donne
               </a>
             </td>
             <td>
@@ -2184,7 +2184,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm21441'>
-                 Touche pas à la femme blanche
+                 Touche pas Ã  la femme blanche
               </a>
             </td>
             <td>
@@ -2592,7 +2592,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27640'>
-                 Tragödie im hause Hapsburg
+                 TragÃ¶die im hause Hapsburg
               </a>
             </td>
             <td>
@@ -2728,7 +2728,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29264'>
-                 Trápení
+                 TrÃ¡penÃ­
               </a>
             </td>
             <td>
@@ -2898,7 +2898,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm28943'>
-                 Un 32 août sur terre
+                 Un 32 aoÃ»t sur terre
               </a>
             </td>
             <td>
@@ -3136,7 +3136,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm21675'>
-                 Trollflöjten
+                 TrollflÃ¶jten
               </a>
             </td>
             <td>
@@ -3527,7 +3527,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm21753'>
-                 Tu m'as sauvé la vie
+                 Tu m'as sauvÃ© la vie
               </a>
             </td>
             <td>
@@ -3539,7 +3539,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26735'>
-                 Till glädje
+                 Till glÃ¤dje
               </a>
             </td>
             <td>
@@ -3612,7 +3612,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm21769'>
-                 Tulitikkutehtaan tyttö
+                 Tulitikkutehtaan tyttÃ¶
               </a>
             </td>
             <td>
@@ -3680,7 +3680,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27907'>
-                 Túsztörténet
+                 TÃºsztÃ¶rtÃ©net
               </a>
             </td>
             <td>
