--- a/WebContent/include/browsetitleUlist.jspf
+++ b/WebContent/include/browsetitleUlist.jspf
@@ -54,7 +54,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26209'>
-                 ‹ber "Gelegenheitsarbeit einer sklavin"
+                 √úber "Gelegenheitsarbeit einer sklavin"
               </a>
             </td>
             <td>
@@ -64,14 +64,14 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29258'>
-                 Uz zase sk·cu pres kaluze
+                 Uz zase sk√°cu pres kaluze
               </a>
             </td>
           </tr>
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26206'>
-                 ‹ber "Song of ceylon" von Basil Wright
+                 √úber "Song of ceylon" von Basil Wright
               </a>
             </td>
             <td>
@@ -88,7 +88,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27577'>
-                 ‹berfall
+                 √úberfall
               </a>
             </td>
             <td>
@@ -144,7 +144,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm22002'>
-                 UndergÂngens arkitektur
+                 Underg√•ngens arkitektur
               </a>
             </td>
             <td>
@@ -234,7 +234,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm26742'>
-                 Die unbez‰hmbare Leni Peikert
+                 Die unbez√§hmbare Leni Peikert
               </a>
             </td>
           </tr>
@@ -319,7 +319,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm198'>
-                 La ˙ltima cena
+                 La √∫ltima cena
               </a>
             </td>
           </tr>
@@ -649,7 +649,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm21978'>
-                 Und n‰chstes jahr am Balaton
+                 Und n√§chstes jahr am Balaton
               </a>
             </td>
             <td>
