--- a/WebContent/include/browsetitleVlist.jspf
+++ b/WebContent/include/browsetitleVlist.jspf
@@ -122,7 +122,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm24574'>
-                 Vale Abra„o
+                 Vale Abra√£o
               </a>
             </td>
             <td>
@@ -144,7 +144,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm22598'>
-                 Violette NoziËre
+                 Violette Nozi√®re
               </a>
             </td>
             <td>
@@ -173,7 +173,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27903'>
-                 V·logat·s
+                 V√°logat√°s
               </a>
             </td>
             <td>
@@ -200,7 +200,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm22254'>
-                 La vallÈe fantÙme
+                 La vall√©e fant√¥me
               </a>
             </td>
           </tr>
@@ -263,7 +263,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29410'>
-                 Visita ou MemÛrias e confissıes
+                 Visita ou Mem√≥rias e confiss√µes
               </a>
             </td>
             <td>
@@ -302,7 +302,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29935'>
-                 La vie conjugale (FranÁoise)
+                 La vie conjugale (Fran√ßoise)
               </a>
             </td>
           </tr>
@@ -336,14 +336,14 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27363'>
-                 La vie d'un honnÍte homme
+                 La vie d'un honn√™te homme
               </a>
             </td>
           </tr>
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm22301'>
-                 Vas·rnapi sz¸lok
+                 Vas√°rnapi sz√ºlok
               </a>
             </td>
             <td>
@@ -353,7 +353,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm22513'>
-                 La vie de BohËme
+                 La vie de Boh√®me
               </a>
             </td>
           </tr>
@@ -387,7 +387,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm22522'>
-                 La vie est ‡ nous
+                 La vie est √† nous
               </a>
             </td>
           </tr>
@@ -428,7 +428,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm22329'>
-                 VeillÈes d'armes
+                 Veill√©es d'armes
               </a>
             </td>
             <td>
@@ -472,7 +472,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm22698'>
-                 La voie lactÈe
+                 La voie lact√©e
               </a>
             </td>
           </tr>
@@ -574,7 +574,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm22759'>
-                 Le voyage Ètranger
+                 Le voyage √©tranger
               </a>
             </td>
           </tr>
@@ -625,7 +625,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29206'>
-                 Les vilaines maniËres
+                 Les vilaines mani√®res
               </a>
             </td>
           </tr>
@@ -751,7 +751,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm24557'>
-                 Vesnicko m· strediskov·
+                 Vesnicko m√° strediskov√°
               </a>
             </td>
             <td>
@@ -773,7 +773,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27592'>
-                 Vous intÈressez-vous ‡ la chose
+                 Vous int√©ressez-vous √† la chose
               </a>
             </td>
             <td>
@@ -921,7 +921,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm22500'>
-                 Vidas sÍcas
+                 Vidas s√™cas
               </a>
             </td>
             <td>
@@ -960,7 +960,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm22203'>
-                 Vsichni dobrÌ rod·ci
+                 Vsichni dobr√≠ rod√°ci
               </a>
             </td>
             <td>
@@ -977,7 +977,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27594'>
-                 Vsichni moji blÌzcÌ
+                 Vsichni moji bl√≠zc√≠
               </a>
             </td>
             <td>
@@ -994,7 +994,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm27533'>
-                 Vuxna m‰nniskor
+                 Vuxna m√§nniskor
               </a>
             </td>
             <td>
@@ -1028,7 +1028,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29262'>
-                 Vysok· sed
+                 Vysok√° sed
               </a>
             </td>
             <td>
