--- a/WebContent/include/browsetitleWlist.jspf
+++ b/WebContent/include/browsetitleWlist.jspf
@@ -353,7 +353,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm23034'>
-                 Die weisse hölle vom Piz Palu
+                 Die weisse hÃ¶lle vom Piz Palu
               </a>
             </td>
           </tr>
@@ -683,7 +683,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm25974'>
-                 Warum läuft Herr R. amok?
+                 Warum lÃ¤uft Herr R. amok?
               </a>
             </td>
             <td>
@@ -1283,7 +1283,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm23395'>
-                 Wo die grünen ameisen träumen
+                 Wo die grÃ¼nen ameisen trÃ¤umen
               </a>
             </td>
             <td>
@@ -1317,7 +1317,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm9007'>
-                 Wodaabe - die hirten der sonne. Nomaden am Südrand
+                 Wodaabe - die hirten der sonne. Nomaden am SÃ¼drand
               </a>
             </td>
             <td>
