--- a/WebContent/include/browsetitleYlist.jspf
+++ b/WebContent/include/browsetitleYlist.jspf
@@ -3,7 +3,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm28719'>
-                 Y tu mamá también
+                 Y tu mamÃ¡ tambiÃ©n
               </a>
             </td>
             <td>
@@ -25,7 +25,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29588'>
-                 Yôkihi
+                 YÃ´kihi
               </a>
             </td>
             <td>
@@ -132,7 +132,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm23691'>
-                 Yume miruyôni nemuritai
+                 Yume miruyÃ´ni nemuritai
               </a>
             </td>
           </tr>
@@ -411,7 +411,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm24622'>
-                 Yfir kjöl
+                 Yfir kjÃ¶l
               </a>
             </td>
             <td>
