--- a/WebContent/include/browsetitleZlist.jspf
+++ b/WebContent/include/browsetitleZlist.jspf
@@ -30,7 +30,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29137'>
-                 Zlocin v sant·nu
+                 Zlocin v sant√°nu
               </a>
             </td>
           </tr>
@@ -110,7 +110,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm23709'>
-                 ZÈro de conduite
+                 Z√©ro de conduite
               </a>
             </td>
             <td>
@@ -241,7 +241,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm29263'>
-                 Z·vrat
+                 Z√°vrat
               </a>
             </td>
             <td>
@@ -314,7 +314,7 @@
             </td>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm23885'>
-                 ZirÈ dar‚kht‚n zeyton
+                 Zir√© dar√¢kht√¢n zeyton
               </a>
             </td>
             <td>
@@ -326,7 +326,7 @@
           <tr>
             <td>
               <a href='/cinefiles/FilmDetail?filmId=pfafilm23827'>
-                 Zeit der gˆtter
+                 Zeit der g√∂tter
               </a>
             </td>
             <td>
