--- a/WebContent/include/dirlist.jspf
+++ b/WebContent/include/dirlist.jspf
@@ -45,7 +45,7 @@
 <td><a href='/cinefiles/FilmSearch?nameId=person411'>Browning, Tod</a></td></tr>
 <tr><td><a href='/cinefiles/FilmSearch?nameId=person17003'>Baillie, Bruce</a></td>
 <td><a href='/cinefiles/FilmSearch?nameId=person14191'>Borzage, Frank</a></td>
-<td><a href='/cinefiles/FilmSearch?nameId=person2174'>BuÒuel, Luis</a></td></tr>
+<td><a href='/cinefiles/FilmSearch?nameId=person2174'>Bu√±uel, Luis</a></td></tr>
 <tr><td><a href='/cinefiles/FilmSearch?nameId=person1258'>Baldwin, Craig</a></td>
 <td><a href='/cinefiles/FilmSearch?nameId=person2014'>Brakhage, Stan</a></td>
 <td><a href='/cinefiles/FilmSearch?nameId=person2230'>Burnett, Charles</a></td></tr>
@@ -124,10 +124,10 @@
 <tr><td><a href='/cinefiles/FilmSearch?nameId=person6214'>Kato, Tai</a></td>
 <td><a href='/cinefiles/FilmSearch?nameId=person6355'>Kiarostami, Abbas</a></td>
 <td><a href='/cinefiles/FilmSearch?nameId=person6559'>Korda, Alexander</a></td></tr>
-<tr><td><a href='/cinefiles/FilmSearch?nameId=person6234'>Kaurism‰ki, Aki</a></td>
+<tr><td><a href='/cinefiles/FilmSearch?nameId=person6234'>Kaurism√§ki, Aki</a></td>
 <td><a href='/cinefiles/FilmSearch?nameId=person26591'>Kim, Ki-Young</a></td>
 <td><a href='/cinefiles/FilmSearch?nameId=person186'>Kozintsev, Grigori</a></td></tr>
-<tr><td><a href='/cinefiles/FilmSearch?nameId=person6235'>Kaurism‰ki, Mika</a></td>
+<tr><td><a href='/cinefiles/FilmSearch?nameId=person6235'>Kaurism√§ki, Mika</a></td>
 <td><a href='/cinefiles/FilmSearch?nameId=person6395'>Kinoshita, Keisuke</a></td>
 <td><a href='/cinefiles/FilmSearch?nameId=person6724'>Kurosawa, Akira</a></td></tr>
 <tr><td><a href='/cinefiles/FilmSearch?nameId=person6244'>Kawalerowicz, Jerzy</a></td>
@@ -198,7 +198,7 @@
 <td><a href='/cinefiles/FilmSearch?nameId=person10046'>Rosi, Francesco</a></td>
 <td></td></tr>
 <tr><td colspan='3'><a name='S' href='#'/><br /></td></tr>
-<tr><td><a href='/cinefiles/FilmSearch?nameId=person10317'>Santos, NÈlson</a></td>
+<tr><td><a href='/cinefiles/FilmSearch?nameId=person10317'>Santos, N√©lson</a></td>
 <td><a href='/cinefiles/FilmSearch?nameId=person10771'>Shinoda, Masahiro</a></td>
 <td><a href='/cinefiles/FilmSearch?nameId=person10999'>Sokurov, Alexander</a></td></tr>
 <tr><td><a href='/cinefiles/FilmSearch?nameId=person10473'>Schmid, Daniel</a></td>
