--- a/WebContent/include/themestopics.jspf
+++ b/WebContent/include/themestopics.jspf
@@ -123,7 +123,7 @@
                 <li>
                   <ul>
                     <li class="lired">Continous Journey, 2004</li>
-                    <li class="lired">Jésus de montéal, 1989</li>
+                    <li class="lired">JÃ©sus de montÃ©al, 1989</li>
                     <li class="lired">Just watch me: Trudeau and the 70's generation, 1999</li>
                     <li class="lired">Mon oncle Antoine, 1971</li>
                     <li class="lired">Pour la suite du monde (Of whales, the moon and men), 1963</li>
@@ -138,7 +138,7 @@
                     <li class="lired">Buena Vista Social Club, 1999</li>
                     <li class="liref"><a href="/cinefiles/FilmDetail?filmId=pfafilm27913">Fresa y chocolate</a>, 1993</li>
                     <li class="lired">Memorias de subdesarrollo (Memories of underdevelopment), 1968</li>
-                    <li class="liref"><a href="/cinefiles/FilmDetail?filmId=pfafilm14005">muerte de un burócrata</a>, 1966</li>
+                    <li class="liref"><a href="/cinefiles/FilmDetail?filmId=pfafilm14005">muerte de un burÃ³crata</a>, 1966</li>
                     <li class="lired">Soy Cuba, 1964</li>
                   </ul>
                 </li>
@@ -466,7 +466,7 @@
                 <li class="lisub"></li>
                   <ul>
                     <li class="liref"><a href="/cinefiles/FilmDetail?filmId=pfafilm932">Alphaville</a>, 1965</li>
-                    <li class="liref"><a href="/cinefiles/FilmDetail?filmId=pfafilm1373">Antonio Gaudí</a>, 1984</li>
+                    <li class="liref"><a href="/cinefiles/FilmDetail?filmId=pfafilm1373">Antonio GaudÃ­</a>, 1984</li>
                     <li class="liref"><a href="/cinefiles/FilmDetail?filmId=pfafilm1480">L'argent</a>, 1983</li>
                     <li class="liref"><a href="/cinefiles/FilmDetail?filmId=pfafilm24448">Cabinet of Dr. Caligari, The</a>, 1920</li>
                     <li class="liref"><a href="/cinefiles/FilmDetail?filmId=pfafilm4925">Da hong deng long gao gao gua (Raise the red lantern)</a>, 1991</li>
@@ -518,7 +518,7 @@
                 <li class="lisub">Dada/Surrealist films</li>
                 <li>
                   <ul>
-                    <li class="liref"><a href="/cinefiles/FilmDetail?filmId=pfafilm231">âge d'or</a>, 190</li>
+                    <li class="liref"><a href="/cinefiles/FilmDetail?filmId=pfafilm231">Ã¢ge d'or</a>, 190</li>
                      <li class="liref"><a href="/cinefiles/FilmDetail?filmId=pfafilm1204">Anemic cinema</a>, 1926</li>
                   </ul>
                 </li>
@@ -658,7 +658,7 @@
                 <li class="lisub">Latin America/Caribbean</li>
                 <li>
                   <ul>
-                    <li class="liref"><a href="/cinefiles/FilmDetail?filmId=pfafilm29427">Como era gostosoo meu francês (How tasty was my little frecman<</a>, 1971</li>
+                    <li class="liref"><a href="/cinefiles/FilmDetail?filmId=pfafilm29427">Como era gostosoo meu francÃªs (How tasty was my little frecman<</a>, 1971</li>
                     <li class="lired">Queimada! (Burn!), 2002</li>
                     <li class="lired">Ultima cena, La (The last supper), 1976</li>
                   </ul>
@@ -774,7 +774,7 @@
                     <li class="lired">11th hour, The, 2007</li>
                     <li class="lired">Cadillac desert, 1997</li>
                     <li class="lired">Darwin's nightmare, 2004</li>
-                    <li class="liref"><a href="/cinefiles/FilmDetail?filmId=pfafilm27516">Kaze no tani no Nausicaä</a>, 1984</li>
+                    <li class="liref"><a href="/cinefiles/FilmDetail?filmId=pfafilm27516">Kaze no tani no NausicaÃ¤</a>, 1984</li>
                   </ul>
                 </li>
 
@@ -821,7 +821,7 @@
                 <li class="lisub">Border issues</li>
                 <li>
                   <ul>
-                    <li class="liref"><a href="/cinefiles/FilmDetail?filmId=pfafilm30803">From the other side (De l'autre côté)</a>, 2002</li>
+                    <li class="liref"><a href="/cinefiles/FilmDetail?filmId=pfafilm30803">From the other side (De l'autre cÃ´tÃ©)</a>, 2002</li>
                     <li class="liref"><a href="/cinefiles/FilmDetail?filmId=pfafilm30394">Lone Star</a>, 1996</li>
                     <li class="liref"><a href="/cinefiles/FilmDetail?filmId=pfafilm30602">Senorita extraviada</a>, 2001</li>
                     <li class="liref"><a href="/cinefiles/FilmDetail?filmId=pfafilm21439">Touch of evil</a>, 1958</li>
@@ -928,7 +928,7 @@
                     <li class="liref"><a href="/cinefiles/FilmDetail?filmId=pfafilm30705">Control room</a>, 2004</li>
                     <li class="liref"><a href="/cinefiles/FilmDetail?filmId=pfafilm9129">His girl Friday</a>, 1940</li>
                     <li class="lired">Stranger with a camera, 2000</li>
-                    <li class="liref"><a href="/cinefiles/FilmDetail?filmId=pfafilm22329">Veillées d'armes</a>, 1994</li>
+                    <li class="liref"><a href="/cinefiles/FilmDetail?filmId=pfafilm22329">VeillÃ©es d'armes</a>, 1994</li>
                     <li class="liref"><a href="/cinefiles/FilmDetail?filmId=pfafilm30703">Wag the dog</a>, 1997</li>
                     <li class="liref"><a href="/cinefiles/FilmDetail?filmId=pfafilm22919">War room, The</a>, 1993</li>
                   </ul>
@@ -1074,7 +1074,7 @@
                     <li class="liref"><a href="/cinefiles/FilmDetail?filmId=pfafilm30705">Control room</a>, 2004</li>
                     <li class="liref"><a href="/cinefiles/FilmDetail?filmId=pfafilm15304">On company business</a>, 1980</li>
                     <li class="lired">Revolution will not be televised, Thes, 2003</li>
-                    <li class="liref"><a href="/cinefiles/FilmDetail?filmId=pfafilm22329">Veillées d'armes</a>, 1994</li>
+                    <li class="liref"><a href="/cinefiles/FilmDetail?filmId=pfafilm22329">VeillÃ©es d'armes</a>, 1994</li>
                     <li class="liref"><a href="/cinefiles/FilmDetail?filmId=pfafilm30703">Wag the dog</a>, 1997</li>
                   </ul>
                 </li>
@@ -1198,7 +1198,7 @@
                     <li class="lired">Life and debt, 2001</li>
                     <li class="liref"><a href="/cinefiles/FilmDetail?filmId=pfafilm11940">Life and times of Rosie the Riveter, The</a>, 1980</li>
                     <li class="liref"><a href="/cinefiles/FilmDetail?filmId=pfafilm12616">Mothers of the Plaza de Mayo, The (Madres de la Plaza de Mayo)</a>, 1986</li>
-                    <li class="liref"><a href="/cinefiles/FilmDetail?filmId=pfafilm30963">Moolaadé</a>, 2004</li>
+                    <li class="liref"><a href="/cinefiles/FilmDetail?filmId=pfafilm30963">MoolaadÃ©</a>, 2004</li>
                     <li class="liref"><a href="/cinefiles/FilmDetail?filmId=pfafilm18417">Salaam Bombay!</a>, 1988</li>
                     <li class="liref"><a href="/cinefiles/FilmDetail?filmId=pfafilm30751">Sisters in law</a>, 2005</li>
                   </ul>
