--- a/WebContent/include/browsesubjKlist.jspf
+++ b/WebContent/include/browsesubjKlist.jspf
@@ -205,8 +205,8 @@
           Karunaratna, Kumara
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Karyo,_Tchéky">
-          Karyo, Tchéky
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Karyo,_TchÃ©ky">
+          Karyo, TchÃ©ky
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Kasdan,_Lawrence">
@@ -285,12 +285,12 @@
           Kaul, Mani
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Kaurismäki,_Aki">
-          Kaurismäki, Aki
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=KaurismÃ¤ki,_Aki">
+          KaurismÃ¤ki, Aki
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Kaurismäki,_Mika">
-          Kaurismäki, Mika
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=KaurismÃ¤ki,_Mika">
+          KaurismÃ¤ki, Mika
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Kavner,_Julie">
@@ -301,8 +301,8 @@
           Kawabata, Yasunari
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Kawaguchi,_Matsutarô">
-          Kawaguchi, Matsutarô
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Kawaguchi,_MatsutarÃ´">
+          Kawaguchi, MatsutarÃ´
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Kawai,_Shinya">
@@ -409,8 +409,8 @@
           Keats, Ele
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Kébadian,_Jacques">
-          Kébadian, Jacques
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=KÃ©badian,_Jacques">
+          KÃ©badian, Jacques
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Keillor,_Garrison">
@@ -597,8 +597,8 @@
           Keystone Film Company
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Kézdi-Kovács,_Zsolt">
-          Kézdi-Kovács, Zsolt
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=KÃ©zdi-KovÃ¡cs,_Zsolt">
+          KÃ©zdi-KovÃ¡cs, Zsolt
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Kezich,_Tullio._Federico_Fellini_:_his_life_and_work_-_reviews">
@@ -617,8 +617,8 @@
           Khan, Amzad
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Khanjian,_Arsinée">
-          Khanjian, Arsinée
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Khanjian,_ArsinÃ©e">
+          Khanjian, ArsinÃ©e
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Kharbanda,_Kulbhushan">
@@ -673,8 +673,8 @@
           Kier, Udo
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Kiéslowski,_Krzysztof">
-          Kiéslowski, Krzysztof
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=KiÃ©slowski,_Krzysztof">
+          KiÃ©slowski, Krzysztof
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Kiisk,_Kaljo">
@@ -821,8 +821,8 @@
           Kitt, Eartha
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Klapisch,_Cédric">
-          Klapisch, Cédric
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Klapisch,_CÃ©dric">
+          Klapisch, CÃ©dric
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Klein,_Chris">
@@ -969,8 +969,8 @@
           Koerfer, Thomas
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Köhler,_Juliane">
-          Köhler, Juliane
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=KÃ¶hler,_Juliane">
+          KÃ¶hler, Juliane
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Kolker,_Robert_Phillip.__Bernardo_Bertolucci_--_Reviews">
@@ -1001,8 +1001,8 @@
           Kong, William
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Königstein,_Horst">
-          Königstein, Horst
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=KÃ¶nigstein,_Horst">
+          KÃ¶nigstein, Horst
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Kono,_Toraichi.">
@@ -1049,8 +1049,8 @@
           Korine, Harmony
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Kormákur,_Baltasar">
-          Kormákur, Baltasar
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=KormÃ¡kur,_Baltasar">
+          KormÃ¡kur, Baltasar
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Korty,_John">
@@ -1137,16 +1137,16 @@
           Kracht, Dietmar
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Krafftówna,_Barbara">
-          Krafftówna, Barbara
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=KrafftÃ³wna,_Barbara">
+          KrafftÃ³wna, Barbara
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Kraft,_Jeff,_1969-_._Footsteps_in_the_fog">
           Kraft, Jeff, 1969- . Footsteps in the fog
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Kräly,_Hans">
-          Kräly, Hans
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=KrÃ¤ly,_Hans">
+          KrÃ¤ly, Hans
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Kramer,_Edith">
@@ -1253,8 +1253,8 @@
           Kroschwald, Udo
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Krüger,_Hardy">
-          Krüger, Hardy
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=KrÃ¼ger,_Hardy">
+          KrÃ¼ger, Hardy
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Kruger,_Otto">
@@ -1377,8 +1377,8 @@
           Kurtzman, Robert
           </a></td></tr>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Kurumatani,_Chøkitsu">
-          Kurumatani, Chøkitsu
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Kurumatani,_ChÃ¸kitsu">
+          Kurumatani, ChÃ¸kitsu
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Kurys,_Diane">
