--- a/WebContent/include/browsesubjZlist.jspf
+++ b/WebContent/include/browsesubjZlist.jspf
@@ -1,8 +1,8 @@
      <div id='browselist' name='browselist'>
         <table id='browseTable' name='browseTable'>
           <tr><td>
-          <a href="/cinefiles/DocSearch?querytype=4&docsubj=Zábka,_Michal">
-          Zábka, Michal
+          <a href="/cinefiles/DocSearch?querytype=4&docsubj=ZÃ¡bka,_Michal">
+          ZÃ¡bka, Michal
           </a></td></tr>
           <tr><td>
           <a href="/cinefiles/DocSearch?querytype=4&docsubj=Zaccaro,_Maurizio">
